Script: versão final

--- a/TCP1/html/CangostaDaEscoura.html
+++ b/TCP1/html/CangostaDaEscoura.html
@@ -3,117 +3,34 @@
 <h1>Cangosta da Escoura</h1>
 <p>Número: 56</p>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-56-CangostaDaEscoura-norte.jpg'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-56-CangostaDaEscoura-norte.jpg' style='width:50%; height:auto; '/>
 <p>Legenda: Cangosta da Escoura - vista norte.</p>
 </div>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-56-CangostaDaEscoura-sul.jpg'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-56-CangostaDaEscoura-sul.jpg' style='width:50%; height:auto; '/>
 <p>Legenda: Cangosta da Escoura - vista sul.</p>
 </div>
 <h2>Descrição:</h2>
 <div>
-<p>Pertence à casa n.º 9 da Rua das Palhotas, para onde tem frontaria e serventia principais.</p>
-</div>
 <div>
-<p>Porta de serventia do quintal da casa n.° 52 da Rua dos Chãos de Cima.</p>
-</div>
+<p>Pequena artéria, de carácter rural, estabelecia ligação entre a igreja de S. Vicente e a 
+            igreja e convento do Carmo.</p>
 <div>
-<p>Quintal da casa n.º 51 da Rua dos Chãos de Cima.</p>
-</div>
+<p>Aberta em data que desconhecemos, não está totalmente representada no Mappa; nele só vemos a metade Este, embora de ambos os lados.</p>
 <div>
-<p>Porta de serventia da casa n.º 50 da Rua dos Chãos de Cima.</p>
-</div>
+<p>Sem casas dignas de relevo, apresenta do lado Sul uma série de portas que davam acesso aos quintais das habitações da 
+            rua dos Chãos de Cima. Aliás todo este lado era pertença das casas daquela rua, pois que até os 4 edifícios (n.ºs 8, 24, 27 e 28) nele 
+            representados pertenciam, respectivamente, aos seus prazos n.ºs 46, 27, 23 e 22.</p>
 <div>
-<p>Porta de serventia do quintal da casa n.º 49 da Rua dos Chãos de Cima.</p>
-</div>
+<p>Do lado Norte, há apenas 5 pequenas casinhas totalmente ligadas aos campos que as envolviam: assim a casa do prazo n.ºs 30 e 31 andam emprazadas 
+            juntamente com o campo n.º 29, e as casas 32, 33 e 35 estavam também todas subemprazadas com os quintais n.º 34 e 36 num só título.</p>
 <div>
-<p>Porta de serventia do quintal da casa n.º 48 da Rua dos Chãos de Cima.</p>
-</div>
+<p>Todas estas casas são foreiras ao cabido.</p>
 <div>
-<p>Porta de serventia do quintal da casa n.º 47 da Rua dos Chãos de Cima.</p>
+<p>Desde 14 de Setembro de 1885 que passou a chamar-se rua Gabriel Pereira de Castro. Apesar das placas toponímicas existentes 
+            no local competente terem gravado este nome é apenas conhecida como rua da Escoura.</p>
 </div>
-<div>
-<p>Pertença do n.º 46 da Rua dos Chãos de Cima.</p>
-</div>
-<div>
-<p>Quintal da casa n.º 45 da Rua dos Chãos de Cima.</p>
-</div>
-<div>
-<p>Quintal da casa n.º 44 da Rua dos Chãos de Cima.</p>
-</div>
-<div>
-<p>Quintal da casa n.º 43 da Rua dos Chãos de Cima.</p>
-</div>
-<div>
-<p>Quintal da casa n.º 42 da Rua dos Chãos de Cima.</p>
-</div>
-<div>
-<p>Quintal da casa n.º 41 da Rua dos Chãos de Cima.</p>
-</div>
-<div>
-<p>Quintal da casa n.º 40 da Rua dos Chãos de Cima.</p>
-</div>
-<div>
-<p>Porta de serventia do quintal da casa n.º 39 da Rua dos Chãos de Cima.</p>
-</div>
-<div>
-<p>Porta de serventia do quintal da casa n.º 38 da Rua dos Chãos de Cima.</p>
-</div>
-<div>
-<p>Porta de serventia do quintal da casa n.º 37 da Rua dos Chãos de Cima.</p>
-</div>
-<div>
-<p>Porta de serventia do quintal da casa n.º 36 da Rua dos Chãos de Cima.</p>
-</div>
-<div>
-<p>Porta de serventia do quintal da casa n.º 35 da Rua dos Chãos de Cima.</p>
-</div>
-<div>
-<p>Quintal da casa n.º 34 da Rua dos Chãos de Cima.</p>
-</div>
-<div>
-<p>Porta de serventia dos quintais das casas n.ºs 32 e 33 da Rua dos Chãos de Cima.</p>
-</div>
-<div>
-<p>Porta de serventia do quintal da casa n.º 31 da Rua dos Chãos de Cima.</p>
-</div>
-<div>
-<p>Caminho de serventia das casas n.ºs 28, 29 e 30 da Rua dos Chãos de Cima.</p>
-</div>
-<div>
-<p>Pertence ao n.º 27 da Rua dos Chãos de Cima.</p>
-</div>
-<div>
-<p>Porta de serventia da casa n.º 26 da Rua dos Chãos de Cima.</p>
-</div>
-<div>
-<p>Quintal da casa n.° 25 da Rua dos Chãos de Cima.</p>
-</div>
-<div>
-<p>Pertence ao n.º 23 da Rua dos Chãos de Cima</p>
-</div>
-<div>
-<p>Pertence ao n.º 22 da Rua dos Chãos de Cima</p>
-</div>
-<div>
-<p>Denominado “Campo ou Cortelho da Escoura”. Foi pertença do prazo do casal de Infias antes de 1736.</p>
-</div>
-<div>
-<p>Pertence ao prazo do Campo ou Cortelho da Escoura.</p>
-</div>
-<div>
-<p>Pertence ao prazo do Campo ou Cortelho da Escoura.</p>
-</div>
-<div>
-<p>Pagam foro ao enfiteuta do prazo da 2.ª metade do casal do Lagarto. Os n.º 34 e 36 correspondem a quintais.</p>
-</div>
-<div>
-<p>Quintal da casa n.° 38.</p>
-</div>
-<div>
-<p>Pertence à casa n.° 10 da Rua das Palhotas, para onde tem a frontaria principal.</p>
-</div>
-<h3>Casas:</h3>
+<h2>Casas:</h2>
 <div>
 <p>Número: 1</p>
 <p>Descrição: 
@@ -423,5 +340,8 @@
 
 
 </div>
+<h2>Atualmente:</h2>
+<img src='../MapaRuas-materialBase/atual/56-CangostadaEscoura-Vista2.JPG' style='width:50%; height:auto; '/>
+<img src='../MapaRuas-materialBase/atual/56-CangostadaEscoura-Vista1.JPG' style='width:50%; height:auto; '/>
 </body>
 </html>
