--- a/TCP1/html/CangostaDasCruzes.html
+++ b/TCP1/html/CangostaDasCruzes.html
@@ -3,53 +3,33 @@
 <h1>Cangosta das Cruzes</h1>
 <p>Número: 34</p>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-34-QuingostaDasCruzes-primeira.jpg'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-34-QuingostaDasCruzes-primeira.jpg' style='width:50%; height:auto; '/>
 <p>Legenda: Quingosta das Cruzes - Norte.</p>
 </div>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-34-QuingostaDasCruzes-segunda.jpg'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-34-QuingostaDasCruzes-segunda.jpg' style='width:50%; height:auto; '/>
 <p>Legenda: Quingosta das Cruzes - Sul.</p>
 </div>
 <h2>Descrição:</h2>
 <div>
-<p>
-                        Porta de serventia do nº 20 da Rua do Anjo.
-                    </p>
-</div>
 <div>
 <p>
-                        Pertence ao nº 17 da Rua do Anjo.
-                    </p>
-</div>
+            De características bem rurais ligava o Campo de S. Tiago com a fachada latera Poente do hospital de S. Marcos.
+        </p>
 <div>
 <p>
-                        Porta de serventia do nº 15 da Rua do Anjo.
-                    </p>
-</div>
+            Não se conhecendo dados sobre a sua história, podemos apenas dizer que em 1750 estava só parcialmente construída, com casas simples, de 2 pisos, muitas delas com janelas de tipo bracarense. Um correr de habitações do tipo de porta com janela ao lado, no piso térreo (prazos 7 a 13), bem como a casa grande, mas de características rurais, virada ao campo de S. Tiago, são as peças de arquitectura desta rua, ainda hoje, bem secundária e, também, com muitos poucos edifícios a ladeá-la.
+        </p>
 <div>
 <p>
-                        Pertence ao nº 14 da Rua do Anjo.
-                    </p>
-</div>
+            Das 17 casas ao lado Norte e 9 do lado Sul, eram prazos do Cabido 5 e 8 respectivamente.
+        </p>
 <div>
 <p>
-                        Pertence ao nº 13 da Rua do Anjo.
-                    </p>
-<p>
-                        Confronta, do norte, com casa foreira ao Hospital de S. Marcos.
-                    </p>
+            Não sabemos a razão porque esta Cangosta foi conhecida pelo nomes das «Cruzes», nem sabemos qual a data em que passou a ser conhecida pelo nome actual, «Falcões», embora em 1857 já assim apareça designada. Essa designação deverá ser mais antiga e provém, sem dúvida, do nome da família Falcões Cota cujo palácio existente no Campo de S. Tiago tinha a envolvê-lo terrenos desta rua, os que estão a Oeste do prazo nº 13.
+        </p>
 </div>
-<div>
-<p>
-                        Leira denominada Castelo Rodrigo, pertencente ao quintal de uma casa dízima a Deus. 
-                    </p>
-</div>
-<div>
-<p>
-                        Os subenfiteutas pagam foro ao nº 1 do Campo de Santiago.
-                    </p>
-</div>
-<h3>Casas:</h3>
+<h2>Casas:</h2>
 <div>
 <p>Número: 1</p>
 <p>Descrição: 
@@ -131,5 +111,8 @@
 
 
 </div>
+<h2>Atualmente:</h2>
+<img src='../MapaRuas-materialBase/atual/34-CangostaDasCruzes-Vista1.JPG' style='width:50%; height:auto; '/>
+<img src='../MapaRuas-materialBase/atual/34-CangostaDasCruzes-Vista2.JPG' style='width:50%; height:auto; '/>
 </body>
 </html>
