--- a/TCP1/html/CangostaDeSSebastiao.html
+++ b/TCP1/html/CangostaDeSSebastiao.html
@@ -3,62 +3,44 @@
 <h1>Cangosta De S. Sebastião</h1>
 <p>Número: 30</p>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-30-CangostaDeSSbebastiao-Norte.png'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-30-CangostaDeSSbebastiao-Norte.png' style='width:50%; height:auto; '/>
 <p>Legenda: Cangosta De S. Sebastião - norte</p>
 </div>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-30-CangostaDeSSbebastiao-Sul.png'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-30-CangostaDeSSbebastiao-Sul.png' style='width:50%; height:auto; '/>
 <p>Legenda: Cangosta De S. Sebastião - sul</p>
 </div>
 <h2>Descrição:</h2>
 <div>
-<p>
-                        Pertencem ao n.º 38 da Rua do Arrabalde da Cruz da Pedra, para onde tem a frontaria e serventia pricnipais.
-                    </p>
-</div>
 <div>
 <p>
-                        Pagam foro ao n.º 20 da Rua do Arrabalde da Cruz de Pedra. Os n.º4 a 8 foram integrados na
-                        escritura do prazo n.º 3.
-                    </p>
-</div>
+            Longa rua extra-muros que descia toda a colina da Cividade, desde o Terreiro de S. Sebastião (onde estava a capela de S.Sebastião das Carvalheiras) até à do Beco.
+        </p>
 <div>
 <p>
-                        Pertence ao n.º 36 da Rua do Arrabalde da Cruz da Pedra, a qual, está integrada no prazo da casa n.º 20, da mesma rua.
-                    </p>
-</div>
+            Decalcando talvez o cardo da cidade romana, e embora não conste no Tombo do Cabido ( datável de 1369-1380), esta rua já existia na Idade Média
+            pois era uma das duas vias de ligação da cidade intra-muros com a igreja paroquial de Maximinos.
+        </p>
 <div>
 <p>
-                        Pagam foro ao n.º 20 da Rua do Arrabalde da Cruz de Pedra.
-                    </p>
-</div>
-<div>
-<p> 
-                        Portal de serventia da casa n.º 33 do Arrabalde da Cruz de Pedra.
-                    </p>
-</div>
+            Recebendo o nome de S. Sebastião por no seu topo estar a capela do santo da mesma invocação, de data de fundação desconhecida, esta rua só nos finais da
+            década de setenta do nosso século perdeu o ar rual que ostentava em 1750.
+        </p>
 <div>
 <p>
-                        Casas que pagam foro ao n.º 20 da Rua do Arrabalde da Cruz da Pedra.
-                    </p>
-</div>
+            No Mappa, a rua era cosntítuida por casas de pedra, na sua grande maioria de um piso, muito simples, sendo 36% do tipo de porta/janela. Tinha
+            vários portões que davam acesso directo a campos de cultivo, bem vísiveis atrás de muros que faceavam a rua , ou atrás das habitações.
+        </p>
 <div>
 <p>
-                        Casa e portal de serventia do n.º 28 da Rua do Arrabalde da Cruz da Pedra.
-                    </p>
-</div>
+            Das 25 casas do lado Norte e 24 do Sul, eram prazos do Cabido 20 casas do lado Norte.
+        </p>
 <div>
 <p>
-                        Corresponde a três casas que pagam foro ao n.º 20 da Rua da Cruz da Pedra.
-                    </p>
+            Mantém hoje o topónimo de S. Sebastião embora também seja conehcida por rua dos Marchantes.
+        </p>
 </div>
-<div>
-<p>
-                        Portal de serventia do campo da casa n.º 20 da Rua do Arrabalde de Cruz da Pedra. Confronta, do nascente, com casa 
-                        pertencente à propriedade, denominada, «O Bispo».
-                    </p>
-</div>
-<h3>Casas:</h3>
+<h2>Casas:</h2>
 <div>
 <p>Número: 1 e 2</p>
 <p>Enfiteuta: None</p>
@@ -178,5 +160,8 @@
 
 
 </div>
+<h2>Atualmente:</h2>
+<img src='../MapaRuas-materialBase/atual/30-CangostaDeS.Sebasti∆o-Vista2.JPG' style='width:50%; height:auto; '/>
+<img src='../MapaRuas-materialBase/atual/30-CangostaDeS.Sebasti∆o-Vista1.JPG' style='width:50%; height:auto; '/>
 </body>
 </html>
