--- a/TCP1/html/DoAlcaide.html
+++ b/TCP1/html/DoAlcaide.html
@@ -3,59 +3,40 @@
 <h1>Rua do Alcaide</h1>
 <p>Número: 31</p>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-31-DoAlcaide-Sul.png'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-31-DoAlcaide-Sul.png' style='width:50%; height:auto; '/>
 <p>Legenda: Rua do Alcaide - Sul.</p>
 </div>
 <h2>Descrição:</h2>
 <div>
-<p>
-                        Pertencem ao nº38 da Rua do Arrabalde da Cruz da Pedra, para onde tem 
-                        frontaria e serventia principais.
-                    </p>
-</div>
 <div>
 <p>
-                        Pagam foro ao nº20 da Rua do Arrabalde da Cruz da Pedra. Os nº 4 a 8
-                        foram integrados na escritura do prazo nº3.
-                    </p>
-</div>
+            Construída em volta da parte sul da muralha medieval, ligava o campo de S.Tiago
+            com o Terreiro de S.Sebastião.
+        </p>
 <div>
 <p>
-                        Pertence ao nº36 da Rua do Arrabalde da Cruz da Pedra, a qual está integrada 
-                        no prazo da casa nº20, da mesma rua.
-                    </p>
-</div>
+            Começada a construir talvez no tempo de D.Diogo de Sousa, tinha,
+            em 1750, boas casas de granito, com uma grande fachada, de 2 pisos, molduras de pedras 
+            nas portas e janelas do 1º piso e filetes de pedra sobre as janelas bracarenses do andar principal.
+            Curiosamente não se vêem casas com brasões, embora tivessem, com toda a certeza, vivido aqui membros
+            de famílias nobres. A sua própria designação, do Alcaide, aponta para isso.
+        </p>
 <div>
 <p>
-                        Paga foro ao nº20 da Rua do Arrabalde da Cruz da Pedra.
-                    </p>
-</div>
+            Até hoje pouco se alterou, tendo só desaparecido as casas dos prazos 19 a 21. O seu nome também se 
+            manteve.
+        </p>
 <div>
 <p>
-                        Portal de serventia da casa nº33 do Arrabalde da Cruz da Pedra.
-                    </p>
-</div>
+            O lado Norte não está desenhado porque as habitações que encostavam à muralha deveriam ser prazos da
+            Câmara.
+        </p>
 <div>
 <p>
-                        Casas que pagam foro ao nº20 da Rua do Arrabalde da Cruz da Pedra
-                    </p>
+            As 18 casas que apresentam são todas prazos do Cabido.
+        </p>
 </div>
-<div>
-<p>
-                        Casa e portal de serventia do nº28 da Rua do Arrabalde da Cruz da Pedra.
-                    </p>
-</div>
-<div>
-<p>
-                        Corresponde a três casas que pagam foro ao nº 20 da Rua da Cruz da Pedra.
-                    </p>
-</div>
-<div>
-<p>
-                        Portal de serventia do campo da casa nº 20 da Rua do Arrabalde da Cruz da Pedra
-                        Confronta, do nascente, com a casa pertencente à propriedade, denominada, "O Bispo".</p>
-</div>
-<h3>Casas:</h3>
+<h2>Casas:</h2>
 <div>
 <p>Número: 1 e 2</p>
 <p>Enfiteuta: -</p>
@@ -176,5 +157,8 @@
 
 
 </div>
+<h2>Atualmente:</h2>
+<img src='../MapaRuas-materialBase/atual/31-RuaDoAlcaide-Vista2.JPG' style='width:50%; height:auto; '/>
+<img src='../MapaRuas-materialBase/atual/31-RuaDoAlcaide-Vista1.JPG' style='width:50%; height:auto; '/>
 </body>
 </html>
