--- a/TCP1/html/EstradaDeReal.html
+++ b/TCP1/html/EstradaDeReal.html
@@ -3,25 +3,23 @@
 <h1>Estrada de Real</h1>
 <p>Número: 57</p>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-57-EstradaDeReal-norte.jpg'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-57-EstradaDeReal-norte.jpg' style='width:50%; height:auto; '/>
 <p>Legenda: Estrada de Real - norte.</p>
 </div>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-57-EstradaDeReal-sul.jpg'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-57-EstradaDeReal-sul.jpg' style='width:50%; height:auto; '/>
 <p>Legenda: Estrada de Real - sul.</p>
 </div>
 <h2>Descrição:</h2>
 <div>
-<p>Campo do prazo da  Quinta da Cónega(freguesia de S.Pedro de Maximinos).</p>
-</div>
 <div>
-<p>Pertencem à Quinta da Cónega, a cujo enfiteuta se paga foro. O nº17 confronta, do poente, com o caminho que vai para a  Quinta do Real.</p>
-<p>O nº18, confronta, do poente, com o caminho que vai junto da Curutelapara a cangosta do Pópulo.</p>
-</div>
+<p>Longa via, talvez decalcando a velha estrada romana, saía de Braga, por terrenos que pensamos ser coincidentes com os da actual rua Andrade Corvo, em direção á freguesia suburbana de S.Jerónimo de Real.</p>
 <div>
-<p>Corresponde a um campo do prazo da  Quinta da Cónega. Confronta, do nascente, com a casa nº22 da Rua da Cónega.</p>
+<p>Em 1750, todas as suas casas (3 do lado Norte e 15 do Sul) eram foreiras ao Cabido e incluiam-se no prazo da Quinta da Cónega.</p>
+<div>
+<p>Eram, naturalmente, construções muito pequenas, muito simples, de um só piso (excepto 2), e do tipo de porta ladeada por janela. Estes edifícios inscreviam-se apenas no extremo Oeste da rua: o restante espaço estava ocupado apenas com campos de cultivo.</p>
 </div>
-<h3>Casas:</h3>
+<h2>Casas:</h2>
 <div>
 <p>Número: 1</p>
 <p>Descrição: 
@@ -51,5 +49,8 @@
 
 
 </div>
+<h2>Atualmente:</h2>
+<img src='../MapaRuas-materialBase/atual/57-EstradadeReal-Vista1.JPG' style='width:50%; height:auto; '/>
+<img src='../MapaRuas-materialBase/atual/57-EstradadeReal-Vista2.JPG' style='width:50%; height:auto; '/>
 </body>
 </html>
