--- a/TCP1/html/RuaDaFonteDaCarcova.RuaDoCarvalhal.html
+++ b/TCP1/html/RuaDaFonteDaCarcova.RuaDoCarvalhal.html
@@ -3,97 +3,59 @@
 <h1>Rua da Fonte da Carcova</h1>
 <p>Número: 44</p>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-44-RuaDaFonteDaCarcova.RuaDoCarvalhal-Norte.jpg'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-44-RuaDaFonteDaCarcova.RuaDoCarvalhal-Norte.jpg' style='width:50%; height:auto; '/>
 <p>Legenda: Rua da Fonte da Carcova- Norte.</p>
 </div>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-44-RuaDaFonteDaCarcova.RuaDoCarvalhal-Sul.jpg'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-44-RuaDaFonteDaCarcova.RuaDoCarvalhal-Sul.jpg' style='width:50%; height:auto; '/>
 <p>Legenda: Rua da Fonte da Carcova- Sul</p>
 </div>
 <h2>Descrição:</h2>
 <div>
-<p>Confronta, do poente, com cada foreira à capela de Sta. Marta.</p>
-</div>
 <div>
-<p>A casa n.º2 esteve unida ao n.º1 entre os anos de 1608 e 1690.</p>
-</div>
+<p>A sua fundação, remontará talvez aos inícios do séc. XVI. Marginando a muralha
+        medieval, fazia ligação entre os dois novos e amplos campos então abertos, de Santa Ana
+        e da Vinha.</p>
 <div>
-<p>A casa n.º2 esteve unida ao n.º1 entre os anos de 1608 e 1690.</p>
-</div>
+<p>No seu extremo Este existia, desde a Idade Média, uma fonte, conhecida pela Fonte da
+        Cárcova ou Cárcoda.</p>
 <div>
-<p>A casa n.º2 esteve unida ao n.º1 entre os anos de 1608 e 1690.</p>
-</div>
+<p>Embora a sua ocupação se tenha iniciado de imediato (p.ex. o prazo do Cabido
+        mais antigo nesta rua data de 1531), ee incidiu apenas sobre o lado Norte, porque no mapa
+        de Braunio não se vê ainda nenhuma construção encostada à muralha.</p>
 <div>
-<p>Os n.º5 e 6 encontram-se unidos desde o ano de 1541.</p>
-</div>
+<p>Em 1750 mostrava bem a razão por que foi denominada, em data que desconehcemos,
+        de rua dos Mercadores: o rés-do-chão era totalmente ocupado com largas portas de madeira
+        que durante o dia se abriam para afzer o comércio.</p>
 <div>
-<p>Os n.º5 e 6 encontram-se unidos desde o ano de 1541.</p>
-</div>
+<p>De resto é predominantemente ocupada com prédios de 3 andares, e janelas bracarenses, e poucas varandas
+        e gelosias. Diferentes são apenas os prazos 5, 6 e sobretudo o 7, onde se vê uma construção setecentista
+        já de certa dimensão, com duas varandas, «molduras» de pedra nas aberturas e, sobretudo, um dos vãos
+        extremos da casa tem mais um piso, reminiscência talvez de opções estilísticas mais arcaicas.</p>
 <div>
-<p>Esteve unida ao n.º9 entre os anos de 1531 e 1625.</p>
-</div>
+<p>Das 27 casas aqui desenhadas e que correspondem apenas ao lado Norte da rua, 10 eram prazos do
+        Cabido.</p>
 <div>
-<p>O enfiteuta foi herdeiro de Brígida Marques,
-                    casada com Manuel da Costa, marceneiro.</p>
-<p>Esteve unida ao n.º8 entre os anos de 1531 e 1617.</p>
-<p>Confronta, do nascente, com o Eirado.</p>
-</div>
+<p>Desde 1865 que passou a ser oficialmente denominada de rua dos Capelistas.</p>
 <div>
-<p>Pertence à casa n.º24 da Rua dos Chãos de Baixo, para onde tem
-                        a frontaria e serventia principais.</p>
-</div>
+<p>Aberta em data desconhecida. No Tombo do Cabido (cª 1369-80), já figura este
+        topónimo.</p>
 <div>
-<p>Pedro Sepúlvedra, casado com 
-                        Ângela das Neves, paga 72 reis ao n.º18.</p>
-</div>
+<p>Estabelecida a ligação entre o largo dos Penedos e os espaços onde bastante
+        mais tarde, nos meados do séc. XVII, se construiu a igreja e convento do Carmo.</p>
 <div>
-<p>José Francisco, lavrador da
-                            Freguesia de Sta. Lucrécia, casado com Maria Lopes,
-                            paga 72 reis ao n.º18.</p>
-</div>
+<p>Em 1750, era uma rua que alternava, um pouco a esmo, casas de 1, 2 ou 3 pisos,
+        de bom ou mau desenho, de famílias pobres ou ricas, numa indefinição absoluta: vêem-se aqui
+        casas grandes, com bom trabalho de pedra e casas do tipo de porta com janela ao lado, no piso 
+        térreo. Só com uma leitura dos prazos se poderá definir o tipo de vivência que nela se fazia,
+        o que nos parece poder dar resultados muitíssimo interessantes.</p>
 <div>
-<p>João da Costa, casado com 
-                            Teresa Ferreira, paga 117 reis ao n.º18.</p>
-</div>
+<p>Das 27 casas aqui desenhadas e que correspondem apenas ao lado Sul da rua, 18 eram prazos 
+        do Cabido.</p>
 <div>
-<p>Francisco Dantas, escrivão dos direitos reais,
-                            casado com Grácia Maria de São Boaventura, paga 504 reis ao n.º18.</p>
+<p>Mantém o nome de rua do Carvalhal.</p>
 </div>
-<div>
-<p>O Padre Manuel Álvares paga 1184 reis
-                            e 2 galinhas ao n.º18.</p>
-</div>
-<div>
-<p>Crispiana Soares, solteira,
-                            paga 592 reis e 1 galinha ao n.º18.</p>
-</div>
-<div>
-<p>Manuel Falcão Cotta, fidalgo da casa de sua
-                        Magestade, paga 1185 reis e 2 galinhas ao n.º10; e, por um pedaço de quintal (que se
-                        desmembrou do n.º8 da Rua dos Chãos de Baixo), paga 1 alqueire de pão
-                        meado e meia galinha.</p>
-</div>
-<div>
-<p>Francisco de Meira Carrilho, cónegro
-                            de Braga, paga 820 reis e 1 galinha ao n.º18.</p>
-</div>
-<div>
-<p>Pertencem ao enfiteuta da casa n.º18.</p>
-</div>
-<div>
-<p>Crispim da Silva,surrador, paga 264 reis ao n.º18.</p>
-</div>
-<div>
-<p>Denominado «Casal de Portas». Foi subemprazado, no ano de 1736, a
-                        Ursula Josefa de Araújo, viúva do Lic.
-                        Manuel da Costa Maia, pelo foro 2.513 reis, e 
-                        750 reis e 2 galinhas. A este prazo pertencem os n.º15 e 17, bem como uma devesa no
-                        monte de Castro, junto a S. Lourenço, e os foros das casas
-                        que lhe andam subenfiteuticadas nesta Rua do Carvalhal, desde os n.º 1 a
-                        14 e 16 e, na Rua dos Chãos de Baixo, os n.º12 e 24.</p>
-<p>Confronta, do poente, com casas foreiras a António Barreto de Meneses.</p>
-</div>
-<h3>Casas:</h3>
+<h2>Casas:</h2>
 <div>
 <p>Número: 1</p>
 <p>Enfiteuta: Os herdeiros de Gregório João, tratantem casado com Maria Veloso</p>
@@ -190,5 +152,8 @@
 
 
 </div>
+<h2>Atualmente:</h2>
+<img src='../MapaRuas-materialBase/atual/44-RuadaFontedaCarcova-Vista2.JPG' style='width:50%; height:auto; '/>
+<img src='../MapaRuas-materialBase/atual/44-RuadaFontedaCarcova-Vista1.JPG' style='width:50%; height:auto; '/>
 </body>
 </html>
