--- a/TCP1/html/RuaDaVielinha.html
+++ b/TCP1/html/RuaDaVielinha.html
@@ -3,44 +3,43 @@
 <h1>Rua da Vielinha</h1>
 <p>Número: 24</p>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-24-RuaDaVielinha-nascente.jpg'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-24-RuaDaVielinha-nascente.jpg' style='width:50%; height:auto; '/>
 <p>Legenda: Rua da Vielinha - nascente.</p>
 </div>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-24-RuaDaVielinha-poente.jpg'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-24-RuaDaVielinha-poente.jpg' style='width:50%; height:auto; '/>
 <p>Legenda: Rua da Vielinha - poente.</p>
 </div>
 <h2>Descrição:</h2>
 <div>
-<p>Foi pertença do n.º 15 da Rua dos Sapateiros.</p>
-</div>
 <div>
-<p>Esta casa pertence à obra da Sé, a quem os herdeiros de Domingos de Araújo, caminheiro, e sua mulher,
-                            Catarina Gonçalves, lhe pagam de foro
-                        80 reis. Esteve integrada no prazo de uma casa da
-                        Rua dos Sapateiros.</p>
-</div>
+<p>Pequena e estreitíssima artéria que ligava a Rua de Maximinos com o
+            rexio da Praça.</p>
 <div>
-<p>Pertenceu ao n.º 15 da Rua dos Sapateiros.</p>
-</div>
+<p>Acompanhando a muralha que a faceia parcialmente, tem o prazo do Cabido mais antigo,
+            com data de 1515.</p>
 <div>
-<p>Encontra-se subemprazada aos herdeiros de Manuel
-                            Coelho de Araújo, tratante, e sua mulher, Maria da Costa. Faz parte do prazo da casa n.º
-                        12, da Rua dos Sapateiros, à qual paga de foro 2000
-                        reis.</p>
-<p>Corresponde a duas casas pequenas, situadas na «agiela» da
-                        Rua da Vielinha, da parte norte.</p>
-</div>
+<p>Com uma configuração esquisita, tinha em 1750 as casas do lado Poente,
+            que escontavam à muralha, de bastante boa qualidade, havendo em 4 delas varandas (de
+            madeira?) e gelosias. Com excepção de uma, todas eram sobradadas.</p>
 <div>
-<p>Corresponde ao n.º 13 da Rua dos Sapateiros.</p>
-<p>Confronta, do norte, com a agiela da Rua da Vielinha e, do
-                        sul, com parte da casa n.º 18 da Rua de Maximinos.</p>
-</div>
+<p>Quase insólita é a existência de uma capela, sobre as casas, talvez até sobre a
+            muralha, e sensivelmente a meio da rua, de que não conhecemos nenhuma referência
+            escrita.</p>
 <div>
-<p>Corresponde ao n.º 18 da Rua de Maximinos, para onde tem a
-                        frontaria e serventia principais.</p>
+<p>Do lado Nascente, as casas são de diferentes pisos, com bastante mau desenho de
+            fachada; as janelas eram tapadas por portadas de madeira. Há uma, porém, com um desenho
+            estranhíssimo e com uma linha de empena extremamente irregular.</p>
+<div>
+<p>A meio deste lado havia um pequeno beco que levava a uma casa.</p>
+<div>
+<p>Penso ser a designação de Vielinha bastante mais correcta que a actual de Violinha,
+            que, aliás, deve ter origem no topónimo antigo.</p>
+<div>
+<p>Das 8 casas do lado Nascente e 7 do Poente, eram prazos do Cabido 6 do
+            Nascente.</p>
 </div>
-<h3>Casas:</h3>
+<h2>Casas:</h2>
 <div>
 <p>Número: 1</p>
 <p>Enfiteuta: Os herdeiros de Filipa Francisca, mulher de Francisco de Freitas</p>
@@ -111,5 +110,8 @@
 
 
 </div>
+<h2>Atualmente:</h2>
+<img src='../MapaRuas-materialBase/atual/24-RuaDaVielinha-Vista2.JPG' style='width:50%; height:auto; '/>
+<img src='../MapaRuas-materialBase/atual/24-RuaDaVielinha-Vista1.JPG' style='width:50%; height:auto; '/>
 </body>
 </html>
