--- a/TCP1/html/RuaDasChagas.html
+++ b/TCP1/html/RuaDasChagas.html
@@ -3,69 +3,52 @@
 <h1>Rua das Chagas</h1>
 <p>Número: 18</p>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-18-RuaDasChagas-nascente.jpg'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-18-RuaDasChagas-nascente.jpg' style='width:50%; height:auto; '/>
 <p>Legenda: Rua das Chagas - nascente</p>
 </div>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-18-RuaDasChagas-poente.jpg'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-18-RuaDasChagas-poente.jpg' style='width:50%; height:auto; '/>
 <p>Legenda: Rua das Chagas - poente</p>
 </div>
 <h2>Descrição:</h2>
 <div>
-<p>
-                        A enfiteuta é filha do Dr. Manuel Gomes da Costa.
-                    </p>
-<p>
-                        A serventia dá-se pelo n.º 8 da Rua de Maximinos. 
-                    </p>
-<p>
-                        Confronta, do norte, com casa foreira à Igreja de Santiado da Cividade.
-                    </p>
-</div>
 <div>
 <p>
-                        Pertence ao n.º 8 da Rua de Maximinos, para onde tem a frontaria e serventia
-                        principais.
-                    </p>
-<p>
-                        Confronta do sul com casa foreira à Mitra. 
-                    </p>
-</div>
+            Artéria secundária, de origem romana, ligava a rua das Travessas com a rua 
+            de Maximinos. 
+        </p>
 <div>
 <p>
-                        Confronta, do norte, com casa foreira ao Hospital de Real e, do sul, 
-                        com casa foreira ao Hospital de S. Marcos. 
-                    </p>
-</div>
+            Aberta em data indeterminada da Idade Média, tinha, em 1750, uma estranha feição 
+            pelo aspecto cego que lhe era dado pelas portadas de madeira que protegiam 83,5%
+            de todas as suas janelas.
+        </p>
 <div>
 <p>
-                        Entre os anos de 1508 e 1597 a casa n.º 7 esteve 
-                        unida a este prazo.
-                    </p>
-</div>
+            Com casas de aspeto pobre, muitas delas sobradadas, só nos gavetos apresentava 
+            construções mais ricas. Curioso é, contudo, o enorme bloco, de empena e telhado comuns,
+            que ocupa quase toda a metade Norte do lado Nascente da rua e quase lembra um prédio 
+            de rendimento dos nossos dias.
+        </p>
 <div>
 <p>
-                        O enfiteuta é filho de António Pereira.
-                    </p>
-</div>
+            Chamada primeiro de Triparia, devido ao tipo de carne que aqui se vendia, passou
+            a partir de 1593 a ser conhecida pelo nome actual de rua das Chagas.
+        </p>
 <div>
 <p>
-                       Confronta, do sul, com casa foreira ao Hospital de S. Marcos. 
-                    </p>
-</div>
+            Hoje está bastante alterada. Com o alargamento das ruas Verde, de Maximinos
+            e das Travessas, muitos dos seus prédios foram destruídos, principalmente os 
+            situados no lado Poente e no extremo Norte do lado oposto. Assim a rua foi muito 
+            encurtada e deixou de desembocar na rua de Maximinos, passando a ter o seu limite na rua 
+            D. Frei Caetano Brandão. A zona que não foi mexida, mantém, contudo, a sua feição arcaica.
+        </p>
 <div>
 <p>
-                        O enfiteuta é filho de Bento Soares. As casas encontram-se unidas, num só 
-                        prazo, desde o ano de 1602.
-                    </p>
+            Das 10 casas do lado Nascente e 13 do Poente, são prazos do Cabido 5 e 3 respetivamente.
+        </p>
 </div>
-<div>
-<p>
-                        Corresponde ao n.º 10 da Rua de Maximinos, para onde tem a frontaria
-                        e serventia principais.
-                    </p>
-</div>
-<h3>Casas:</h3>
+<h2>Casas:</h2>
 <div>
 <p>Número: 1</p>
 <p>Enfiteuta: D. Inácia Gomes da Costa</p>
@@ -199,5 +182,8 @@
 
 
 </div>
+<h2>Atualmente:</h2>
+<img src='../MapaRuas-materialBase/atual/18-RuaDasChagas-Vista1.JPG' style='width:50%; height:auto; '/>
+<img src='../MapaRuas-materialBase/atual/18-RuaDasChagas-Vista2.JPG' style='width:50%; height:auto; '/>
 </body>
 </html>
