--- a/TCP1/html/RuaDeMaximinos.html
+++ b/TCP1/html/RuaDeMaximinos.html
@@ -3,132 +3,56 @@
 <h1>Rua de Maximinos</h1>
 <p>Número: 22</p>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-22-RuaDeMaximinos-norte.jpg'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-22-RuaDeMaximinos-norte.jpg' style='width:50%; height:auto; '/>
 <p>Legenda: Rua de Maximinos - norte.</p>
 </div>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-22-RuaDeMaximinos-sul.jpg'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-22-RuaDeMaximinos-sul.jpg' style='width:50%; height:auto; '/>
 <p>Legenda: Rua de Maximinos - sul.</p>
 </div>
 <h2>Descrição:</h2>
 <div>
-<p>Corresponde ao n.º 26 da Praça do Pão.</p>
-</div>
 <div>
-<p>O enfiteuta é filho de Pedro Barreto de
-                            Meneses e de sua mulher D. Maria
-                            Barreto. Foram unidas em 1508. A casa n.º 4 é de
-                        herdade dizíma a Deus e paga censo.</p>
-</div>
+<p>Bastante larga para a época em que foi construída, ligava a
+            praça do Pão com a Porta de Maximinos ou de
+            Nossa Senhora da Ajuda, onde houve um altar com esta invocação e com
+            confraria existente desde 1613, pelo menos.</p>
 <div>
-<p>O enfiteuta é filho de Pedro Barreto de
-                            Meneses e de sua mulher D. Maria
-                            Barreto. Foram unidas em 1508. A casa n.º 4 é de
-                        herdade dizíma a Deus e paga censo.</p>
-</div>
+<p>Decalcando uma rua da cidade romana, a rua de Maximinos foi durante a
+            Idade Média, o mais importante local de comércio da cidade de Braga.</p>
 <div>
-<p>O enfiteuta é filho de Pedro Barreto de
-                            Meneses e de sua mulher D. Maria
-                            Barreto. Foram unidas em 1508. A casa n.º 4 é de
-                        herdade dizíma a Deus e paga censo.</p>
-</div>
+<p>Local de residência dos burgueses, que certamente faziam o seu comércio no piso térreo
+            das casas que habitavam, recebeu deles a sua designação. Com o avançar dos tempos e a
+            transferência do comércio para a rua do Souto, mudou o seu nome para o de
+            Maximinos, apropriando-se do topónimo que pertencia à artéria por onde se
+            prolongava.</p>
 <div>
-<p>O enfiteuta comprou este prazo a D. Maria Barreto
-                            de Meneses.</p>
-</div>
+<p>Em 1868 foi alargada a toda a extensão da fachada da Sé e
+            praça do Pão e englobou-as. Essa acção de «modernização» fora já
+            preparada com demolição da Torre da Nossa Senhora da Ajuda, em 1826.</p>
 <div>
-<p>A casa pertenceu a Pedro Gonçalves
-                            Álvares.</p>
-</div>
+<p>Após essas obras, traçadas com base na linha de fachadas do lado Norte, todas as casas
+            do lado oposto foram destruídas, não restando hoje nenhuma.</p>
 <div>
-<p>A este prazo pertence o n.º 8 da Rua das Chagas.</p>
-</div>
+<p>Em 1750, conservava ainda bastantes edifícios de raiz medieval. No lado
+            Sul há duas casas notáveis de grandes dimensões (prazos 3, 4, 5 e 8), ostentando uma
+            delas uma pedra de armas. Mas muito mais interessante é o ritmo dos alçados, quase todos
+            de três pisos (com dois sobrados) e dois vãos, janelas bracarenses simples ou protegidas
+            por gelosias e, sobretudo, grandes aberturas no piso térreo, em toda a largura da
+            fachada, a permitir a existência de uma ampla sala para o comércio, que em
+            1750 lhe devia andar arredio.</p>
 <div>
-<p>O censo é pago por Domingos de
-                        Oliveira.</p>
-</div>
+<p>Algumas modernizações se notam; mas são apenas aplicações de varandas ou molduras de
+            pedra em portas ou janelas, que em nada tocaram na estrutura, mesmo exterior, dos
+            edifícios.</p>
 <div>
-<p>O censo é pago por Domingos de
-                        Oliveira.</p>
-</div>
+<p>Das 20 casas do lado Norte e 16 do lado Sul, são prazos do Cabido 14 e 13,
+            respectivamente.</p>
 <div>
-<p>Confronta, do nascente, com a Rua Verde.</p>
+<p>Desde 1925 que esta rua se designa por D. Paio Mendes, em homenagem à
+            acção dos Arcebispos na independência e formalçao de Portugal.</p>
 </div>
-<div>
-<p>O enfiteuta herdara esta casa de seu pai, Pedro de
-                            Oliveira.</p>
-</div>
-<div>
-<p>Esta casa pertencia a Lic. Francisco Gomes de
-                            Brito.</p>
-</div>
-<div>
-<p>O enfiteuta herdara esta casa de seu sogro, José
-                            de Oliveira.</p>
-</div>
-<div>
-<p>A casa é foreira à comenda de Lomar. O censo é pago pelo Padre Feliciano Barbosa, congregado.</p>
-</div>
-<div>
-<p>A casa possui, da parte poente, frontaria e serventia pela
-                        Vielinha.</p>
-</div>
-<div>
-<p>Confronta, do nascente, com a casa dizíma a Deus.</p>
-</div>
-<div>
-<p>O enfiteuta foi filho e herdeiro de Domingos de
-                            Almeida.</p>
-<p>Confronta, do nascente, com casa foreira à cororaria e, do poent, com casa
-                        dizíma a Deus.</p>
-</div>
-<div>
-<p>Encontra-se unida, numa só morada, com uma casa foreira à
-                        cororaria.</p>
-<p>Confronta, do nascente, com a Rua dos Sapateiros e, do
-                        poente, com casa foreira à cororaria da Sé de Braga.</p>
-<p>O censo é pago por João
-                        Teixeira.</p>
-</div>
-<div>
-<p>A enfiteuta é filha de Custódio da
-                            Silva, sapateiro, e de sua mulher, Paula Ribeiro.</p>
-<p>Confronta, de poente, com casa dizíma a Deus e com casas do cabido e, do
-                        norte, com parte da mesma casa, foreira à cororaria.</p>
-</div>
-<div>
-<p>O enfiteuta foi filho e herdeiro de José
-                            Machado, sapateiro e de sua mulher, Catarina Pereira.</p>
-</div>
-<div>
-<p>Confronta, do nascente, com casa de herdade dizíma a Deus.</p>
-<p>O censo é pago por Marquesa
-                        Maria.</p>
-</div>
-<div>
-<p>Confronta, do poente, com casa de herdade dizíma a Deus. Paga 45 reis de
-                        censo ao Hospital de S. Marcos e 70
-                        reis à xonfraria de Santiago.</p>
-</div>
-<div>
-<p>Esta casa pertenceu a Baltazar
-                            Fernandes. Era do património do Padre
-                            Manuel de Matos.</p>
-</div>
-<div>
-<p>O enfiteuta foi filho de José Lopes,
-                        armador. Entre os anos de 1528 e 1633 esteve unida
-                        à casa n.º 27.</p>
-</div>
-<div>
-<p>Esta casa fora de Francisco
-                        Ferreira.</p>
-</div>
-<div>
-<p>Encontram-se unidas, num só prazo, desde o ano de
-                        1680.</p>
-</div>
-<h3>Casas:</h3>
+<h2>Casas:</h2>
 <div>
 <p>Número: 1</p>
 <p>Enfiteuta: Senado da Câmara de Braga</p>
@@ -472,5 +396,8 @@
 
 
 </div>
+<h2>Atualmente:</h2>
+<img src='../MapaRuas-materialBase/atual/22-RuaDeMaximinos-Vista2.JPG' style='width:50%; height:auto; '/>
+<img src='../MapaRuas-materialBase/atual/22-RuaDeMaximinos-Vista1.JPG' style='width:50%; height:auto; '/>
 </body>
 </html>
