--- a/TCP1/html/RuaDeNossaSenhoraDeGuadalupe.html
+++ b/TCP1/html/RuaDeNossaSenhoraDeGuadalupe.html
@@ -3,64 +3,34 @@
 <h1>Rua de Nossa Senhora de Guadalupe</h1>
 <p>Número: 50</p>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-50-RuaDeNossaSenhoraDeGuadalupe-a.jpg'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-50-RuaDeNossaSenhoraDeGuadalupe-a.jpg' style='width:50%; height:auto; '/>
 <p>Legenda: Rua de Nossa Senhora de Guadalupe - Vista norte.</p>
 </div>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-50-RuaDeNossaSenhoraDeGuadalupe-b.jpg'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-50-RuaDeNossaSenhoraDeGuadalupe-b.jpg' style='width:50%; height:auto; '/>
 <p>Legenda: Rua de Nossa Senhora de Guadalupe - Vista sul</p>
 </div>
 <h2>Descrição:</h2>
 <div>
-<p>«Chãos de casas» do prazo do casal dos Chãos ou Quinteiro. 
-                        O chão n.º 1 confronta, do poente, com o chão n.° 26 da Praça do Gavião.</p>
-</div>
 <div>
-<p>Pertencem ao casal dos Chãos ou Quinteiro. 
-                        Nos livros dos prazos do cabido não se 
-                        encontram escrituras de subemprazamento.</p>
-</div>
+<p>Rua íngreme, pertencente ao complexo urbanístico do campo Novo, ligava 
+            a Capela de Guadalupe à praça do Gavião.</p>
 <div>
-<p>Ursula Vieira, e suas irmãs, Vitoriana Josefa e 
-                        Joana Antónia, pagam 1200 reis ao enfiteuta do 
-                        prazo do casal dos Chãos ou Quinteiro, à face 
-                        do qual foi subemprazada em 1745.</p>
-</div>
+<p>Aberta também em 1725, tinha já, nesta data, quase todas as suas casas 
+            construídas, no lado Norte. Eram simples, na sua grande maioria de um só piso, 
+            e que, contrariamente à rua de S. Gonçalo, se estendiam pela encosta acima, até 
+            à rua em Frente de Nossa Senhora de Guadalupe.</p>
 <div>
-<p>António Gomes, pedreiro, casado com Ana Gomes, 
-                        paga 1200 reis ao enfiteuta do prazo do 
-                        casal dos Chãos ou Quinteiro, à face do qual 
-                        foi subemprazado em 1725.</p>
-</div>
+<p>Na parte Sul estavam apenas construídas 2 habitações, sensivelmente no meio 
+            da rua, na parte plana. Eram edifícios de 2 pisos, em pedra, mas de desenho 
+            tradicional. Infelizmente o desenho está um pouco destruído, cortando todo o piso 
+            térreo da casa do prazo n.º 9 e um pouco da do anterior.</p>
 <div>
-<p>Luís Cardoso Coutinho de Oliveira, casado com 
-                        Antónia José Leonor de Vasconcelos, paga 
-                        7800 reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro, 
-                        conforme o subemprazamento de 1740.</p>
-<p>Ao prazo pertencem, ainda, os n.° 1 a 6 da 
-                        rua em frente de N. Sra. de Guadalupe.</p>
-<p>Os n.° 9 e 10, encontram-se unidos desde o 
-                        ano de 1725.</p>
-<p>À face da escritura do ano de 1740 foram feitos 
-                        títulos subalternos das casas n.° 14, 15, 16 e 17.</p>
-</div>
+<p>Todas as 17 casas aqui apresentadas são prazos do Cabido.</p>
 <div>
-<p>«Chãos de casas» do prazo do casal dos Chãos ou Quinteiro. 
-                        O chão n.° 18 confronta, do 
-                        nascente, com a rua em frente de N. Sra. de Guadalupe.</p>
+<p>Ainda hoje é denominada rua de Guadalupe.</p>
 </div>
-<div>
-<p>Pertencem ao casal dos Chãos ou Quinteiro, a 
-                        cujo enfiteuta se paga foro. Nos livros dos 
-                        prazos do cabido não se encontram escrituras de 
-                        subemprazamento.</p>
-</div>
-<div>
-<p>«Chãos de casa» do prazo do casal dos Chãos ou Quinteiro. 
-                        O n.° 35 confronta, do poente, 
-                        com o n.° 27 da Praça do Gavião.</p>
-</div>
-<h3>Casas:</h3>
+<h2>Casas:</h2>
 <div>
 <p>Número: 1 e 2</p>
 <p>Enfiteuta: D. Agostinha Maria de Barros Gavião, enfiteuta principal do prazo do casal dos Chãos ou Quinteiro.</p>
@@ -166,5 +136,8 @@
 
 
 </div>
+<h2>Atualmente:</h2>
+<img src='../MapaRuas-materialBase/atual/50-RuaDeNossaSenhoraDeGuadalupe-Vista1.JPG' style='width:50%; height:auto; '/>
+<img src='../MapaRuas-materialBase/atual/50-RuaDeNossaSenhoraDeGuadalupe-Vista2.JPG' style='width:50%; height:auto; '/>
 </body>
 </html>
