--- a/TCP1/html/RuaDeSGoncalo.html
+++ b/TCP1/html/RuaDeSGoncalo.html
@@ -3,121 +3,40 @@
 <h1>Rua de S. Gonçalo</h1>
 <p>Número: 49</p>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-49-RuaDeSGoncalo-a.jpg'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-49-RuaDeSGoncalo-a.jpg' style='width:50%; height:auto; '/>
 <p>Legenda: Rua de S.Gonçalo - Vista nascente-</p>
 </div>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-49-RuaDeSGoncalo-b.jpg'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-49-RuaDeSGoncalo-b.jpg' style='width:50%; height:auto; '/>
 <p>Legenda: Rua de S.Gonçalo - Vista poente.</p>
 </div>
 <h2>Descrição:</h2>
 <div>
-<p>Pertence à casa n.º 5 do campo de Sta. Ana, 
-                    para onde tem a frontaria e serventia principais</p>
-</div>
 <div>
-<p>«Chão de casa» do prazo do casal dos Chãos ou Quinteiro.</p>
-</div>
+<p>Rua íngreme, pertencente ao complexo urbanístico do campo Novo, ligava 
+            esta praça com o campo de Santa Ana.</p>
 <div>
-<p>Paga foro ao enfiteuta do prazo do casal dos Chãos ou Quinteiro.</p>
-<p>Confronta, do norte, com portal do n.º 4.</p>
-</div>
+<p>Aberta também em 1725, tinha em 1750 a parte em declive ocupada por 
+            quintais: do lado Nascente, o do Recolhimento das Convertidas e, do oposto, o 
+            de uma casa do campo de Santa Ana pertencente ao Mosteiro de Vilar de Frades 
+            (o quintal era, porém, prazo do Cabido).</p>
 <div>
-<p>O Padre Inácio Palhares paga 2400 reis ao 
-                        enfiteuta do prazo do casal dos Chãos ou Quinteiro, 
-                        conforme o subemprazamento de 1725.</p>
-</div>
+<p>A metade Norte da rua, bastante plana, tinha do lado Nascente, uma série 
+            de casas térreas (71,5%): o Poente apresentava bastantes diferenças: não só os 
+            edifícios são todos de dois pisos como, também, há uma casa, no prazo n.º 4, 
+            com um desenho de fachada diferente, mais moderno, próximo dos da praça do Gavião. 
+            No prazo n.º 11 vê-se a fachada lateral de um edifício que tem a frontaria 
+            virada à praça do Gavião; é curioso ver-se aqui que todo o programa foi totalmente 
+            alterado, mostrando não só que a divisão em dois pisos não foi seguida, permitindo 
+            a abertura de janelas de uma forma anárquica, como, também, que essas janelas 
+            não têm a «moldura» de pedra que as enobrecia.</p>
 <div>
-<p>António Vieira da Costa, da freguesia de 
-                        Adaufe, casado com Helena Francisca da Cruz, 
-                        paga 1200 reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro, 
-                        conforme o subemprazamento de 1725.</p>
-</div>
+<p>Todas as 23 casas aqui apresentadas são prazos do Cabido. No gaveto Nascente 
+            havia ainda, nesta data, um lote vazio para construção.</p>
 <div>
-<p>O Padre Jerónimo Vieira paga 1200 reis ao 
-                        enfiteuta do prazo do casal dos Chãos ou Quinteiro, 
-                        conforme o subemprazamento de 1725.</p>
+<p>Mantém o nome de rua de S. Gonçalo.</p>
 </div>
-<div>
-<p>João Vieira, sombreireiro, casado com Teresa de Sá, 
-                        paga 1200 reis ao enfiteuta do prazo do 
-                        casal dos Chãos ou Quinteiro, conforme o 
-                        subemprazamento de 1726.</p>
-</div>
-<div>
-<p>João Gonçalves, serralheiro, casado com 
-                        Inocência Rodrigues, paga 1200 reis ao 
-                        enfiteuta do prazo do casal dos Chãos ou Quinteiro, 
-                        conforme o subemprazamento de 1725.</p>
-</div>
-<div>
-<p>João Vieira, carpinteiro, casado com Custódia Ferreira, 
-                        paga 1200 reis ao enfiteuta do prazo 
-                        do casal dos Chãos ou Quinteiro, conforme o 
-                        subemprazamento feito em 1725.</p>
-</div>
-<div>
-<p>José de Oliveira, da freguesia de S. Mamede d'Este, 
-                        casado com Maria Lopes, paga 1200 
-                        reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro, 
-                        conforme o subemprazamento de 1727.</p>
-</div>
-<div>
-<p>André Lopes, mestre pedreiro, casado com 
-                        Maria Francisca, paga 1900 reis ao enfiteuta do 
-                        prazo do casal dos Chãos ou Quinteiro.</p>
-<p>A este prazo pertence o n.° 1 da Praça do Gavião. 
-                        O n.° 11 foi construído depois de 1727 
-                        e o ri.° 1 depois de 1735.</p>
-</div>
-<div>
-<p>«Chão de casa» do prazo do casal dos Chãos ou Quinteiro.</p>
-</div>
-<div>
-<p>Bento Garcia, serralheiro, casado com Leonarda da Silva, 
-                        paga 1200 reis ao enfiteuta do prazo 
-                        do casal dos Chãos ou Quinteiro, conforme o 
-                        subemprazamento de 1725.</p>
-</div>
-<div>
-<p>Domingos António, barbeiro, casado com Marta Maria, 
-                        paga 1200 reis ao enfiteuta do prazo do 
-                        casal dos Chãos ou Quinteiro, 
-                        conforme subemprazamento de 1725.</p>
-</div>
-<div>
-<p>Miguel Rodrigues, espingardeiro, casado com 
-                        Ana Rodrigues, paga 1200 reis ao enfiteuta do 
-                        prazo do casal dos Chãos ou Quinteiro, 
-                        conforme o subemprazamento de 1726.</p>
-</div>
-<div>
-<p>André da Silva, albardeiro, casado com Maria Francisca, 
-                        paga, por cada uma das casas, 1200 
-                        reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro, 
-                        conforme os subemprazamentos de 1726.</p>
-</div>
-<div>
-<p>Pedro Mendes, alfaiate, casado com Rosa Teixeira, 
-                        paga 1500 reis ao enfiteuta do prazo 
-                        do casal dos Chãos ou Quinteiro, conforme o 
-                        subemprazamento de 1725.</p>
-</div>
-<div>
-<p>André da Silva, casado com Maria Francisca, 
-                        paga 600 reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro, 
-                        conforme o subemprazamento de 1726.</p>
-</div>
-<div>
-<p>André da Silva, albardeiro, casado com Maria Francisca, 
-                        paga 3710 reis ao enfiteuta do prazo 
-                        do casal dos Chãos ou Quinteiro, à face do qual 
-                        foi subemprazado, no ano de 1732. A casa 
-                        n.º 26 correspondia, antes desta data, a duas 
-                        moradas de casas. Confronta, do sul, com o 
-                        quintal do Recolhimento de Sta. Maria Madalena.</p>
-</div>
-<h3>Casas:</h3>
+<h2>Casas:</h2>
 <div>
 <p>Número: 1</p>
 <p>Enfiteuta: D. Agostinha Maria de Barros Gavião, enfiteuta principal do prazo do casal dos Chãos ou Quinteiro</p>
@@ -357,5 +276,8 @@
 
 
 </div>
+<h2>Atualmente:</h2>
+<img src='../MapaRuas-materialBase/atual/49-RuaDeS.Gonáalo-Vista1.JPG' style='width:50%; height:auto; '/>
+<img src='../MapaRuas-materialBase/atual/49-RuaDeS.Gonáalo-Vista2.JPG' style='width:50%; height:auto; '/>
 </body>
 </html>
