--- a/TCP1/html/RuaDeSantoAndre.html
+++ b/TCP1/html/RuaDeSantoAndre.html
@@ -3,158 +3,31 @@
 <h1>Rua de Santo André</h1>
 <p>Número: 46</p>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-46-RuaDeSantoAndre-a(norte).jpg'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-46-RuaDeSantoAndre-a(norte).jpg' style='width:50%; height:auto; '/>
 <p>Legenda: Praça do Gavião - Nascente.</p>
 </div>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-46-RuaDeSantoAndre-a(sul).jpg'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-46-RuaDeSantoAndre-a(sul).jpg' style='width:50%; height:auto; '/>
 <p>Legenda: Praça do Gavião - Nascente.</p>
 </div>
 <h2>Descrição:</h2>
 <div>
-<p>Pertence à casa n.° 111, da Rua dos Chãos de Cima,para onde tem frontaria e serventia principais.
-                    </p>
-</div>
 <div>
 <p>
-                        Manuel Pereira, casado com Quitéria da Silva. paga 2000 reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro. Confronta, do poente. com o quintal da casa n.° III da Rua dos Chãos de Cima.</p>
-</div>
+            Aberta em 1725, em conexão com o conjunto que tem centro na praça do Gavião. Ligava o largo dos Penedos com a praça do Gavião.
+        </p>
 <div>
-<p>Paga foro ao enfiteuta do prazo do casal dos Chãos ou Quinteiro.</p>
-</div>
+<p>Zona de expansão da cidade setecentista, obedecia a um sistema de loteamento semelhante ao actual.</p>
 <div>
-<p>Paga foro ao enfiteuta do prazo do casal dos Chãos ou Quinteiro.</p>
-</div>
+<p>Rapidamente se encheu de casas de desenho tradicional que, embora obedecendo a um plano prévio de construção, permitia pequenas variantes de composição nas fachadas. Só os prazos (lotes) 26, 27 e 28 estavam «chãos» em 1750.</p>
 <div>
-<p>Paga foro ao enfiteuta do prazo do casal dos Chãos ou Quinteiro.</p>
-</div>
+<p>As casas são de dois pisos, tendo quase todas, no andar nobre, janelas do tipo bracarense. Seis edificações há que são térreas, embora dentro do mesmo esquema construtivo.</p>
 <div>
-<p>Paga foro ao enfiteuta do prazo do casal dos Chãos ou Quinteiro.</p>
-</div>
+<p>As 25 casas do lado Norte e 21 do Sul eram todas prazos do Cabido. </p>
 <div>
-<p>João Gomes da Silva, alfaiate, casado com Teresa Maria, paga 1500 reis, ao enfiteuta do prazo do casal dos Chãos ou Quinteiro.</p>
+<p>Mantém a designação de rua de Santo André.</p>
 </div>
-<div>
-<p>Francisco de Sousa, marceiro, casado com Francisca Soares, paga 2000 reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro.</p>
-</div>
-<div>
-<p>José de Carvalho, sapateiro casado com Maria Soares, paga 2000 reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro</p>
-</div>
-<div>
-<p>Bento Pereira Machado, clérigo in Minoribus, paga 2000 reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro.</p>
-</div>
-<div>
-<p>Manuel Fernandes, ferreiro, paga 2000 reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro</p>
-</div>
-<div>
-<p>Santos da Mota, mestre de meninos, casado com Ana de Magalhães, paga 2000 reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro.</p>
-</div>
-<div>
-<p>João da Cunha, emxambrador, casado com Maria Teresa da Silva, paga 2000 reis ao enfiteuta do prazo do casal dos chãos ou Quinteiro.
-                        Confronta, do nascente, com a Rua de S. Barnabé.
-                    </p>
-</div>
-<div>
-<p>Barnabé de Araújo Pereira, inquiridor, paga 2000 reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro.
-                        Confronta, do poente, com a Rua de S. Barnabé.
-                    </p>
-</div>
-<div>
-<p>Domingos Fernandes, casado com Faustina Maria da Graça, paga 2000 reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro.</p>
-</div>
-<div>
-<p>Jerónimo Fernandes, entalhador, casado com Teresa Vieira, paga 2000 reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro.</p>
-</div>
-<div>
-<p>Custódia Gomes, viúva, paga 2400 reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro.</p>
-</div>
-<div>
-<p>O Padre José Teixeira de Melo paga 2000 reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro.</p>
-</div>
-<div>
-<p>Isidoro da Costa, casado com Ana Maria de Sousa. paga 2000 reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro.</p>
-</div>
-<div>
-<p>Manuel Esteves de Almeida, casado com Maria de Paiva, paga 2000 reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro.</p>
-</div>
-<div>
-<p>Crispiano Ferreira, da freguesia de Sta. Maria de Palmeira, paga 2900 reis ao enfiteuta do prazo do casal, dos Chãos ou Quinteiro.
-                        Estas casas foram unidas em 1745.
-                    </p>
-</div>
-<div>
-<p>Agostinho Barbosa, notário Apostólico, paga 1400 reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro. Confronta, do poente, com o n.° 9 da praça do Gavião.</p>
-</div>
-<div>
-<p>Chãos de casas, pertenças do prazo do casal dos Chãos ou Quinteiro. O chão n.° 26 confronta, do nascente, com o chão n.° 8 da praça do Gavião.
-                    </p>
-</div>
-<div>
-<p>Paga 2000 reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro.</p>
-</div>
-<div>
-<p>Paga 3000 reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro.</p>
-</div>
-<div>
-<p>Paulo de Araújo, ferreiro, casado com Helena Francisca, paga 3000 reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro.
-                        Foi construída antes de 1726.
-                    </p>
-</div>
-<div>
-<p>Paulo da Costa, dourador, casado com Ângela Francisca da Silva, paga 2000 reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro.
-                        Foi construída antes de 1726.
-                    </p>
-</div>
-<div>
-<p>Francisco Pereira, alfaiate, casado com Agostinha Francisca, paga 2000 reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro. Foi construída antes de 1726.
-                    </p>
-</div>
-<div>
-<p>O Padre Domingos Ferreira paga 2700 reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro. Foi construída antes de 1727.</p>
-</div>
-<div>
-<p>António Francisco, alfaiate, paga 3000 reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro. Foi construída antes de 1732.</p>
-</div>
-<div>
-<p>O Padre Bento Francisco Pereira e seu irmão, o Padre Jerónimo Francisco Pereira, pagam 5000 reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro. Foi construída antes de 1732.</p>
-</div>
-<div>
-<p>Paga foro ao enfiteuta do prazo do casal dos Chãos ou Quinteiro.</p>
-</div>
-<div>
-<p>José de Barros, tratante, casado com Catarina de Araújo, paga 3200 reis, por cada uma destas casas, ao enfiteuta do prazo do casal dos Chãos ou Quinteiro. Foram construídas antes de 1737.
-                    </p>
-</div>
-<div>
-<p>João Pereira da Silva, sapateiro, casado com Custódia Francisca, paga 3000 reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro. Foi construída antes de 1730.
-                    </p>
-</div>
-<div>
-<p>Manuel Álvares, cego, casado com Luísa Teixeira, paga 4500 reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro. Foram unidas em 1730.
-                    </p>
-</div>
-<div>
-<p>O Padre André Soares de Araújo, vigário de Sta. Maria de Ferreiros, paga 3286 reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro. Foi construída antes de 1726.</p>
-</div>
-<div>
-<p>Marcelino de Araújo, escultor, casado com Bernardina Rosa, paga 4760 reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro. Foi construída antes de 1733.
-                    </p>
-</div>
-<div>
-<p>Fabião Dias, casado com Francisca Dias, paga 2000 reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro. Foi construída antes de 1732.
-                    </p>
-</div>
-<div>
-<p>Bento Ferreira, casado com Eugénia Francisca, paga 2000 reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro. Foi construída antes de 1734.
-                    </p>
-</div>
-<div>
-<p>Francisca Vieira, solteira, paga 2000 reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro. Foi construída antes de 1734.</p>
-</div>
-<div>
-<p>Pedro Machado, casado com Maria Ferreira, paga 2000 reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro. Ficaram unidas em 1738. A casa n.° 49 confronta, do poente, com o quintal da casa n.° 27 da Rua dos Chãos de Baixo.</p>
-</div>
-<h3>Casas:</h3>
+<h2>Casas:</h2>
 <div>
 <p>Número: 1</p>
 <p>Descrição: 
@@ -546,5 +419,8 @@
 
 
 </div>
+<h2>Atualmente:</h2>
+<img src='../MapaRuas-materialBase/atual/46-RuaDeSantoAndrÇ-Vista1.JPG' style='width:50%; height:auto; '/>
+<img src='../MapaRuas-materialBase/atual/46-RuaDeSantoAndrÇ-Vista2.JPG' style='width:50%; height:auto; '/>
 </body>
 </html>
