--- a/TCP1/html/RuaDeStoAntonio.html
+++ b/TCP1/html/RuaDeStoAntonio.html
@@ -3,67 +3,45 @@
 <h1>Rua de Sto. António</h1>
 <p>Número: 19</p>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-19-RuaDeStoAntonio-nascente.jpg'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-19-RuaDeStoAntonio-nascente.jpg' style='width:50%; height:auto; '/>
 <p>Legenda: Rua de Sto. António - nascente</p>
 </div>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-19-RuaDeStoAntonio-poente.jpg'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-19-RuaDeStoAntonio-poente.jpg' style='width:50%; height:auto; '/>
 <p>Legenda: Rua de Sto. António - poente</p>
 </div>
 <h2>Descrição:</h2>
 <div>
-<p>
-                        Encontram-se unidas, num só prazo, desde o ano de 1591. Possuem frontaria para a travessa
-                        que vem da Rua de D. Gualdim para esta rua.
-                    </p>
-</div>
 <div>
 <p>
-                        Encontram-se unidas, num só prazo, desde o ano de 1524.
-                    </p>
-</div>
+            Pequena rua, que ligava a rua das Travessas com o Terreiro de Santo António. De raiz romana, 
+            não sabemos qual teria sido a sua função na cidade medieval. 
+        </p>
 <div>
 <p>
-                        Encontram-se unidas, num só prazo, desde o ano de 1592.
-                    </p>
-</div>
+            Em 1465 são transferidos para aqui os judeus e instalados no prédio mais interessante que hoje
+            aqui resta, e um dos mais estimáveis de toda a cidade, passando a ser denominada de Judiaria Nova. 
+            Esta casa veio depois a pertencer ao cónego João de Meira Carrilho, que lhe pôs as suas armas.
+        </p>
 <div>
 <p>
-                        Possui frontaria para o rossio ou terreiro de Sto. António, 
-                        com o qual confronta do sul. 
-                    </p>
-</div>
+            No final de quatrocentos, com a obrigação que os judeus sofreram de abjurar a sua religião
+            passou a ser chamada de Sto. António, nome que se mantém.
+        </p>
 <div>
 <p>
-                       Estas casas (denominadas «Casas Torres»), encontram-se unidas, num só prazo, 
-                       desde o ano de 1697. Na casa n.º 12, onde foi colocada a imagem de Sto. António, 
-                       (antes de 1502), funcionou a antiga sinagoga.
-                    </p>
-</div>
+            Das 3 casas medievais que se vêem no alçado Nascente nada resta hoje infelizmente (uma já estava
+            em adiantada ruína). Do lado Poente conservam-se algumas casas, ainda. É curioso notar que as suas 
+            construções têm um tipo de acabamento e proteção de janelas bem mais cuidado que a rua que 
+            lhe era sequente, a das Chagas.
+        </p>
 <div>
 <p>
-                        Confronta, do norte, com casa foreira ao mosteiro de Bouro.
-                    </p>
+            Esta artéria, que felizmente ainda hoje conserva o seu traçado original, tinha 7 casas do lado 
+            Nascente e 15 do Poente, sendo 6 e 11, respectivamente, prazos do Cabido. 
+        </p>
 </div>
-<div>
-<p>
-                        A casa n.º 22 confronta, do norte, com a travessa que vem da Rua
-                        de D. Gualdim.
-                    </p>
-</div>
-<div>
-<p>
-                        A casa n.º 22 confronta, do norte, com a travessa que vem da Rua
-                        de D. Gualdim.
-                    </p>
-</div>
-<div>
-<p>
-                        A casa n.º 22 confronta, do norte, com a travessa que vem da Rua
-                        de D. Gualdim.
-                    </p>
-</div>
-<h3>Casas:</h3>
+<h2>Casas:</h2>
 <div>
 <p>Número: 1 e 2</p>
 <p>Enfiteuta: Francisco Soares de Novais, abade de S. Vicente do Bico</p>
@@ -233,5 +211,8 @@
 
 
 </div>
+<h2>Atualmente:</h2>
+<img src='../MapaRuas-materialBase/atual/19-RuaDeSto.Ant¢nio-Vista2.JPG' style='width:50%; height:auto; '/>
+<img src='../MapaRuas-materialBase/atual/19-RuaDeSto.Ant¢nio-Vista1.JPG' style='width:50%; height:auto; '/>
 </body>
 </html>
