--- a/TCP1/html/RuaDosChaosDeBaixo.html
+++ b/TCP1/html/RuaDosChaosDeBaixo.html
@@ -3,260 +3,31 @@
 <h1>Rua dos Chãos de Baixo</h1>
 <p>Número: 45</p>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-45-RuaDosChaosDeBaixo-a(nascente).jpg'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-45-RuaDosChaosDeBaixo-a(nascente).jpg' style='width:50%; height:auto; '/>
 <p>Legenda: Praça do Gavião - Nascente.</p>
 </div>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-45-RuaDosChaosDeBaixo-a(poente).jpg'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-45-RuaDosChaosDeBaixo-a(poente).jpg' style='width:50%; height:auto; '/>
 <p>Legenda: Praça do Gavião - Nascente.</p>
 </div>
 <h2>Descrição:</h2>
 <div>
-<p>
-                        Pertence ao nº10 da Rua da Fonte da Carcova, para onde tem a frontaria e serventia principais. Fica situada no Eirado.</p>
-</div>
 <div>
 <p>
-                        A casa n.º 4 confronta, do norte, com casa foreira a S. João do Souto. Esteve separada don.º 3 entre os anos de 1537 e 1541.
-                    </p>
-</div>
+            Longa rua existente já em 1281, ligava a Arcada com o largo dos Penedos e que, em 1384, foi arrasada por D. João de Castela.
+        </p>
 <div>
-<p>
-                        A casa n.º 4 confronta, do norte, com casa foreira a S. João do Souto. Esteve separada don.º 3 entre os anos de 1537 e 1541.
-                    </p>
-</div>
+<p>No Mappa, surge-nos cmo um local de comércio. Na sua metade Sul, sobretudo, o piso térreo dos edifícios está totalmente ocupado por largas portas de madeira que possibilitam a existência de amplos espaços com boa iluminação exterior e a atividade comercial. </p>
 <div>
-<p>Confronta, do sul, com casa foreira ao Senado da Câmara.</p>
-</div>
+<p>Os seus prédios estão ou adaptados às novas necessidades - caso dos edifícios dos prazos 10 e 11, por exemplo, que primitivamente eram do tipo de porta com janela ao lado - ou reconstruídos, segundo o gosto burguês do séc. XVII que se prolongaria pela primeira metade do seguinte - casa com gelosias -, existindo ainda alguns, talvez construídos já no séc. XVIII que nos parecem ser o tipo da casa moderna da época (prazos 33, 35, etc.). Sente-se bem que, não obstante a grande quantidade de casas antigas que a faceavam, há uma forte vontade de mudança para novas modas sociais, que a casa do prazo 45 nos parece exemplificar bastante bem ou, sobretudo, para novos desenhos de arquitectura.</p>
 <div>
-<p>O enfiteuta é filho de Vicente Dias, ourives, e de sua mulher, Francisca Teresa.A casa esteve unida ao n.° 5 entre os anos de 1541 e 1558.
-                    </p>
-</div>
+<p>Ao sul da rua ficava o amplo largo do Eyrado. Estranhamente, nas suas casas não parece haver indícios de actividade comercial. Saliente-se, contudo, a grande casa n.º 54, de três pisos, com um belíssimo arco geminado, talvez ainda gótico, e outra seiscentista, ao lado do prazo nº 4.</p>
 <div>
-<p>Os herdeiros de Marcos Ferreira, ourives, casado com Damásia Ferreira, pagam 920 reis, ao enfiteuta do prazo do lugar ou campo do Castelo Rodrigo, na Rua do Anjo.
-                        Esta casa era dízima a Deus e foi comprada pelo cónego Francisco de Meira Carrilho, enfiteuta do prazo do lugar doCastelo Rodrigo, que a subrogou pelas 3 casas que demolui na dita Rua do Anjo, ou seja, os n.°' 25, 26 e 27. Confronta, do sul, com casa foreira à cororaria.
-                    </p>
-</div>
+<p>Das 45 casas do lado Nascente e 44 do Poente eram prazos do Cabido 30 e 24, respectivamente.</p>
 <div>
-<p>Ao prazo corresponde apenas a parte norte da casa e, um campo desta rua.
-                        Confronta, do sul, com a outra parte da casa foreira à capela de Sta. Marta.
-                        O campo foi dividido antes de 1739, em três partes: uma que se conserva unida a esta casa: outra ao n.° 12 da Rua do Carvalhal; e a terceira ao n.° 18 da dita rua.
-                    </p>
+<p>A rua dos Chaos de Baixo corresponde hoje à Rua dos Chãos e o Eyrado compreende o largo de S. Francisco e o espaço, agora construído, Banco de Portugal e Caixa Geral de Depósitos.</p>
 </div>
-<div>
-<p>Confronta, do norte, com casa foreira à capela de Sta. Marta com a qual, desde 1492, «tem serventia pelo quintal para um poço da referida casa».</p>
-</div>
-<div>
-<p>
-                        O enfiteuta é filho de António de Castro. Confronta, do sul, com casa foreira à capela de Sta. Marta.
-                    </p>
-</div>
-<div>
-<p>
-                        Confronta, do norte, com casa foreira à capela de Sta. Marta e esteve unida ao n.° 10 entre os anos de 1509 e 1565.
-                    </p>
-</div>
-<div>
-<p>
-                        Maria Pinto, viúva de Tomé Rodrigues, paga 283 reis ao n.° 18 da rua do Carvalhal. Confronta, do sul, com casa foreira à capela de Sta. Marta.
-                    </p>
-</div>
-<div>
-<p>Maria do Vale, solteira, da rua das Chagas, paga 282 reis ao n.° 18 da Rua do Carvalhal.</p>
-</div>
-<div>
-<p>Lic. João Álvares de Oliveira paga 306 reis ao n.° 18 da Rua do Carvalhal.</p>
-</div>
-<div>
-<p>O Padre João de Chaves, da freguesia de Palmeira, paga 407 reis ao n.° 18 da Rua do Carvalhal.</p>
-</div>
-<div>
-<p>António Ferreira Loreto, reitor de Sta. Maria de Adaúfe, paga 308 reis ao n.° 18 da Rua do Carvalhal.</p>
-</div>
-<div>
-<p>Os herdeiros de Domingos Quinteiro, tratante, pagam 345 reis ao n.° 18 da Rua do Carvalhal.
-                    </p>
-</div>
-<div>
-<p>António Francisco Antunes, abade de Fragoso, paga 328 reis ao n.° 18 da Rua do Carvalhal.
-                    </p>
-</div>
-<div>
-<p>O Padre Jerónimo Antunes da Silva paga 328 reis ao n.° 18 da Rua do Carvalhal.</p>
-</div>
-<div>
-<p>
-                        O Padre Pedro de Oliveira paga 327 reis ao n.° 18 da Rua do Carvalhal.
-                    </p>
-</div>
-<div>
-<p>
-                        João da Costa, tratante, casado com Teresa Ferreira, paga 327 reis ao n.° 18 da Rua do Carvalhal. 
-                    </p>
-</div>
-<div>
-<p>
-                        João Manuel de Faria paga 445 reis ao n.° 18 da Rua do Carvalhal.
-                    </p>
-</div>
-<div>
-<p>
-                        António Gonçalves, da freguesia de Pedro d'Este, casado com Maria Rodrigues, paga 200 reis ao n.° 18 da rua do Carvalhal. Confronta, do sul, com a casa n.° 2 da dita rua.
-                        
-                    </p>
-</div>
-<div>
-<p>
-                        Não aparece desenhada no mapa. Foi demolida depois de 1686, para se fazer a entrada da rua de Sto. André.
-                    </p>
-</div>
-<div>
-<p>
-                        Os herdeiros de Jerónimo Lopes, cabeiro, casado com Maria Nogueira, pagam 200 reis, e 1 galinha ao enfiteuta do prazo do casal dos Chãos ou Quinteiro
-                    </p>
-</div>
-<div>
-<p>
-                        Os herdeiros de Jerónima da Cunha, solteira, pagam 220 reis e 1 galinha ao enfiteuta do prazo do casal dos Chãos ou Quinteiro.  
-                    </p>
-</div>
-<div>
-<p>
-                        Paga foro ao enfiteuta do prazo do casal dos Chãos ou Quinteiro.
-                    </p>
-</div>
-<div>
-<p>
-                        Paga foro ao enfiteuta do prazo do casal dos Chãos ou Quinteiro. 
-                    </p>
-</div>
-<div>
-<p>
-                        Os herdeiros de João Lourenço, espingardeiro, casado com Maria Amónia, pagam 150 reis ao enfiteuta do prazo do Casal dos Chãos ou Quinteiro.
-                    </p>
-</div>
-<div>
-<p>
-                        Paga foro ao enfiteuta do prazo do casal dos Chãos ou Quinteiro.
-                    </p>
-</div>
-<div>
-<p>
-                        Os herdeiros de Domingos Soares Pastor, serralheiro, casado com Maria Pereira, pagam 200 reis e 1 galinha ao enfiteuta do, prazo do casal dos Chãos ou Quinteiro.
-                    </p>
-</div>
-<div>
-<p>
-                        Os herdeiros de Bento de Araújo, alfaiate, casado com Mónica Barbosa, pagam 150 reis ao enfiteuta do prazo do casal dos Chãos do Quinteiro.
-                        Antes do ano de 1681 correspondia a duas casas.
-                    </p>
-</div>
-<div>
-<p>
-                        Os herdeiros de João Fonseca ,pintor, casado com Susana Vieira, pagam 120 reis e 1 galinha, ao enfiteuta do prazo do casal dos Chãos ou Quinteiro.
-                        Antes do ano de 1624 correspondia a duas casas.
-                    </p>
-</div>
-<div>
-<p>
-                        Antes do ano de 1545 pertenceu ao prazo do casal dos Chãos ou Quinteiro.
-                    </p>
-</div>
-<div>
-<p>
-                        Os herdeiros do Padre João Pinto de Araújo pagam 120 reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro.
-                    </p>
-</div>
-<div>
-<p>
-                        António Garcia Pinto paga 1200 reis ao enfiteuta do prazo da casal dos Chãos ou Quinteiro.
-                        No ano de 1726 foi incorporado neste prazo um pedaço de quintal.
-                    </p>
-</div>
-<div>
-<p>
-                        Os herdeiros de Filipe Machado, sangrador, casado com Felicia da Costa, pagam 50 reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro.
-                    </p>
-</div>
-<div>
-<p>
-                        Os herdeiros de Manuel de Castro,vestimenteiro, pagam 50 reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro.
-                    </p>
-</div>
-<div>
-<p>
-                        O Padre António de Castro paga 1200 reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro.
-                        No ano de 1726 foi incorporado neste prazo um pedaço de quintal que se desmembrou do referido casal.
-                        
-                    </p>
-</div>
-<div>
-<p>
-                        Manuel Pinheiro, livreiro, casado com Filipa Teresa de Araújo, paga 900 reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro, por um chão de casa «com obrigação de a construir». situado no lugar da serventia antiga que dava entrada para as casas deste casal.
-                        Foi construída depois do ano de 1727.
-                    </p>
-</div>
-<div>
-<p>
-                        Paga foro ao enfiteuta do prazo do casal dos Chãos do Quinteiro.
-                    </p>
-</div>
-<div>
-<p>
-                        Os herdeiros de Manuel Marques, sapateiro, casado com Luisa da Mota, pagam 120 reis ao enfiteuta do prazo do casal dos Chãos Quinteiro.
-                    </p>
-</div>
-<div>
-<p>
-                        Os herdeiros de Jorge de Magalhães,sapateiro, casado com Francisca Pereira, pagam 150 reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro.
-                    </p>
-</div>
-<div>
-<p>
-                        Os herdeiros de Isabel, solteira, a Picada, pagam 100 reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro.
-                    </p>
-</div>
-<div>
-<p>
-                        Os herdeiros de Domingos Gonçalves, alfaiate, casado com Isabel Fernandes, pagam 80 reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro.
-                    </p>
-</div>
-<div>
-<p>
-                        Paga 10 reis, por um pedaço do quintal, ao enfiteuta do prazo do casal dos Chãos ou Quinteiro. A casa e a outra parte do quintal não pertencem ao cabido.
-                    </p>
-</div>
-<div>
-<p>
-                        Paga 200 reis, pelo quintal, ao enfiteuta do prazo do casal dos Chãos ou Quinteiro. A casa e a outra parte do quintal não pertencem ao cabido.
-                    </p>
-</div>
-<div>
-<p>
-                        Confronta, do sul, com o campo de Sta. Ana e terreiro do Eirado.
-                    </p>
-</div>
-<div>
-<p>
-                        Esteve unida no n.° 51 entre 1554 e 1676.
-                    </p>
-</div>
-<div>
-<p>
-                        Confronta, do sul, com o Eirado ou Campo de Sta. Ana.
-                    </p>
-</div>
-<div>
-<p>
-                        Foi construída depois de 1603, em terrenos do n.° 49. Situa-se no Eirado ou Campo de Sta. Ana. Confronta, do sul, com a outra parte da mesma casa que é dízima a Deus.
-                    </p>
-</div>
-<div>
-<p>
-                        Os herdeiros de Maria Ferreira, viúva de António Rodrigues, mercador, e sua filha Ana, pagam 20 reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro. Confronta, do sul, com casa foreira à Câmara e do poente, com o Eirado. Antes do ano de 1681 correspondia a duas casas.
-                    </p>
-</div>
-<h3>Casas:</h3>
+<h2>Casas:</h2>
 <div>
 <p>Número: 1</p>
 <p>Descrição: 
@@ -882,5 +653,8 @@
 
 
 </div>
+<h2>Atualmente:</h2>
+<img src='../MapaRuas-materialBase/atual/45-RuaDosCh∆osDeBaixo-Vista2.JPG' style='width:50%; height:auto; '/>
+<img src='../MapaRuas-materialBase/atual/45-RuaDosCh∆osDeBaixo-Vista1.JPG' style='width:50%; height:auto; '/>
 </body>
 </html>
