--- a/TCP1/html/RuaPequena.html
+++ b/TCP1/html/RuaPequena.html
@@ -3,57 +3,45 @@
 <h1>Rua Pequena</h1>
 <p>Número: 13</p>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-13-RuaPequena-Nascente.jpg'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-13-RuaPequena-Nascente.jpg' style='width:50%; height:auto; '/>
 <p>Legenda: RuaPequena - vista nascente.</p>
 </div>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-13-RuaPequena-Poente.jpg'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-13-RuaPequena-Poente.jpg' style='width:50%; height:auto; '/>
 <p>Legenda: RuaPequena - vista poente.</p>
 </div>
 <h2>Descrição:</h2>
 <div>
-<p>
-                        Corresponde ao n° 8 da Rua das Oussias, para onde tem a frontaria e serventia principais.
-                    </p>
-</div>
 <div>
 <p>
-                        Prazo constituído por casa, quintal e palheiro. este incorporado em 1618 e pertencente ao
-                        n.º	1.
-                        
-                    </p>
-</div>
+            Como o nome diz é uma pequenina rua que ligava a rua das Oucias com a travessa da rua do Forno para a do Poço.
+        </p>
 <div>
 <p>
-                        Confronta, do norte, com casa dízima a Deus e com o n° 2 e, do sul, com casa foreira ao morgado de Real.  
-                    </p>
-</div>
+            Respeitando o reticulado romano era mais uma das artérias do bairro medieval adjacente à catedral.
+        </p>
 <div>
 <p>
-                        Corresponde ao n° 7 da travessa que vai da Rua do Poço ou de Santa Maria para a do Forno, para onde tem frontaria e serventia principais.
-                    </p>
-</div>
+            Na Idade Média era já pequena e permitia um melhor acesso ao mercado da olaria, então existente junto ao transepto da Sé. Por isso recebeu esse nome.
+        </p>
 <div>
 <p>
-                        Este prazo encontra-se unido desde 1583.
-                    </p>
-</div>
+            No séc. XVI, o célebre humanista Diogo Teive emprazou ao Cabido a casa n.º 2, passando a ser conhecida por rua do Teive. Até que por volta de 1620 Mateus Fernando Farto, talvez senhor de forte importância política ou económica, veio para aqui viver, tanto bastando para ser conhecida pelo seu apelido.
+        </p>
 <div>
 <p>
-                        Este prazo encontra-se unido desde 1583.
-                    </p>
-</div>
+            No Mappa, contudo, aparece como rua Pequena. Sabemos ainda que talvez a partir do fim da Idade Média, e durante cerca de um século, também foi chamada de rua Painsalvos, por nela ter morado o abade da freguesia transmontana do mesmo nome.
+        </p>
 <div>
 <p>
-                        A enfiteuta foi herdeira do Reitor de Freitas, José Ferreira Petiz. A casa foi construída, depois de 1587, em pertenças do n.º 9 da Rua do Poço ou de Santa Maria. 
-                    </p>
-</div>
+            Embora pequena, tem 3 edifícios notáveis: o prazo n.º 1, grande construção em pedra, com fachada bem organizada e um recuado em toda a extensão; o prazo n.º 2, casa com quase excesso de aberturas, (sem comparação com qualquer outra em todo o Mappa); e o prazo n.º 5, construção também em pedra, de 2 pisos, com mais um piso, no seu último vão Sul, quase semelhando uma torre.
+        </p>
 <div>
 <p>
-                        Corresponde ao n.º 9 da Rua das Oussias, para onde tem a frontaria e serventia principais. Situa-se na esquina da Rua Pequena e terreiro das Oussias.
-                    </p>
+            Das 4 casas existentes quer no lado Nascente, quer no Poente, 3 e 4, respectivamente, são prazos do Cabido.
+        </p>
 </div>
-<h3>Casas:</h3>
+<h2>Casas:</h2>
 <div>
 <p>Número: 1</p>
 <p>Descrição: 
@@ -159,5 +147,8 @@
 
 
 </div>
+<h2>Atualmente:</h2>
+<img src='../MapaRuas-materialBase/atual/13-RuaPequena-Vista1.JPG' style='width:50%; height:auto; '/>
+<img src='../MapaRuas-materialBase/atual/13-RuaPequena-Vista2.JPG' style='width:50%; height:auto; '/>
 </body>
 </html>
