--- a/TCP1/html/RuadeStaMariaOuDoPoco.html
+++ b/TCP1/html/RuadeStaMariaOuDoPoco.html
@@ -3,109 +3,66 @@
 <h1>Rua de Sta. Maria ou do Poço</h1>
 <p>Número: 14</p>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-14-RuaDeSMariaOuDoPoco-Nascente.jpg'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-14-RuaDeSMariaOuDoPoco-Nascente.jpg' style='width:50%; height:auto; '/>
 <p>Legenda: Rua de Sta. Maria ou do Poço - vista Nascente.</p>
 </div>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-14-RuaDeSMariaOuDoPoco-Poente.jpg'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-14-RuaDeSMariaOuDoPoco-Poente.jpg' style='width:50%; height:auto; '/>
 <p>Legenda: Rua de Sta. Maria ou do Poço - vista Poente.</p>
 </div>
 <h2>Descrição:</h2>
 <div>
-<p>Corresponde ao n.º 17 da Rua das Oussias, para onde tem a frontaria
-                    e serventia principais.</p>
-</div>
 <div>
-<p>Estas casas, juntamente com o n.º 5
-                    foram construídas depois de 1543, em pertenças
-                    do n.º3.</p>
-</div>
+<p>Longa e importantíssima artéria que ligava a
+            Catedral com o terreiro de S. Paulo ou de S. Tiago
+            onde existia a principal porta da cidade virada a Sul,
+            a Porta de S. Tiago, depois chamada do Colégio.</p>
 <div>
-<p>Aqui vivem os vigário da Sé.
-                    O Cabido doou o n.º 5 (depois de 1703), e o n.º 6
-                    (depois de 1631), aos vigários da Sé, para sua
-                    residência. A casa n.º 5 foi construída em pertenças
-                    do n.º 4, a partir do referido ano de 1703.
-                </p>
-</div>
+<p>Rua de farta história foi um eixo fundamental da
+            cidade, só deixando de o ser a partir da data em que
+            o centro se mudou para o eixo rua do Souto-Arcada.</p>
 <div>
-<p>Foi construída depois de 1559, em pertenças que
-                    foram do n.º 6.</p>
-</div>
+<p>Na Idade Média era por aqui que se tinha acesso à
+            feira que se fazia algures, junto à porta da muralha,
+            no Terreiro de S. Tiago. Nela também talvez tivesse
+            havido um mercado de forragens, pois foi conhecida,
+            no séc. XIV, com o nome de rua da Erva.</p>
 <div>
-<p>O n.º 8 foi unida, num só prazo, ao n.º 9.</p>
-</div>
+<p>No séc. XV, instalou-se em casa logo pegada à actual
+            Igreja de Santiago, a Sinagoga, sendo arruada esta
+            artéria aos judeus, por decisão do Senado; a rua
+            passou então a ser conhecida como rua da Judiaria.</p>
 <div>
-<p>O emprazamento foi feito no ano de 1727.</p>
-</div>
+<p>Em 1465, pelo menos, foi decidido mudar os judeus
+            para uma rua que não ficasse tão próxima da Sé, pois
+            causava má impressão haver tantas moradas de «casas
+            de hereges» em local tão próximo da Catedral, ou
+            Igreja de Santa Maria de Braga.</p>
 <div>
-<p>A designação de «Casa do Poço» advém-lhe do poço que possuia junto à rua.</p>
-</div>
+<p>Começou então a ser conhecida por rua de Santa Maria
+            e, também, por rua da Judiaria Velha.</p>
 <div>
-<p>Foi construída depois de 1727, em pertenças do n.º 5,
-                    da rua Pequena.</p>
-</div>
+<p>Entretanto instalou-se no contíguo terreiro de
+            S. Tiago o Colégio de S. Paulo, onde existiram os
+            Estudos Gerais.</p>
 <div>
-<p>Correspondem ao n.º 7 da travessa que vai da Rua de Santa
-                    Maria ou do Poço para a do Forno, para onde têm a frontaria e
-                    serventia principais. O n.º 13 foi unido, num só prazo, ao n.º 14,
-                    depois do ano de 1561. Posteriormente, no ano de 1672, foram unidas
-                    ao n? 15. Em 1681, foram feitas escrituras de sub-emprazamento das
-                    casas 13 e 14, à face do n.º 15.</p>
-</div>
+<p>No séc. XVIII, tinha o nome de rua do Poço, que provinha de um poço municipal existente quase no
+            extremo Noroeste desta artéria que serviu desde a Idade Média até ao séc. XIX. A metade Sul, além da
+            rua das Travessas, foi também conhecida pelo nome de rua de S. Tiago.</p>
 <div>
-<p>Corresponde ao n.º 6 da travessa que vai da Rua de Santa
-                    Maria ou do Poço para a do Forno, para onde têm a frontaria e
-                    serventia principais.</p>
-</div>
+<p>Alargada em fins do séc. XIX, manterá a sua importância como eixo. O comércio, esse,
+            é que não voltou.</p>
 <div>
-<p>O emprazamento é de 1744. Foi construída em pertenças do
-                    n.º 16, depois do ano de 1524. Confronta, do sul, com o Hospital de 
-                    Santiago ou das Velhas, do morgado de Real.</p>
-</div>
+<p>Hoje perdeu quase todas as casas que vemos no Mappa; e algumas eram bem interessantes como, por
+            exemplo, a casa do prazo n.° 16, com uma bela janela de canto, renascentista.</p>
 <div>
-<p>Confronta, do sul, com casa foreira à comenda de Riofrio.</p>
-</div>
+<p>Das 18 casas existentes no lado Nascente e 14 do lado Poente eram prazos do
+            Cabido 16 e 11 respectivamente.</p>
 <div>
-<p>A casa é foreira à obra da Sé.
-                    São enfiteutas, os herdeiros de Manuel Nogueira, sapateiro,
-                    que pagam de foro 120 reis.</p>
+<p>Tendo recebido ainda outros nomes, foi em 24 de Fevereiro de 1944
+            designada de rua D. Gonçalo Pereira, que mantém.</p>
 </div>
-<div>
-<p>O enfiteuta herdara este prazo de seu tio,
-                    o Padre João Correia, vigário da Igreja de Santiago da Cividade.</p>
-</div>
-<div>
-<p>A este prazo pertencem as casas n.ºs 1 e 2 da travessa que vai da Rua do Poço para a de D. Gualdim.
-                    Confronta, do norte, com a dita travessa. No ano de 1609 o n.º 2 da mesma travessa foi unido, num só prazo, ao n.º 21.
-                </p>
-</div>
-<div>
-<p>O n.º 23 foi construído em pertenças do n° 22, no ano de 1543.</p>
-</div>
-<div>
-<p>O n.º 23 foi construído em pertenças do n° 22, no ano de 1543.</p>
-</div>
-<div>
-<p>O enfiteuta foi sobrinho e herdeiro do Cónego Bento da Silva Teles.</p>
-</div>
-<div>
-<p>Estiveram unidas, num só prazo, entre os anos de 1554 e 1670.</p>
-</div>
-<div>
-<p>Estiveram unidas, num só prazo, entre os anos de 1554 e 1670.</p>
-</div>
-<div>
-<p>Estão unidas, num só prazo, desde o ano de 1574.
-                    Em 1631 foi-lhe incorporada um casa, dízima a Deus, que o
-                    Mestre Escola, Cristóvão de Matos, doara ao Cabido. A casa n.º 30
-                    confronta, do norte, com casa foreira à capela de S. Bento, a qual
-                    fica situada debaixo do coro da Sé.</p>
-</div>
-<div>
-<p>Corresponde ao n.º 1 da Praça do Pão, para onde tem a frontaria e serventia principais.</p>
-</div>
-<h3>Casas:</h3>
+<h2>Casas:</h2>
 <div>
 <p>Número: 1</p>
 <p>Descrição: Corresponde ao n.º 17 da Rua das Oussias, para onde tem a frontaria
@@ -341,5 +298,8 @@
 
 
 </div>
+<h2>Atualmente:</h2>
+<img src='../MapaRuas-materialBase/atual/14-RuadeSta.MariaoudoPoáo-Vista1.JPG' style='width:50%; height:auto; '/>
+<img src='../MapaRuas-materialBase/atual/14-RuadeSta.MariaoudoPoáo-Vista2.JPG' style='width:50%; height:auto; '/>
 </body>
 </html>
