--- a/TCP1/html/CampoDeSSebastiaoEEmFrenteDoAcougue.html
+++ b/TCP1/html/CampoDeSSebastiaoEEmFrenteDoAcougue.html
@@ -3,32 +3,80 @@
 <h1>Campo de S. Sebastião e em Frente do Açougue</h1>
 <p>Número: 25</p>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-25-CampoDeSSebastiaoEEmFrenteDoAcougue-Poente-A.png'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-25-CampoDeSSebastiaoEEmFrenteDoAcougue-Poente-A.png' style='width:50%; height:auto; '/>
 <p>Legenda: Campo de S. Sebastião - Poente.</p>
 </div>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-25-CampoDeSSebastiaoEEmFrenteDoAcougue-Poente-B.png'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-25-CampoDeSSebastiaoEEmFrenteDoAcougue-Poente-B.png' style='width:50%; height:auto; '/>
 <p>Legenda: Em Frente do Assougue - Poente.</p>
 </div>
 <h2>Descrição:</h2>
 <div>
-<p>
-                        O enfiteuta é filho de  Garcia de Noronha de Mesquita e Melo e de sua mulher,
-                         D. Brites Josefa de Abreu Soares.
-                    </p>
-<p>
-                        Esta casa é cabeça do prazo do lugar ou casal de S. Sebastião. Foram feitas diversas escrituras,
-                        à face deste prazo, dos n.º1 a 13 da Rua do Arrabalde da Cruz de Pedra e de uma parte do n.º9 da Rua de S. Miguel o Anjo.
-                    </p>
-</div>
 <div>
 <p>
-                        em 1674 o n.º3 e as nove casas que constituiam este prazo foram unidas ao n.º2.
-                        A casa n.º2 confronta, do sul, com terreiro da casa n.º1 e, o n.º11, do norte, com casa foreira ao
-                        Hospital de S. Marcos
-                    </p>
+                As muralhas da cidade, do lado Oeste, eram rodeadas de dois grandes largos
+            abertos no tempo de D. Diogo de Sousa: o 
+            campo das Hortas e o campo de S. Sebastião. Ligando-os
+            e vencendo uma pequena rampa que talvez corresponda ao local de passagem da muralha romana,
+            havia a pequena rua denominada Em Frente do Açougue.
+        </p>
+<div>
+<p>
+                Separando-as, estava a rua de S.Miguel o Anjo, continuação natural da
+            rua de Maximinos. No ponto de encontro destas 4 vias situava-se a
+            capela de S. Miguel o Anjo, construída em data desconhecida e que 
+            D. Diogo de Sousa mandara «ladrilhar». Nos
+            séc. XVII e seguintes, eram nela que os novos Arcebispos se paramentavam,
+             antes de entrar na cidade.
+        </p>
+<div>
+<p>
+            Em 1750, esta zona era pouco habitada e já de arrabalde,com as casas construídas
+            sem qualquer conexão, havendo até algumas no campo de S. Sebastião
+             com aspecto de casa rural.
+        </p>
+<div>
+<p>
+            O Mappa mostra-nos só as construções do lado Poente, embora as houvesse ao lado contrário,
+            encostadas às muralhas.
+        </p>
+<div>
+<p>
+            Os açougues viriam a ser demolidos em 1839, embora já mal servissem há
+            muito tempo, desde que em 1787 se construiram um novo edifício para esse
+            fim, em terrnos imediatamente a Sul do prazo nº1, no campo de S. Sebastião.
+        </p>
+<div>
+<p>
+            Muitas transformações urbanísticas aqui aconteceram, mas todas nos séc. XIX e XX
+            , quando esta zona foi envolvida por novas ruas, tornado-a bem mais central.
+        </p>
+<div>
+<p>
+            Hoje já não podemos ver a bela varanda de canto renascentista(?) do prazo nº5, nem quase
+            nenhuma das outras casas, nem sequer a capela de S. Miguel o Anjo, transferida para outro local
+            da cidade em 1882.
+        </p>
+<div>
+<p>
+            De todo este conjunto apenas a terceira casa a Norte do prazo nº11, subsiste, com a
+            sua bela varanda de madeira em muitíssimo mau estado; e a casa grande que faz gaveto 
+            com a rua de S. Miguel o Anjo, então pertencente aos Cónegos Regrantes de Santa Cruz de Coimbra.
+            O cruzeiro, mandado fazer em 1621 por D. Afonso Furtado de Medonça para o campo das Hortas,
+            foi transferido em 1915 para o centro do campo de S. Sebastião.
+        </p>
+<div>
+<p>
+            Das 7 casas de Em Frente do Açougue 5 são do Cabido e das 17 do campo de S. Sebastião
+            são foreiras ao Cabido 9.
+        </p>
+<div>
+<p>
+            Actualmente, Em Frente do Açougue corresponde à avenida de S. Miguel o Anjo; o campo de
+                S. Sebastião é partilhado pelo campo das Carvalheiras e rua do Matadouro Velho.
+        </p>
 </div>
-<h3>Casas:</h3>
+<h2>Casas:</h2>
 <div>
 <p>Número: 1</p>
 <p>Enfiteuta: D. António de Noronha de Mesquita Soares</p>
@@ -62,5 +110,8 @@
 
 
 </div>
+<h2>Atualmente:</h2>
+<img src='../MapaRuas-materialBase/atual/25-CampoDeS.Sebasti∆oEEmFrenteDoAáougue-Vista1.JPG' style='width:50%; height:auto; '/>
+<img src='../MapaRuas-materialBase/atual/25-CampoDeS.Sebasti∆oEEmFrenteDoAáougue-Vista2.JPG' style='width:50%; height:auto; '/>
 </body>
 </html>
