--- a/TCP1/html/CampoECalcadaDeNossaSenhoraABranca.html
+++ b/TCP1/html/CampoECalcadaDeNossaSenhoraABranca.html
@@ -3,109 +3,46 @@
 <h1>Campo e Calçada de Nossa Senhora a Branca</h1>
 <p>Número: 42</p>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-42-CampoECalcadaDeNossaSenhoraABranca-Norte.jpg'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-42-CampoECalcadaDeNossaSenhoraABranca-Norte.jpg' style='width:50%; height:auto; '/>
 <p>Legenda: Campo e Calçada de Nossa Senhora a Branca- Norte.</p>
 </div>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-42-CampoECalcadaDeNossaSenhoraABranca-Sul.jpg'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-42-CampoECalcadaDeNossaSenhoraABranca-Sul.jpg' style='width:50%; height:auto; '/>
 <p>Legenda: Campo e Calçada de Nossa Senhora a Branca- Sul.</p>
 </div>
 <h2>Descrição:</h2>
 <div>
-<p>Pertencem ao prazo da casa n.º4. A casa n.º1 fica situada junto da fonte
-                    que está atrás da capela de N.Sra.</p>
-</div>
 <div>
-<p>Denominado «Casal e quinta de Sobrado».</p>
-<p>A enfiteuta sucedeu a António de Brito Freire,
-                    filho do Dr. Manuel Freire de Brito,
-                    da cidade de Braga.</p>
-<p>Pertencem a este prazo as casas n.º1 a 3 e 5 a 40 deste campo. No ano de 1506
-                    foi Senhor deste prazo o chantre de Braga, João Godis.</p>
-</div>
+<p>Grande espaço aberto, continuação natural de Santa Ana, onde, pelo menos
+            desde 1319, existia uma ermida, então com a invocação de Nossa Senhora da Carreira.             
+        </p>
 <div>
-<p>Pertencem ao n.º4. A casa n.º7 esteve dividida em duas metades entre os anos 1636 a 1662.</p>
-</div>
+<p>D.Diogo de Sousa reedificou esta igreja durante o 
+            séc. XVIII recebeu um retábulo para a capela mor (1745, alterado em 1782), sacrário (1756-57)
+        e fachada (1771).</p>
 <div>
-<p>Os herdeiros de Maria de Oliveira, viúva, pagam 300 reis ao n.º4.</p>
-</div>
+<p>Em 1750 este campo era ainda uma zona de arrabalde. As suas casas, quase todas de
+        dois pisos e dois vãos- embora haja uma ou outra de 3 pisos-, são na sua maioria, do 
+        tipo de porta com janela no piso térreo (62%). Algumas eram de maiores dimensões ou 
+        continham outra organização de fachada (casas n.º 11, 14, casa A Oeste da n.º26, 26 e 37,
+        esta com o terceiro piso todo recoberto de gelosias), bem como a existência de gelosias
+        na maioria das janelas (embora haja ainda bastantes aberturas que eram tapadas com portas de madeira),
+        não são bastantes para melhorar a qualidade da arquitectura deste campo.</p>
 <div>
-<p>Os herdeiros de António Correia, sombreireiro, casado com Natália Carvalho, pagam 300 reis ao n.º4.</p>
-</div>
+<p>Saliente-se ainda a casa do prazo n.º4, com o seu portão lateral terminado em cubos
+        sobrepostos por bolsas e «torre» com janelas de canto.</p>
 <div>
-<p>Os herdeiros de Manuel Rodrigues, sombreireiro, casado com Serafina João, pagam 400 reis e 1 galinha ao n.º4.</p>
-</div>
+<p>Este espaço só se desenvolveu cem anos mais tarde com o crescimento da cidade que
+        obrigou, em 1882, à abertura da actual rua de Santa Margarida.</p>
 <div>
-<p>Os herdeiros de Manuel Rodrigues, sombreireiro, casado com Serafina João, pagam 430 reis e 1 galinha ao n.º4.</p>
-</div>
+<p>Das 27 casas do lado Norte e 25 do Sul, eram prazos do Cabido
+        15 e 25, respectivamente.</p>
 <div>
-<p>Os herdeiros de João Lopes, sapateiro, casado com Isabel Francisca, pagam 300 reis e 1 galinha ao n.º4.</p>
+<p>Os alçados que vemos correspondem o do Norte à parte deste largo que vao desde a actual
+        rua do Sardoal até ao ponto Sudoeste da rua de Santa Margarida:
+        e o alçado Sul, hoje totalmente alterado, compreende o espaço entre as ruas de Restauração e 31 de Janeiro.</p>
 </div>
-<div>
-<p>Os herdeiros de Manuel Pinheiro, da cidade de Lisboa, casado com Ana da Silva, pagam 600 reis e 1 galinha ao n.º4.</p>
-</div>
-<div>
-<p>Os herdeiros de Gonçalo Antunes, sombreireiro, casado com Maria Francisca, pagam 305 reis e 1 galinha ao n.º4.</p>
-</div>
-<div>
-<p>Os herdeiros do Padre João Velho pagam 500 reis e 1 galinha ao n.º4.</p>
-</div>
-<div>
-<p>Os herdeiros de António da Silva, caldeireiro, casado com Margarida de Oliveira, pagam 300 reis ao n.º4.</p>
-</div>
-<div>
-<p>Os herdeiros de Francisco Martins, sombreireiro, casado com Gregória Fernandes, pagam 300 reis ao n.º4.</p>
-</div>
-<div>
-<p>Os herdeiros do Padre Manuel Mendes pagam 390 reis ao n.º4.</p>
-</div>
-<div>
-<p>Os herdeiros de Estêvão Álvares, sombreireiro, casado com Maria Vaz, pagam 400 reis ao n.º4.</p>
-</div>
-<div>
-<p>Os herdeiros de Padre Manuel Pinheiro pagam 500 reis ao n.º4.</p>
-<p>Estas casas encontram-se unidas desde o ano de 1583.</p>
-</div>
-<div>
-<p>Os herdeiros de José Francisco, sombreireiro, pagam 440 reis ao n.º4.</p>
-<p>Estas casas encontram-se unidas desde o ano de 1583.</p>
-</div>
-<div>
-<p>Os herdeiros de António Dias, sombreireiro, casado com Apolónia Rodrigues, pagam 450 reis e 1 galinha ao n.º4.</p>
-<p>Encontram-se unidas desde o ano de 1583.</p>
-</div>
-<div>
-<p>Os herdeiros de Roque Martins Leite, casado com Maria Gomes, pagam 110 reis e 1 galinha ao n.º4.</p>
-<p>Encontram-se unidas desde o ano de 1543.</p>
-</div>
-<div>
-<p>Os herdeiros de António Barros, alfaiate, casado com Maria Soares, pagam 50 reis ao n.º4.</p>
-</div>
-<div>
-<p>Os herdeiros de Maria Ferreira, filha de Cristóvão Ferreira, pagam 50 reis ao n.º4.</p>
-</div>
-<div>
-<p>Os herdeiros de Geraldo Marques, casado com Luzia Francisca, pagam 50 reis ao n.º4.</p>
-</div>
-<div>
-<p>Os herdeiros de Inês Durães, solteira, pagam 35 reis ao n.º4.</p>
-</div>
-<div>
-<p>Os herdeiros de João Martins, sombreireiro, casado com Maria Pinto, pagam 40 reis ao n.º4.</p>
-<p>Esta casa encontra-se separada do n.º31 desde o ano de 1629.</p>
-</div>
-<div>
-<p>Os herdeiros de Álvaro Pinto, alfaiate, casado com Ângela Antónia, pagam 40 reis ao n.º4.</p>
-</div>
-<div>
-<p>Os herdeiros de Padre Teotónio de Sousa pagam 30 reis ao n.º4.</p>
-</div>
-<div>
-<p>Os herdeiros de Domingos Fernandes, serralheiro, casado com Isabel Gonçalves, pagam 20 reis e meio frangão ao n.º4.</p>
-<p>Encontram-se separadas da n.º34 desde o ano de 1619.</p>
-<p>A casa n.º40 confronta, do norte, com casa foreira à capela de D.Gonçalo Pereira.</p>
-</div>
-<h3>Casas:</h3>
+<h2>Casas:</h2>
 <div>
 <p>Número: 1,2 e 3</p>
 <p>Descrição: 
@@ -389,5 +326,8 @@
 
 
 </div>
+<h2>Atualmente:</h2>
+<img src='../MapaRuas-materialBase/atual/42-CampoECaláadadeNossaSenhoraaBranca-Vista1.JPG' style='width:50%; height:auto; '/>
+<img src='../MapaRuas-materialBase/atual/42-CampoECaláadadeNossaSenhoraaBranca-Vista2.JPG' style='width:50%; height:auto; '/>
 </body>
 </html>
