--- a/TCP1/html/PonteDeGuimaraes.html
+++ b/TCP1/html/PonteDeGuimaraes.html
@@ -3,77 +3,31 @@
 <h1>Ponte de Guimarães</h1>
 <p>Número: 39</p>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-39-PonteDeGuimaraes-Norte.jpg'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-39-PonteDeGuimaraes-Norte.jpg' style='width:50%; height:auto; '/>
 <p>Legenda: Ponte de Guimarães - Norte</p>
 </div>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-39-PonteDeGuimaraes-Poente.jpg'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-39-PonteDeGuimaraes-Poente.jpg' style='width:50%; height:auto; '/>
 <p>Legenda: Ponte de Guimarães - Poente</p>
 </div>
 <h2>Descrição:</h2>
 <div>
-<p>Pertence ao nº 50 da Rua da Ponte de Guimarães, para onde tem frontaria e serventia principais.</p>
-</div>
 <div>
-<p>Paga 60 reis ao enfiteuta do prazo de metade do Casal dos Galos que foi de Mateus Rodrigues.</p>
-</div>
+<p>Parte terminal da longa artéria que, sensivelmente em linha recta, descia a Arcada para a ponte sobre o rio Este.</p>
 <div>
-<p>Paga 50 reis ao enfiteuta do prazo de metade do Casal dos Galos que foi de Mateus Rodrigues.</p>
-</div>
+<p>Zona rural por excelência, tinha no seu termo uma ponte quinhentista de um só arco, canopial, e que infelizmente foi destruída em data desconhecida.</p>
 <div>
-<p>Os herdeiros de Diogo Martins, casado com Helena Antónia, pagam 25 reis ao enfiteutaa do prazo de metade do Casal dos Galos que foi de Mateus Rodrigues, conforme o subemprazamento feito em 1631.</p>
-</div>
+<p>Os dois alçados que vemos no Mappa não são, os dois lados da rua, como à primeira vista poderá parecer; o Norte vai corresponder à parte Oeste do actual largo do Senhor dos Aflitos ou, segundo a toponímia popular, das Latinhas: e o Poente é a parte final da avenida da Liberdade, lado Oeste entre a Rua Conselheiro Lobato e o rio.</p>
 <div>
-<p>Paga, ao enfiteuta do prazo de metade do Casal dos Galos foro que foi de Mateus Rodrigues.</p>
-</div>
+<p>Nestes alçados onde coexistem habitações de dois pisos (52,7%) alternando com outras de um só piso (47,2%), e uma única de três pisos, toda a ruralidade da zona está bem patente: casas baixas, com a porta de entrada ladeada de uma janela (55,5%), janelas vazadas que seriam tapadas por portas de madeira, desalinhamento da linha das fachadas, etc.</p>
 <div>
-<p>Paga 80 reis ao enfiteuta do prazo de metade do Casal dos Galos que foi de Mateus Rodrigues.</p>
-</div>
+<p>Constrastando há um excelente edifício de três pisos, em pedra, do séc. XVII, contido em duas fortes pilastras, com portas e janelas com "moldura" de pedra, almofadas sob as janelas do piso nobre e três óculos magnificamente trabalhados no 2º andar.</p>
 <div>
-<p>Paga 80 reis ao enfiteuta do prazo de metade do Casal dos Galos que foi de Mateus Rodrigues.</p>
-</div>
+<p>Como elemento curioso na rua há o forno(?) de pedra exterior à casa, no prazo nº 38.</p>
 <div>
-<p>Paga 80 reis ao enfiteuta do prazo de metade do Casal dos Galos que foi de Mateus Rodrigues. Confronta, do nascente, com a cangosta que vai para esta casa e para o nº 9.</p>
+<p>As 23 casas do lado Norte e 15 do Poente são todas prazos do Cabido.</p>
 </div>
-<div>
-<p>Paga 140 reis ao nº 17 da Rua do Paio Manta e Lages. A casa e quintal confrontam de poente, com a cangosta e serventia que passa entre esta casa e nº 8.</p>
-</div>
-<div>
-<p>Paga 140 reis ao nº 17 da Rua do Paio Manta e Lages</p>
-</div>
-<div>
-<p>Paga 140 reis ao nº 17 da Rua do Paio Manta e Lages</p>
-</div>
-<div>
-<p>Paga 2000 reis ao enfiteuta do prazo da metade do casal e moínhos do Salgueiro, que foi de João Gomes</p>
-</div>
-<div>
-<p>Os herdeiros de Manuel Dias, moleiro, casado com Maria Antónia, subenfiteuta do nº30, pagam por estas 7 casas, 3220 reis e 2 galinhas ao nº 17 da Rua do Paio Manta e Lages, conforme subemprazamento feito no ano de 1606.</p>
-<p>A casa nº28 defronta, do sul, com o Rio Este.</p>
-</div>
-<div>
-<p>Os herdeiros de Gonçalo Ferreira, cirgueiro, casado com Catarina Nogueira, pagam 1750 reis e 4 galinhas ao n° 17 da Rua Paio Manta e Lages. O portal n° 40 é serventia do campo ou quintal da casa nº 35.</p>
-</div>
-<div>
-<p>Os herdeiros de Brás Antunes, carpinteiro, casado com Maria Dias, pagam 367 reis ao nº 17 da Rua Paio Manta e Lages.</p>
-</div>
-<div>
-<p>Os herdeiros de Brás Antunes, carpinteiro, casado com Maria Dias, pagam 367 reis ao n° 17 da Rua Paio Manta e Lages.</p>
-</div>
-<div>
-<p>Os herdeiros de Brás Antunes, carpinteiro, casado com Maria Dias, pagam 367 reis ao nº 17 da Rua Paio Manta e Lages.</p>
-</div>
-<div>
-<p>Os herdeiros de Gonçalo Pires, carpinteiro, pagam 500 reis e 1 galinha ao n° 17 da Rua Paio Manta e Lages.</p>
-</div>
-<div>
-<p>Os herdeiros de Geraldo Dias, carpinteiro, casado com Maria Fernandes, pagam 100 reis ao n° 17 da Rua Paio Manta e Lages.</p>
-</div>
-<div>
-<p>Os herdeiros de Geraldo Dias, carpinteiro, casado com Maria Fernandes, pagam 100 reis ao n° 17 da Rua Paio Manta e Lages.</p>
-<p>Confronta, do sul, com a dita rua.</p>
-</div>
-<h3>Casas:</h3>
+<h2>Casas:</h2>
 <div>
 <p>Número: 1</p>
 <p>Enfiteuta: João de Magalhães de Araújo Costa, enfiteuta principal do prazo da metade do Casal dos Galos, que foi de Mateus Rodrigues</p>
@@ -236,5 +190,8 @@
 
 
 </div>
+<h2>Atualmente:</h2>
+<img src='../MapaRuas-materialBase/atual/39-PonteDeGuimar∆es-Vista1.JPG' style='width:50%; height:auto; '/>
+<img src='../MapaRuas-materialBase/atual/39-PonteDeGuimar∆es-Vista2.JPG' style='width:50%; height:auto; '/>
 </body>
 </html>
