--- a/TCP1/html/PracaDoPao.html
+++ b/TCP1/html/PracaDoPao.html
@@ -3,44 +3,29 @@
 <h1>Praça do Pão</h1>
 <p>Número: 4</p>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-04-PracaDoPao-norte.PNG'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-04-PracaDoPao-norte.PNG' style='width:50%; height:auto; '/>
 <p>Legenda: Praça do Pão - vista norte.</p>
 </div>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-04-PracaDoPao-sul.PNG'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-04-PracaDoPao-sul.PNG' style='width:50%; height:auto; '/>
 <p>Legenda: Praça do Pão - vista sul.</p>
 </div>
 <h2>Descrição:</h2>
 <div>
-<p>Confronta, de nascente, com a Rua do Poço.</p>
-</div>
 <div>
-</div>
+<p>Pequena praça em frente à fachada da Sé, que ao longo dos séculos foi tendo uma vida e importância diferentes, mas sempre descendente.</p>
 <div>
-<p>As casas nº 5 e 6, passaram a constituir um único prazo, em 1702. Em 1789, o nº 4 foi também integrado no mesmo prazo.</p>
-</div>
+<p>Aberta talvez no séc. XV, resultou da destruição da rua dos Açougues, pequena artéria que então ligava as actuais rua D. Gonçalo Pereira e D. Gualdim Pais. Nessa data instalou-se nela a Praça do Pão. No tempo de D. Diogo de Sousa construiu-se, no ângulo que esta praça faz com a rua de Maximinos, o novo edifício da Câmara Municipal, que seria destruído nos inícios do séc. XIX (No Mappa está na rua de D. Gualdim).</p>
 <div>
-<p>As casas nº 5 e 6, passaram a constituir um único prazo, em 1702. Em 1789, o nº 4 foi também integrado no mesmo prazo.</p>
-</div>
+<p>A partir de meados do séc. XVIII, com a mudança da vida comercial para a rua do Souto e zona exterior da porta que tem o mesmo nome, com a erecção da ala barroca do Palácio dos Arcebispos e, defrontando-a, com o novo edifício da Câmara (1755), a praça do Pão irá perdendo toda a sua importância comercial e política.</p>
 <div>
-<p>O enfiteuta sucedeu a seu pai, Francisco de Araújo, o qual era filho de José de Araújo, barbeiro, e de sua mulher Ana Maria.</p>
-</div>
+<p>Em 1868 foi projectado o alargamento da rua de Maximinos, que rapidamente foi levado a cabo, recebendo a nova rua a largura total da praça do Pão. A partir daí deixou de fazer sentido a existência de duas artérias diferentes, sendo este largo integrado na nova rua que, desde 26/11/1925, se passou a chamar rua D. Paio Mendes.</p>
 <div>
-<p>O enfiteuta sucedeu a seu pai, Francisco de Araújo, o qual era filho de José de Araújo, barbeiro, e de sua mulher Ana Maria.</p>
-</div>
+<p>Hoje ainda se conservam algumas das casas existentes no Mappa. Mas as mais interessantes, as dos prazos 4-6 e 13-14 já desapareceram.</p>
 <div>
-<p>Esta casa possui frontaria para a Rua de D. Gualdim. Igual pensão é paga ao Hospital de S. Marcos.</p>
+<p>Das 5 casas do lado Norte e 9 do lado Sul eram prazos do Cabido 4 e 9, respectivamente.</p>
 </div>
-<div>
-<p>A parte do poente é foreira ao Hospital de S. Marcos.</p>
-</div>
-<div>
-<p>Encontram-se unidas num único prazo desde o ano de 1660.</p>
-</div>
-<div>
-<p>No ano de 1660 foi incorporado neste prazo uma torre pertencente ao nº 16, e, no ano de 1724, um quintal do nº 2 da Rua dos Açougues Velhos.</p>
-</div>
-<h3>Casas:</h3>
+<h2>Casas:</h2>
 <div>
 <p>Número: 1</p>
 <p>Enfiteuta: Maria Barbosa, viúva de Manuel Fernandes, alfaiate do Campo de S. Sebastião</p>
@@ -147,5 +132,8 @@
 <p>Enfiteuta: José Luís. alfaiate</p>
 <p>Foro: 260 reis e 1 capão</p>
 </div>
+<h2>Atualmente:</h2>
+<img src='../MapaRuas-materialBase/atual/4-PraáaDoP∆o-Vista1.JPG' style='width:50%; height:auto; '/>
+<img src='../MapaRuas-materialBase/atual/4-PraáaDoP∆o-Vista2.JPG' style='width:50%; height:auto; '/>
 </body>
 </html>
