--- a/TCP1/html/RuaDaConega.html
+++ b/TCP1/html/RuaDaConega.html
@@ -3,197 +3,53 @@
 <h1>Rua da Cónega</h1>
 <p>Número: 58</p>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-58-RuaDaCónega-norte.jpg'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-58-RuaDaCónega-norte.jpg' style='width:50%; height:auto; '/>
 <p>Legenda: RuaDaCónega - norte.</p>
 </div>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-58-RuaDaCónega-sul.jpg'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-58-RuaDaCónega-sul.jpg' style='width:50%; height:auto; '/>
 <p>Legenda: RuaDaCónega- sul.</p>
 </div>
 <h2>Descrição:</h2>
 <div>
-<p> A casa é a cabeça do prazo, denominado,
-                        "Casal da Porta".</p>
-<p>A frontaria principal situa-se no Campo da Vinha. A
-                        frontaria da rua dos Biscainhos corresponde ao nº2. Paga 400
-                        reis e 7 alqueires de trigo ao enfiteuta principal da
-                        Quinta da Cónega. É subenfiteuta  Constantino da
-                            Cunha Sottomayor, Fidalgo da Casa Real.</p>
-</div>
 <div>
-<p>Quintal da casa Nº1.</p>
-</div>
+<p>Longa rua, a maior do Mapa, que saindo de Braga junto á casa dos
+                Sotomaior descia em direção à freguesia de
+            S.Jerónimo de Real. Há quem ponha a hipótese do seu traçado coincidir
+            com o da via romana Braga-Lugo.</p>
 <div>
-<p> Pertencem à casa ~º1, a cujo enfiteuta se paga foro.</p>
-</div>
+<p>Aberta em data controversa para os historiadores bracarenses (periodo romano,
+            séc.XII, séc. XVI), aparece também nos ínicios dos séc. XVII
+            com o nome de rua Nova da Cónega. É esta a data (ou ainda de finais do
+            séc.XVI ), em que foi construida a casa dos Sotomaior.</p>
 <div>
-<p> Portal de serventia do prazo ou escritura do Casal da Porta (casa
-                        nº1).</p>
-</div>
+<p> Em 1750, estava dividida em duas partes bem distintas:o terço Este,
+            isto é, toda a zona da rua que compreendia as casas 1 a 27 (até ao portão da casa das
+            Hortas, dos Ruby); 145 a 171; e a restante.</p>
 <div>
-<p> Paga foro ao enfiteuta do prazo da quinta da Cónega.
-                        Confronta, do poente, com caminho de serventia, para as casas principais da
-                        quinta da Cónega.</p>
-</div>
+<p>No primeiro núcleo, mais próximo do centro da cidade, predominam os edifícios dedois
+            pisos. Para além da casa dos Sotomaior havia alguns edifícios de
+            boa qualidade, (4,5,7,12,20,156,158,165), modernos (5,7,12,156), com
+            gelosias(5,158,165), ou até, os únicos de três pisos de toda esta rua
+            (4,5,6,12,15,167,170 esta com um 4ºpiso recuado,171).</p>
 <div>
-<p> Paga foro ao enfiteuta da quinta da Cónega.</p>
-</div>
+<p> A parte restante, com um declive pronunciado, tinha as suas construções muito mais
+            simples, com um desenho de fachada tradicional, onde se alternavam casas com dois pisos
+            com outras térreas, em proporções quase iguais, e onde havia, naturalmente, muitos
+            edifícios do tipo de porta ladeada de janela. As janelas eram na sua quase totalidade
+            vazadas, raras havendo do tipo bracarense, sendo apenas duas protegidas com gelosias
+            (nºs 100 e 117,esta uma casa de pedra e de boa qualidade).)</p>
 <div>
-<p> Paga foro ao enfiteuta da quinta da Cónega.</p>
-</div>
+<p> De realçar ainda que aqui existia uma pequena capela, dedicada ao Senhor das Âncias,
+            erecta em 1735 pela população; e a fonte de S.Tiago (entre os prazos 61 e
+            62) mandada fazer por  D.Diogo de Sousa.</p>
 <div>
-<p>
-                         Maria da Silva filha de  António
-                            Silva, paga 400 reis ao enfiteuta da
-                        Quinta da Cónega.</p>
-</div>
+<p>Todas as suas 93 casas do lado Norte e 57 do Sul eram prazos do Cabido.</p>
 <div>
-<p>Pertencem à Quinta da Cónega, a cujo enfiteuta se paga
-                        foro. A casa nº41 confronta, do nascente, com a capela do Senhor das
-                        Ânsias.</p>
-<p>O nº44 corresponde a um quintal.</p>
+<p>É actualmente, mais conhecida pela designação tradicional de rua da
+            Cónega, do que pela oficial de rua da Boavista.</p>
 </div>
-<div>
-<p>Quintal ou campo da Quinta da Cónega.</p>
-</div>
-<div>
-<p>Porta de serventia da Quinta da Cónega.</p>
-</div>
-<div>
-<p>Campo da Quinta da Cónega.</p>
-</div>
-<div>
-<p>Pertencem à Quinta da Cónega, a cujo enfiteuta se paga a
-                        foro.</p>
-</div>
-<div>
-<p>Campo da Quinta da Cónega.</p>
-</div>
-<div>
-<p>Campo da Quinta da Cónega.</p>
-</div>
-<div>
-<p>Paga foro ao enfiteuta da Quinta da Cónega.</p>
-</div>
-<div>
-<p>Paga foro ao enfiteuta da Quinta da Cónega.</p>
-</div>
-<div>
-<p>Paga foro ao enfiteuta da Quinta da Cónega.</p>
-<p>Corresponde a um campo e casa.</p>
-</div>
-<div>
-<p>Campo da Quinta da Cónega.</p>
-</div>
-<div>
-<p>João Fernandes, lavrador, casado com Felícia Fernandes , paga 2300 reis e 2 galinhas, por duas
-                        casas e dois chãos para casas, ao enfiteuta do prazo da
-                        quinta da Cónega.</p>
-<p>Foram construidas no lugar daBouça da Coturela.</p>
-<p>A casa nº67 confronta, do poente, com o campo nº21 da
-                        Estrada de Real.</p>
-</div>
-<div>
-<p>Manuel Dias da freguesia de
-                        S.Jerónimo de Real, casado com Caetana da
-                            Silva, paga 2400 reis e 2 galinhas ao enfiteuta do prazo da
-                        Quinta da Cónega.</p>
-<p>Encontram-se unidas, numa só morada, desde o ano de
-                        1730.</p>
-</div>
-<div>
-<p>Pedro Rodrigues, casado com  Maria
-                        Machado, e sua mãe, Antónia Francisca,
-                        viúva, pagam 4000 reais e 2 galinhas ao enfiteuta da
-                        Quinta da Cónega.</p>
-</div>
-<div>
-<p>Para foro ao enfiteuta do prazo da Quinta da Cónegae pelo
-                        quintal da casa, ao subenfiteuta da
-                        Quinta da Porta(casa nº1)</p>
-</div>
-<div>
-<p>Pertecem à casa nº1, a cujo enfiteuta se paga foro.</p>
-<p>o nº119 confronta com o caminho que "vai pela Coturela para
-                        o convento de S.Frutuoso". </p>
-</div>
-<div>
-<p>Pertencem à da Quinta da Cónega cujo enfiteuta se paga
-                        foro.></p>
-<p>O nº120 confronta, do poente, com o caminho que "vai pela
-                        Coturela para o convento de S.Frutuoso".
-                    </p>
-</div>
-<div>
-<p> Os herdeiros de Pedro de Araújo, mercador, casado
-                        com Rosa Maria Ferreira, pagam 3700 reis e 4 galinhas
-                        ao enfiteuta do prazo da Quinta da Cónega.</p>
-<p>Encontram-se unidas, numa só escritura deprazo desde o ano de
-                        1610.</p>
-</div>
-<div>
-<p> Os herdeiros de  Francisco Martins, tratante, casado
-                        com Isabel Gonçalves, pagam 3000 reis e 3 galinhas ao
-                        enfiteuta do prazo da Quinta da Cónega.</p>
-<p>Encontram-se unidas, numa só escritura deprazo desde o ano de
-                        1608.</p>
-</div>
-<div>
-<p> Os herdeiros de  Gonçalo Correia, lavrador, casado
-                        com Maria Francisca, pagam 2000 reis e 2 galinhas ao
-                        enfiteuta do prazo da Quinta da Cónega.</p>
-<p>Encontram-se unidas, numa só escritura deprazo desde o ano de
-                        1608.</p>
-</div>
-<div>
-<p> Os herdeiros de  António Dias, armeiro, casado
-                        com Maria Ramalho, pagam 2000 reis e 2 galinhas ao
-                        enfiteuta do prazo da Quinta da Cónega.</p>
-<p>Encontram-se unidas, numa só escritura deprazo desde o ano de
-                        1608.</p>
-</div>
-<div>
-<p> Os herdeiros de  Domingos Gonçalves, relojoeiro, casado
-                        com Helena Fernandes, pagam 4000 reis e 4 galinhas ao
-                        enfiteuta do prazo da Quinta da Cónega.</p>
-<p>Encontram-se unidas, numa só escritura deprazo desde o ano de
-                        1608.</p>
-</div>
-<div>
-<p> Os herdeiros de  Pedro Fernandes, alfaiate, casado
-                        com Maria Martins, pagam 2000 reis e 2 galinhas ao
-                        enfiteuta do prazo da Quinta da Cónega.</p>
-<p>Encontram-se unidas, numa só escritura deprazo desde o ano de
-                        1608.</p>
-</div>
-<div>
-<p> Os herdeiros de  Jerónimo Barreiros, casado
-                        com Isabel da Cunha, pagam 3000 reis e 3 galinhas ao
-                        enfiteuta do prazo da Quinta da Cónega.</p>
-</div>
-<div>
-<p> Os herdeiros de  Manuel Martins,tratante, casado
-                        com  Maria Pereira, pagam 2000 reis e 2 galinhas ao
-                        enfiteuta do prazo da Quinta da Cónega.</p>
-</div>
-<div>
-<p> Os herdeiros de  Diogo Gonçaves Pinheiro, casado
-                        com  Catarina Álvares, pagam 2000 reis e 1 galinha ao
-                        enfiteuta do prazo da Quinta da Cónega.</p>
-</div>
-<div>
-<p> Os herdeiros de  António Borges pagam 2000 reis e 2 galinhas ao ao
-                     enfiteuta da Quinta da Cónega.</p>
-</div>
-<div>
-<p>Pertencem à quinta da Cónega, a cujo enfiteuta se paga foro.</p>
-</div>
-<div>
-<p> Os herdeiros de  Agostinho Leitão, casado
-                        com  Paula da Costa, pagam 2000 reis e 2 galinhas ao
-                        enfiteuta da Quinta da Cónega. A casa nº171 confronta, do nascente, com a cangosta do Pópulo.</p>
-</div>
-<h3>Casas:</h3>
+<h2>Casas:</h2>
 <div>
 <p>Número: 1</p>
 <p>Enfiteuta: Sebastião de Faria Gusmão, enfiteuta principal da quinta da Cónega</p>
@@ -629,5 +485,8 @@
 
 
 </div>
+<h2>Atualmente:</h2>
+<img src='../MapaRuas-materialBase/atual/58-RuadaC¢nega-Vista2.JPG' style='width:50%; height:auto; '/>
+<img src='../MapaRuas-materialBase/atual/58-RuadaC¢nega-Vista1.JPG' style='width:50%; height:auto; '/>
 </body>
 </html>
