--- a/TCP1/html/RuaDasOucias.html
+++ b/TCP1/html/RuaDasOucias.html
@@ -3,58 +3,48 @@
 <h1>Rua das Oucias</h1>
 <p>Número: 5</p>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-05-RuaDasOucias.png'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-05-RuaDasOucias.png' style='width:50%; height:auto; '/>
 <p>Legenda: Rua das Oucias.</p>
 </div>
 <h2>Descrição:</h2>
 <div>
-<p>A casa é foreira aos Padres coreiros. O censo é pago por Domingos José de Melo.</p>
-</div>
 <div>
-<p>Corresponde ao nº1 da Rua de S.João, para onde tem a frontaria e serventia principais.</p>
-</div>
+<p>
+            Tortuosa rua que contornava as traseiras e fachada lateral Sul da Sé.</p>
 <div>
-<p>Corresponde ao nº 11 da Rua de S. João, para onde tem a frontaria e serventia principais. 
-            </p>
-</div>
+<p>
+            Longa e atribulada história tem esta via, que, no espaço curto, quase de notícia, como convém a esta edição, não pode ser aqui contada. </p>
 <div>
-<p>Confronta, do nascente, com casa de herdade dízima a Deus. Foi unida, em 1621, à casa nº 6.</p>
-</div>
+<p>   
+            Formada, naturalmente, pelo isolamento que os monumentos religiosos sempre têm, as suas casas foram lentamente surgindo. </p>
 <div>
-<p>Confronta, do nascente, com casa de herdade dízima a Deus. Foi unida, em 1621, à casa nº 6.</p>
-</div>
+<p>
+            No ponto de encontro desta rua com a rua do Souto desembocava o «cano» que, vindo de lugar desconhecido, abastecia a principal fonte da cidade medieval,
+            a fonte de S. Geraldo, que por aqui se deveria localizar. Junto, no local onde está a Capela da Glória, existiu a casa do Conselho Municipal demolida para 
+            dar lugar àquela capela.</p>
 <div>
-<p>Confronta, do poente, com o Terreiro das Oussias. António Xavier Rebelo, tercenário, paga de censo 160 reis.    </p>
-</div>
+<p>Com D. Diogo de Sousa, em 1509, a capela mor da Sé foi profundamente alterada, e, embora não tenha avançado sobre os alicerces da velha 
+            construção medieval, deu-lhe outra leveza, que o manuelino, nos seus rendilhados, sempre tem. Poucos anos após o mesmo arcebispo mandou abrir a rua de S. João ,
+            permitindo uma ligação directa com a Porta de S. João.</p>
 <div>
-<p>O enfiteuta possuia esta casa por sucessão de Frutuoso Brandão Pereira e de Maria Josefa da Costa, sua mulher. Confronta, do sul, com o nº 2 da Rua Pequena.</p>
-</div>
+<p>No pequeno «rexio» existente do lado Sul da Sé, entre o braço do transepto e a fachada, existiu, na Idade Média,
+            uma feira de olarias. </p>
 <div>
-<p>Confronta, do norte, com o Terreiro das Oussias; do sul, com o nº 8, da Rua Pequena; do nascente, com a mesma Rua Pequena e, 
-                    do poente, com quintal de uma casa da Rua de Sta. Maria ou do Poço. </p>
-<p>Foi demolida, depois do ano de 1750, "para a obra da sacristia da Sé,
-                    por conta da fábrica da mesma Sé".</p>
-</div>
+<p>Toda esta parte foi violentamente destruída nos anos quarenta do nosso século, para «limpar esta zona socialmente tão degradada» criando-se o Rocio 
+            da Sé. E na sequência dessa obra de «limpeza» constroem-se, em «estilo Português Suave», o edifício do Tribunal do Trabalho/Delegação Escolar e um outro, particular; e, 
+            passados vinte anos, foi destruído um grande e nobre edifício setecentista, para se construir a Residência Académica.</p>
 <div>
-<p> Não aparecem desenhadas no Mapa por terem sido demolidas "para a obra da sacristia da Sé". A casa nº 10 situava-se no canto desta rua (parte nascente) e confrontava do norte, defronte da Sé, com a Rua das Oussias e, do nascente com o caminho que se dirigia das Oussias para a Rua Pequena. A casa nº 11 confronta, do nascente, com a nº 10. </p>
-</div>
+<p>Hoje a rua conserva todos os seus belíssimos edifícios na zona 
+            correspondente à rua de Nossa Senhora do Leite. Na parte Sul toda a malha urbanística e escala arquitectónica desapareceu com a introdução do novo e amplo Rocio da Sé, que, no Mappa
+            apenas conserva uma casa. </p>
 <div>
-<p> Foi comprada pela Fábrica da Sé que a mandou demolir depois de 1750, para a "obra da sacristia".</p>
-<p>Confronta, do nascente, com o Terreiro das Oussias e, do norte com o mesmo Terreiro e com o nº 13.</p>
-</div>
+<p>Das 15 casas existentes, 12 eram prazos do Cabido.</p>
 <div>
-<p>A enfiteuta sucedeu a seu irmão, o Reitor de Freitas,José Ferreira Petiz,  sendo ambos filhos de Francisco Gonçalves Petiz, pasteleiro.</p>
-<p> Confronta, do nascente, com o nº 14; do norte e poente com a rua e, do sul com a nº 12.</p>
+<p>A designação de Oucias (e aparecem também as designações de Ussias e Adussias), 
+            será talvez uma corrupção de ousia, isto é capela-mor. E a de Nossa Senhora do Leite é devida à belíssima imagem, da escola coimbrã do séc. XVI, que foi oferecida por D. Diogo de Sousa .
+        </p>
 </div>
-<div>
-<p> Confronta, do nascente, com o nº 13 e, do poente com o nº 15.</p>
-<p> Foi construída em 1547, em pertenças da casa nº 13.</p>
-</div>
-<div>
-<p>A casa nº16 foi unida ao nº17, no ano de 1667 . O nº17 confronta com a Rua do Poço .
-                </p>
-</div>
-<h3>Casas:</h3>
+<h2>Casas:</h2>
 <div>
 <p>Número: 1</p>
 <p>Enfiteuta: None</p>
@@ -184,5 +174,8 @@
 
 
 </div>
+<h2>Atualmente:</h2>
+<img src='../MapaRuas-materialBase/atual/5-RuaDasOucias-Vista1.JPG' style='width:50%; height:auto; '/>
+<img src='../MapaRuas-materialBase/atual/5-RuaDasOucias-Vista2.JPG' style='width:50%; height:auto; '/>
 </body>
 </html>
