--- a/TCP1/html/RuaDeInfias.html
+++ b/TCP1/html/RuaDeInfias.html
@@ -3,131 +3,33 @@
 <h1>Rua de Infias</h1>
 <p>Número: 55</p>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-55-RuaDeInfias-norte.jpg'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-55-RuaDeInfias-norte.jpg' style='width:50%; height:auto; '/>
 <p>Legenda: Rua de Infias - vista norte.</p>
 </div>
 <h2>Descrição:</h2>
 <div>
-<p>Antiga cabeça do prazo, denominado, 1.ª metade do casal do Lagarto. Pertencem a este prazo os n.ºs 1 a 35 da 
-                        Rua de Infias.</p>
-</div>
 <div>
-<p>Antónia Soares, casada com Luís Francisco de Paiva, branqueador, 
-                        paga 2000 reis ao enfiteuta do prazo da l.ª metade do casal do Lagarto.</p>
-</div>
+<p>Extensa rua que partindo da rua da Escoura ia em direcção à casa de Vale Flor ou de Infias. Aberta em campo plano, estendia-se por 
+            terrenos da primeira metade do casal do Lagarto, no que respeita aos edifícios foreiros ao Cabido, que representavam cerca de dois terços 
+            desta artéria, do lado Oeste.</p>
 <div>
-<p>José de Freitas, cabeiro, casado com Maria da Silva, paga 2000 reis 
-                        ao enfiteuta do prazo da l.ª metade do casal do Lagarto.</p>
-</div>
+<p>Rua de arrabalde, era em 1750 formada tanto por habitações, como por portões ou muros de delimitação de propriedade.</p>
 <div>
-<p>João Dias, espingardeiro, casado com Mariana da Silva, paga 2000 
-                        reis ao enfiteuta do prazo da l.ª metade do casal do Lagarto.</p>
-</div>
+<p>As suas casas são todas muito simples, de arquitectura tradicional, na sua maioria do tipo de porta com janela ao lado (75,9%), no piso térreo. 
+            No extremo Oeste, vê-se um conjunto de edifícios que mais parecem uns pardieiros: são as construções de aspecto mais pobre em todo este Mappa.</p>
 <div>
-<p>Manuel de Araújo, pedreiro, casado com Domingas Fernandes, paga 
-                        2000 reis ao enfiteuta ao prazo da l.ª metade do casal do Lagarto.</p>
-</div>
+<p>Destas casas, 66% eram de um só piso. As janelas estariam na sua maioria tapadas por portadas de madeira (73,3 %), sendo as restantes do tipo
+            bracarense; destas, algumas tinham gelosias.</p>
 <div>
-<p>Manuel Pires, pedreiro, casado com Teresa Francisca, paga 2000 
-                        reis ao enfiteuta do prazo da l.ª metade do casal do Lagarto.</p>
-</div>
+<p>No extremo Oeste, parece ver-se um bom prédio. Mas porque tem a fachada principal virada para o interior não podemos percebê-lo bem. Pela sua 
+            localização e arquitectura não nos parece ser a Casa de Vale Flor, embora esteja muito próximo.</p>
 <div>
-<p>A casa é foreira ao enfiteuta do prazo da l.ª metade do casal do Lagarto.</p>
-</div>
+<p>Desta rua, de que só temos os alçados do lado Norte, eram foreiras ao Cabido 31 das 52 casas aqui desenhadas.</p>
 <div>
-<p>Pertence ao enfiteuta do prazo da l.ª metade do casal do Lagarto.</p>
+<p>Bastante alterada nos edifícios, mas mantendo a sua implantação, integra actualmente uma parte da rua da Escoura — no seu extremo 
+            Oeste, sensivelmente até à casa do prazo n.º 11 —, sendo a restante denominada rua Conselheiro Januário.</p>
 </div>
-<div>
-<p>José Carlos, lanterneiro, casado com Maria Teresa, paga 4000 
-                        reis por este chão de casa. Foi subemprazado à face do prazo da l.ª metade do casal do Lagarto.
-                    </p>
-</div>
-<div>
-<p>Corresponde a um portal de serventia do prazo da l.ª metade do casal do Lagarto.</p>
-</div>
-<div>
-<p>Pertence ao enfiteuta do prazo da l.ª metade do casal do Lagarto.</p>
-</div>
-<div>
-<p>Corresponde a um chão de casa, pertença do prazo da l.ª metade do casal do Lagarto.</p>
-</div>
-<div>
-<p>Pertence ao enfiteuta do prazo da l.ª metade do casal do Lagarto.</p>
-</div>
-<div>
-<p>João de Araújo, faulas, ferreiro, casado com Maria de Aguiar, 
-                        paga 1000 reis ao enfiteuta do prazo da l.ª metade do casal do Lagarto.</p>
-</div>
-<div>
-<p>António Dias da Silva, da freguesia de S. Pedro d'Este, casado com Isabel
-                        Duarte, paga 850 reis ao enfiteuta do prazo da l.ª metade do casal do Lagarto.</p>
-</div>
-<div>
-<p>Manuel Francisco, carpinteiro, casado com Antónia Teixeira, paga 
-                        1300 reis ao enfiteuta do prazo da l.ª metade do casal do Lagarto.</p>
-</div>
-<div>
-<p>Maria Carvalho, viúva de Bento Correia, pintor, paga 400 reis 
-                        ao enfiteuta do prazo da l.ª metade do casal do Lagarto.</p>
-</div>
-<div>
-<p>Manuel de Araújo, sombreireiro, casado com Antónia Ribeiro, paga 
-                        850 reis ao enfiteuta do prazo da l.ª metade do casal do Lagarto.</p>
-</div>
-<div>
-<p>O Padre Cristóvão Francisco paga 425 reis ao enfiteuta do prazo da l.ª metade do casal do Lagarto.</p>
-</div>
-<div>
-<p>Manuel de Araújo, combreireiro, casado com Antónia Ribeiro, paga 
-                        425 reis ao enfeiteuta do prazo da l.ª metade do casal do Lagarto.</p>
-</div>
-<div>
-<p>António Ferreira Torres, ourives, paga 850 reis ao enfiteuta do prazo da l.ª metade do 
-                        casal do Lagarto.</p>
-</div>
-<div>
-<p>Bernarda Ferreira, viúva de José Francisco, cutileiro, paga 
-                        400 reis ao enfiteuta do prazo da l.ª metade do casal do Lagarto.</p>
-</div>
-<div>
-<p>Manuel Marques Pereira, casado com Teresa Maria, paga 1300 reis 
-                        ao enfiteuta do prazo da l.ª metade do casal do Lagarto.</p>
-</div>
-<div>
-<p>João Pereira do Lago, casado com D. Marcelina de Araújo Rocha, 
-                        paga 400 reis ao enfiteuta do prazo da l.ª metade do casal do Lagarto.</p>
-</div>
-<div>
-<p>Paga 2100 reis ao enfiteuta do prazo da 1.ª metade do casal do Lagarto.</p>
-</div>
-<div>
-<p>Pedro Fernandes da Silva, casado com Domingas das Neves, 
-                        paga 800 reis ao enfiteuta do prazo da 1.ª metade do casal do Lagarto.</p>
-</div>
-<div>
-<p>Paga foro ao enfiteuta do prazo da 1.ª metade do casal do Lagarto.</p>
-</div>
-<div>
-<p>Pedro Fernandes da Silva, casado com Domingas das Neves, paga 
-                        800 reis ao enfiteuta do prazo da 1.ª metade do casal do Lagarto.</p>
-</div>
-<div>
-<p>Francisco de Barros, sombreireiro, casado com Natália Fernandes, 
-                        paga 360 reis ao enfiteuta do prazo da 1.ª metade do casal do Lagarto.</p>
-</div>
-<div>
-<p>Francisco Cardoso, viúvo, paga, por cada uma das casas, 620 reis ao enfiteuta do prazo da 
-                        1.ª metade do casal do Lagarto.</p>
-</div>
-<div>
-<p>Pedro Vieira, barbeiro, casado com Teresa Francisca, paga 1000 
-                        reis ao enfiteuta do prazo da 1.ª metade do casal do Lagarto.</p>
-</div>
-<div>
-<p>Jácome de Matos, casado com Sebastiana Maria, paga 800 reis ao 
-                        enfiteuta do prazo da 1.ª metade do casal do Lagarto. Confronta, do nascente, com casa foreira à Misericórdia.</p>
-</div>
-<h3>Casas:</h3>
+<h2>Casas:</h2>
 <div>
 <p>Número: 1</p>
 <p>Enfiteuta: Isabel Maria da Silva, viúva do Dr. Santos de Araújo Alves. Dezembargador de Braga</p>
@@ -473,5 +375,8 @@
 
 
 </div>
+<h2>Atualmente:</h2>
+<img src='../MapaRuas-materialBase/atual/55-RuadeInfias-Vista2.JPG' style='width:50%; height:auto; '/>
+<img src='../MapaRuas-materialBase/atual/55-RuadeInfias-Vista1.JPG' style='width:50%; height:auto; '/>
 </body>
 </html>
