--- a/TCP1/html/RuaDeJanes.html
+++ b/TCP1/html/RuaDeJanes.html
@@ -3,69 +3,25 @@
 <h1>Rua de Janes </h1>
 <p>Número: 8</p>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-08-RuaDeJanes.JPG'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-08-RuaDeJanes.JPG' style='width:50%; height:auto; '/>
 <p>Legenda: Rua de Janes.</p>
 </div>
 <h2>Descrição:</h2>
 <div>
-<p>Os prazos nº 2 e 3 encontram-se unidos desde 1669.</p>
-<p>O nº 1 confronta, do poente, com o quintal da casa nº 5 da Rua de S. João, à qual esteve unida entre os anos de 1678 e 1720</p>
-</div>
 <div>
-<p>Os prazos nº 2 e 3 encontram-se unidos desde 1669.</p>
-<p>O nº 1 confronta, do poente, com o quintal da casa nº 5 da Rua de S. João, à qual esteve unida entre os anos de 1678 e 1720</p>
-</div>
+<p>Pequena e tortuosa rua que ligava a igreja de S. João do Souto à Porta de Souto. Aparece também com os nomes de Jano e Janoas. </p>
 <div>
-<p>Os prazos nº 2 e 3 encontram-se unidos desde 1669.</p>
-<p>O nº 1 confronta, do poente, com o quintal da casa nº 5 da Rua de S. João, à qual esteve unida entre os anos de 1678 e 1720
-            </p>
-</div>
+<p>Aberta na Idade Média, esta artéria deverá ter perdido grande parte da sua importância quando D. Diogo de Sousa deu efectiva funcionalidade à porta de S. João. </p>
 <div>
-<p></p>
-</div>
+<p>No Mappa aparece-nos como uma rua desordenada, com uma linha de empenas muito recortada no lado Sul, com casas de um certo ar rural, misturadas com outras do desenho urbano característico de Braga desta época e, sobretudo, com muitos edifícios de cariz bastante arcaico (15%). O fraco tratamento dado às janelas e a quase inexistência de varandas mostra bem o carácter secundário desta rua.</p>
 <div>
-<p></p>
-</div>
+<p>Com 19 casas do lado Sul e 18 do Norte, eram prazos do Cabido 7 e 12 respectivamente.</p>
 <div>
-<p>A frontaria e serventia principais correspondem ao nº 29 da Rua do Souto. No poente tem uma porta de serventia que dá para o referido nº 29. Confronta, do nascente,com casa dos padres coreiros. </p>
+<p>Este topónimo, que se mantém ainda hoje, deriva do nome do instituidor da medieval igreja de S. João de Souto, João Anes. 
+            
+        </p>
 </div>
-<div>
-<p>Foi construída, no ano de 1565. em pertenças do nº 26 da Rua do Souto. Na parte do nascente, em baixo, possui uma porta de serventia para o nº 25 da Rua do Souto. Confronta, do poente, com casas foreiras à cororaria e, do nascente, com a serventia do nº 25, da Rua do Souto.</p>
-</div>
-<div>
-<p> Corresponde a uma porta e corredor de serventia do nº 25 da Rua do Souto. Situa-se por baixo da casa nº 8.</p>
-</div>
-<div>
-<p>Pertence à casa nº 23, da Rua do Souto. para onde tem a serventia principal. </p>
-</div>
-<div>
-<p>Pertence à casa nº 21, da Rua do Souto, para onde tem a serventia principal.</p>
-</div>
-<div>
-<p>No ano de 1583 foi separada do prazo da casa nº 13 e unida ao nº 19, da Rua do Souto. A partir do ano de 1610 constitui, novamente, um único prazo.  </p>
-</div>
-<div>
-<p>Situa-se na esquina para a Rua do Souto </p>
-</div>
-<div>
-<p>Confronta, do sul, com o nº 13 e, do norte, com casa foreira à Mitra.</p>
-</div>
-<div>
-<p>Confronta, do nascente, com casa da cororaria e, do poente, com casa foreira a S. João do Souto.</p>
-</div>
-<div>
-<p>
-                </p>
-</div>
-<div>
-<p>
-                </p>
-</div>
-<div>
-<p>O nº 20 confronta, do poente, com casa de vínculo. O nº 21 situa-se por detrás da Igreja de S. João do Souto e, por sentença que alcançou Teotónio Soares de Brito contra o cabido, ficou-lhe a pertencer o nº 19. 
-                </p>
-</div>
-<h3>Casas:</h3>
+<h2>Casas:</h2>
 <div>
 <p>Número: 1</p>
 <p>Enfiteuta: Miguel da Silva Cação, pasteleiro</p>
@@ -228,5 +184,8 @@
 
 
 </div>
+<h2>Atualmente:</h2>
+<img src='../MapaRuas-materialBase/atual/8-RuaDeJanes-Vista1.JPG' style='width:50%; height:auto; '/>
+<img src='../MapaRuas-materialBase/atual/8-RuaDeJanes-Vista2.JPG' style='width:50%; height:auto; '/>
 </body>
 </html>
