--- a/TCP1/html/RuaDeS.Barnabe.html
+++ b/TCP1/html/RuaDeS.Barnabe.html
@@ -3,139 +3,25 @@
 <h1>Rua de S. Barnabé</h1>
 <p>Número: 47</p>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-47-RuaDeS.Barnabe-a(nascente).jpg'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-47-RuaDeS.Barnabe-a(nascente).jpg' style='width:50%; height:auto; '/>
 <p>Legenda: Praça do Gavião - Nascente.</p>
 </div>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-47-RuaDeS.Barnabe-a(poente).jpg'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-47-RuaDeS.Barnabe-a(poente).jpg' style='width:50%; height:auto; '/>
 <p>Legenda: Praça do Gavião - Nascente.</p>
 </div>
 <h2>Descrição:</h2>
 <div>
-<p>
-                        Pertence à casa n.° 14 daRua de Sto. André, para onde tem a frontaria e serventia principais. 
-                    </p>
-</div>
 <div>
 <p>
-                        Isabel Maria de Jesus paga 3240 reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro.
-                        Encontram-se unidas desde 1743.
-                    </p>
+            Pertencente ao complexo que tinha o centro na praça do Gavião, ligava as ruas de Santo André e da Oliveira.
+            Artéria um pouco marginal a este conjunto, tem o seu prazo mais antigo em 1743.
+            Dividida em lotes, como todo o conjunto denominado de Quinteiro ou Gavião, ou, actualmente de campo Novo, tinha apenas ocupados com casas 18 dos 31 terrenos preparados para edificações. O restante espaço disponível, aqui assinalado com os n?s 8-20 e 23-24, eram as entradas ou muros de limite dos quintais da rua dos Chãos de Cima.
+            As 20 casas desenhadas no Mappa são todas térreas, muito simples, do tipo de porta com janela lateral, mas com as «molduras» de pedra visíveis. Todas estas construções são prazos do Cabido.
+            Mantém o nome de S. Barnabé.
+        </p>
 </div>
-<div>
-<p>
-                        Antónia Francisca paga 1325 reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro. Foi construída antes de 1745.
-                    </p>
-</div>
-<div>
-<p>
-                        Pertence ao n.° 86 da Rua dos Chãos de Cima.
-                    </p>
-</div>
-<div>
-<p>
-                        Porta de serventia do quintal do n.° 85 da Rua dos Chãos de Cima.
-                    </p>
-</div>
-<div>
-<p>
-                        Porta de serventia do quintal do n.° 84 da Rua dos Chãos de Cima.
-                    </p>
-</div>
-<div>
-<p>
-                        Porta de serventia do quintal do n.° 81 da Rua dos Chãos de Cima.
-                    </p>
-</div>
-<div>
-<p>
-                        Porta de serventia do quintal do n.° 80 da Rua dos Chãos de Cima.
-                    </p>
-</div>
-<div>
-<p>
-                        Porta de serventia dos quintais dos n.° 77 e 78 da Rua dos Chãos de Cima.
-                    </p>
-</div>
-<div>
-<p>
-                        Porta de serventia dos quintais dos n.° 75 e 76 da rua dos Chãos de Cima.
-                    </p>
-</div>
-<div>
-<p>
-                        Porta de serventia do quintal do n.° 74 da Rua dos Chãos de Cima.
-                    </p>
-</div>
-<div>
-<p>
-                        Quintal da casa n.° 72 da Rua dos Chãos de Cima.
-                    </p>
-</div>
-<div>
-<p>
-                        Quintal da casa n.° 71 da Rua dos Chãos de Cima.
-                    </p>
-</div>
-<div>
-<p>
-                        Quintal da casa n.° 70 da Rua dos Chãos de Cima.
-                    </p>
-</div>
-<div>
-<p>
-                        Quintal da casa n.° 69 da Rua dos Chãos de Cima.
-                    </p>
-</div>
-<div>
-<p>
-                        Quintal da casa n.° 68 da Rua dos Chãos de Cima.
-                    </p>
-</div>
-<div>
-<p>
-                        Quintal da casa n.° 67 da Rua dos Chãos de Cima.
-                    </p>
-</div>
-<div>
-<p>
-                        Pertence ao n.° 66 da Rua dos Chãos de Cima.
-                    </p>
-</div>
-<div>
-<p>
-                        Pertence ao n.° 64 da Rua dos Chãos de Cima.
-                    </p>
-</div>
-<div>
-<p>
-                        Porta do quintal da casa n.° 63 da Rua dos Chãos de Cima.
-                    </p>
-</div>
-<div>
-<p>
-                        Porta do quintal da casa n.° 62 da Rua dos Chãos de Cima.
-                        Confronta, do nascente, com a viela que vai para a dita rua.
-                    </p>
-</div>
-<div>
-<p>
-                        «Chãos de casa» pertencentes ao prazo do casal dos Chãos ou Quinteiro.
-                        O chão n.° 25 confronta, do norte, com o caminho que vai para S. Vicente.
-                        
-                    </p>
-</div>
-<div>
-<p>
-                        Pagam foro ao enfiteuta do prazo do casal dos Chãos ou Quinteiro.
-                    </p>
-</div>
-<div>
-<p>
-                        Pertence à casa n.° 15 da Rua de Sto. André, para onde tem a frontaria e serventia principais.
-                    </p>
-</div>
-<h3>Casas:</h3>
+<h2>Casas:</h2>
 <div>
 <p>Número: 1</p>
 <p>Descrição: 
@@ -409,5 +295,8 @@
 
 
 </div>
+<h2>Atualmente:</h2>
+<img src='../MapaRuas-materialBase/atual/47-RuaDeS.BarnabÇ-Vista1.JPG' style='width:50%; height:auto; '/>
+<img src='../MapaRuas-materialBase/atual/47-RuaDeS.BarnabÇ-Vista2.JPG' style='width:50%; height:auto; '/>
 </body>
 </html>
