--- a/TCP1/html/RuaDoPaymanta.html
+++ b/TCP1/html/RuaDoPaymanta.html
@@ -3,120 +3,44 @@
 <h1>Rua do Paymanta</h1>
 <p>Número: 40</p>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-40-RuaDoPaymanta-Sul.jpg'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-40-RuaDoPaymanta-Sul.jpg' style='width:50%; height:auto; '/>
 <p>Legenda: Rua do Paymanta - Sul.</p>
 </div>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-40-RuaDoPaymanta-Norte.jpg'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-40-RuaDoPaymanta-Norte.jpg' style='width:50%; height:auto; '/>
 <p>Legenda: Rua do Paymanta - Norte.</p>
 </div>
 <h2>Descrição:</h2>
 <div>
-<p>Pertence ao nº 46 da Rua da Ponte de 
-                    Guimarães, para onde tem a frontaria principal.</p>
-</div>
-<div>
-<p>Os herdeiros de Margarida Fernandes pagam 
-                    100 reis ao n° 17.</p>
-</div>
-<div>
-<p>Pagam foro ao nº 17. A casa n° 3 confronta, 
-                    do nascente, com terra do prazo da quinta e 
-                        moinhos da Serra.</p>
-</div>
-<div>
-<p>Paga foro ao nº 17.</p>
-</div>
-<div>
-<p>Paga foro ao nº 17.</p>
-</div>
-<div>
-<p>Paga foro ao nº 17.</p>
-</div>
-<div>
-<p>Paga foro ao nº 17.</p>
-</div>
-<div>
-<p>Paga foro ao nº 17.</p>
-</div>
-<div>
-<p>Paga 180 reis ao nº 17.</p>
-</div>
-<div>
-<p>Paga 180 reis ao nº 17.</p>
-</div>
-<div>
-<p>Paga 350 reis ao nº 17.</p>
-</div>
-<div>
-<p>Paga 80 reis ao nº 17.</p>
-</div>
-<div>
-<p>Paga 80 reis ao nº 17.</p>
-</div>
-<div>
-<p>Paga 80 reis ao nº 17.</p>
-</div>
-<div>
-<p>Paga 80 reis ao nº 17.</p>
-</div>
 <div>
 <p>
-                    Esta casa é cabeça do prazo da quintã e
-                        moinhos da Serra e da Ribeira. O enfiteuta 
-                    possuia esta quintã que fora emprazada a seu 
-                    '    familiar, o Padre Fernão Anes, no ano de 1532.
-                </p>
+            Rua de zona rural, que antes deveria ser chamada de cangosta, mesmo para os padrões do séc. XVIII.
+        </p>
+<div>
 <p>
-                    O prazo é constituído pelos números: 2 a 16 e
-                    
-                    18 a 32; 9 a 23 e 28 a 46 da Ponte de 
-                        Guimarães; 22 a 34 e 51 a 74 da Rua da Ponte 
-                            de Guimarães.
-                </p>
-</div>
+            Ligando a rua da Ponte de Guimarães com o pontilhão das Lagesestava, em 1750, marginada por prédios de um e dois pisos do lado Sul e de apenas um piso no Norte. 
+            Todas estas casas são extraordinariamente simples, estão implantadas em terreno não nivelado, com uma técnica construtiva rudimentar, como nos mostram as pequeníssimas aberturas das habitações de dois pisos.
+        </p>
 <div>
-<p>Paga 80 reis ao nº 17.</p>
-</div>
+<p>
+            No termo da rua está a magnífica casa seiscentista das Lages, "deque he Emphiteuta Pedro da C.ª Sottomaior" que foi Alcaide Mor de Braga. É este sem dúvida o edifício civil que aparece 
+            no Mappa e, o que mereceu mais cuidado no desenho.
+        </p>
 <div>
-<p>Paga 80 reis ao nº 17.</p>
-</div>
+<p>
+            Era uma casa com pedra de armas sobre um portão que dava acesso a um páteo interior, vedado por uma cerca ameada. Tinha três corpos que terminavam na margem do rio Este.
+            Sobre o curso de água, tinha um anexo coberto, talvez um moinho. Infelizmente está hoje destruído todo este conjunto.
+        </p>
 <div>
-<p>Paga 150 reis ao nº 17.</p>
-</div>
+<p>
+            Das 17 casas do lado Norte e 16 do Sul eram todas prazos do Cabido.
+        </p>
 <div>
-<p>Os herdeiros de Domingos Fernandes, casado 
-                    com Isabel Gonçalves, pagam 200 reis ao
-                    n° 17.</p>
+<p>
+            Não tem hoje uma correspondência correcta pois andava entre as actuais ruas dePai Amante (que está em vias de completo desaparecimento) e Conselheiro Lobato.
+        </p>
 </div>
-<div>
-<p>Paga 190 reis ao nº 17.</p>
-</div>
-<div>
-<p>Paga 190 reis ao nº 17.</p>
-</div>
-<div>
-<p>Os herdeiros de Belchior Fernandes, casado 
-                    com Ana Dias, pagam 400 reis e 2 galinhas ao 
-                    nº 17.</p>
-</div>
-<div>
-<p>Paga 100 reis ao nº 17.</p>
-</div>
-<div>
-<p>Paga 200 reis ao nº 17.</p>
-</div>
-<div>
-<p>Paga 50 reis ao nº 17.</p>
-</div>
-<div>
-<p>Paga 30 reis ao nº 17.</p>
-</div>
-<div>
-<p>Corresponde ao nº 51 da Rua da Ponte de 
-                    Guimarães, para onde tem a frontaria principal.</p>
-</div>
-<h3>Casas:</h3>
+<h2>Casas:</h2>
 <div>
 <p>Número: 1</p>
 <p>Descrição: Pertence ao nº 46 da Rua da Ponte de 
@@ -362,5 +286,8 @@
 
 
 </div>
+<h2>Atualmente:</h2>
+<img src='../MapaRuas-materialBase/atual/40-RuaDoPaymanta-Vista2.JPG' style='width:50%; height:auto; '/>
+<img src='../MapaRuas-materialBase/atual/40-RuaDoPaymanta-Vista1.JPG' style='width:50%; height:auto; '/>
 </body>
 </html>
