--- a/TCP1/html/RuaDoSouto.PortaDoSouto.html
+++ b/TCP1/html/RuaDoSouto.PortaDoSouto.html
@@ -3,172 +3,44 @@
 <h1> Rua do Souto Porta do Souto </h1>
 <p>Número: 6</p>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-06-RuaDoSouto.PortaDoSouto-norte.png'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-06-RuaDoSouto.PortaDoSouto-norte.png' style='width:50%; height:auto; '/>
 <p>Legenda: Rua do Souto, Porta do Souto - vista norte.</p>
 </div>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-06-RuaDoSouto.PortaDoSouto-sul.png'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-06-RuaDoSouto.PortaDoSouto-sul.png' style='width:50%; height:auto; '/>
 <p>Legenda: Rua do Souto, Porta do Souto - vista sul.</p>
 </div>
 <h2>Descrição:</h2>
 <div>
-<p> Metade desta casa é pertença do cabido de Lamego. Confronta, do poente, com os Paços Arcebispais (onde se situavam, em 1550 as casas novas da Relação e, no séc. XVIII, o Aljube); do sul com a parte pertencente ao cabido de Lamego, e, do norte com a Relação Eclesiástica.</p>
-</div>
 <div>
-<p>Confronta, de poente, com casa foreira à Mitra e, do nascente, com casa do morgado dos Leites.</p>
-</div>
+<p>Rua chave de todo o urbanismo e vida económica bracarense, a rua do Souto, terá sido, pelo menos desde o séc. XVII, a mais importante da cidade.</p>
 <div>
-<p> Confronta, do nascente, com casa foreira à Igreja de S. Pedro d'Este e, do poente, com casa foreira ao Morgado dos Leites. Este prazo foi comprado pelo Cabido, em 1485, ao Rei D. João II. 
-                </p>
-</div>
+<p>Quando se construiram as muralhas de Braga pensou-se logo no possível crescimento citadino. A metade Sul, 
+            já habitada e arruada com artérias cujo traçado remonta aos romanos, ficou protegida; a metade Norte continuou vazia, com campos, que lentamente se foram enchendo. </p>
 <div>
-<p>Confronta, do poente, com casa foreira à Igreja de S. Pedro d'Este. 
-                </p>
-</div>
+<p>Primeiro foi a rua Nova, mais tarde chamada do Campo; depois, em 1565, a dos Gatos ou da Misericórdia.</p>
 <div>
-<p></p>
-</div>
+<p>A rua que delimitou as duas zonas foi a do Souto. Era longa, bem lançada e recta, unia o Paço dos Arcebispos com o Castelo e uma porta da muralha, no seu extremo. </p>
 <div>
-<p>A enfiteuta era filha de Francisco João, mercador, e de sua 1ª mulher,Vicência Rebelo , a quem sucedeu neste Prazo. </p>
-</div>
+<p>Não importa agora que tipo de casas teria naquela longínqua data. O Mappa mostra-nos que em 1750 era uma artéria muito bem organizada, 
+            tendo quase todas as casas com três pisos, gelosias, muitas varandas de madeira cobertas também com gelosias e, no piso térreo, 
+            grandes portas de madeira, permitindo o comércio. É verdadeiramente magnífico de beleza e de unidade este conjunto! 
+            Pena foi que, nas décadas de 60 ou 70 do séc. XIX, todas as gelosias tivessem sido destruídas.</p>
 <div>
-<p> Confronta, do nascente, com casa dízima a  Deus e, do poente, com casa foreira à confraria de Santiago da Cividade. </p>
-</div>
+<p>No desenho das fachadas sobressaem apenas o conjunto monumental do largo do Paço, obra já dos Arcebispos que vão de D. Diogo de Sousa a D. Rodrigo de Moura Teles,
+            e as casas a seguir aos prazos n.° 2, com um belo trabalho de pedra nas janelas e n. ° 50, com os pisos superiores assentes sobre duas finas colunas. </p>
 <div>
-<p>Confronta, do poente, com casa dízima a Deus. Tem uma serventia para a Loura desde o ano de 1534. O quintal desta casa é foreiro à confraria de S. João do Souto. </p>
-</div>
+<p>Hoje a estrutura das suas casas mantém-se, excepto no que respeita às gelosias. Em 1923 e 1954 a rua do Souto foi cortada pelas rua Justino Cruz 
+            (que a ligou ao Campo da Vinha) e pela rua Francisco Sanches (no enfiamento da anterior, estabelecendo ligação para carros com o largo de S. João do Souto,
+            uma vez que a passagem de pessoas já era feita através da Casa do Passadiço). </p>
 <div>
-<p>Confronta, do nascente, com casa foreira à capela dos Cerveiras. </p>
-</div>
+<p>A zona denominada Porta do Souto, que corresponde à parte do Largo Barão de S. Martinho entre a rua dos Janes e a Foto Pelicano,
+            foi totalmente alterada em 1853, quando foi destruído o arco da Porta do Souto.</p>
 <div>
-<p>  O enfiteuta possuia este prazo por sucessão de João Soares Braga, juiz das sizas, e de sua mulher, Jerónima Vaz. Confronta, do nascente. com a casa foreira à confraria de S. João do Souto e, do poente, com casa dízima a Deus.</p>
+<p>Das 37 casas do lado Norte e 55 do lado Sul eram prazos do Cabido 16 e 33 respectivamente. 
+        </p>
 </div>
-<div>
-<p> Confronta, do poente, com casa foreira à confraria de S. João do Souto.</p>
-</div>
-<div>
-<p> </p>
-</div>
-<div>
-<p></p>
-</div>
-<div>
-<p>  Confronta, do poente, com casa foreira à capela de Sta. Bárbara.</p>
-</div>
-<div>
-<p>O emprazamento foi feito no ano de 1706. </p>
-</div>
-<div>
-<p> Foi construída em 1591, em pertenças da casa nº 15. Fica situada no canto da Rua do Souto e Terreiro do Castelo. Confronta, do nascente, com o dito Terreiro, do Sul, com a rua e, do poente, com o nº 15.
-                </p>
-</div>
-<div>
-<p>Situa-se à porta do Souto, defronte do Terreiro do Castelo e confronta, do nascente, com casa foreira à Igreja de Fraião e, do poente, com casa foreira à confraria de S. João do Souto.
-                </p>
-</div>
-<div>
-<p>É foreira à obra da Sé desde o ano de 1484. por escambo feito com o cabido, ao qual ficou a pertencer o nº 46, que confronta, do nascente, com casa foreira à Câmara. Paga, de pensão ou foro, 480 reis.</p>
-</div>
-<div>
-<p>Confronta, do sul, com a casa da Rua de Janes, foreira à confraria de S. João do Souto.</p>
-</div>
-<div>
-<p> Confronta, do nascente, com casa foreira ao Convento do Carmo ou aos Padres Coreiros: do poente, com casa da comenda de Adaúfe, dos Padres Coreiros; e, do sul, com casa da Rua de Janes, foreira a S. João do Souto.</p>
-</div>
-<div>
-<p>O emprazamento foi feito no ano de 1724. Confronta, do nascente, com casa foreira ao Mosteiro de Adaúfe; do poente, com casa de S. Pedro d'Este; e, do sul, com casa foreira a S. João do Souto. Foi incorporada neste prazo a casa nº 11 da Rua de Janes. 
-                </p>
-</div>
-<div>
-<p> À casa nº 23 pertence, ainda, o nº 10 da Rua de Janes.</p>
-<p>João Carneiro paga de censo, respectivamente, 75 e 72 reis</p>
-</div>
-<div>
-<p>À casa nº 23 pertence, ainda, o nº 10 da Rua de Janes.</p>
-<p>João Carneiro paga de censo, respectivamente, 75 e 72 reis </p>
-</div>
-<div>
-<p>Alexandre Brandão paga de censo, 13 reis e 5 pretos, ou seja, meio maravedi.</p>
-</div>
-<div>
-<p> Foi construída, no ano de 1538, em pertenças do nº 26. O prazo é constituído por casa e rossio, tendo este serventia pelo nº 8 da Rua de Janes.</p>
-</div>
-<div>
-<p> </p>
-</div>
-<div>
-<p> </p>
-</div>
-<div>
-<p>  Foi construída no ano de 1513, em pertenças do nº 29. No ano de 1596. foi-lhe incorporada a casa n° 26.</p>
-</div>
-<div>
-<p> A este prazo pertence a casa nº 7, da Rua de Janes. </p>
-</div>
-<div>
-<p>  Foi construída em 1524, em pertenças do nº 31, e acrescentada, no ano de 1609, uma parte do quintal do nº 33 e uma casa pequena do nº 31.</p>
-</div>
-<div>
-<p> </p>
-</div>
-<div>
-<p> </p>
-</div>
-<div>
-<p> </p>
-</div>
-<div>
-<p> Confronta, do poente, com casa foreira à Igreja de S. Pedro d'Este.</p>
-</div>
-<div>
-<p> Paga, também 7 reis ao porteiro da massa. O censo é pago por Ascenso Antunes.</p>
-</div>
-<div>
-<p>O censo é pago pelo livreiro, Manuel Ferreira. </p>
-</div>
-<div>
-<p>O censo é pago por Ascenso Antunes.</p>
-</div>
-<div>
-<p> O emprazamento foi feito em 1727.</p>
-</div>
-<div>
-<p> Corresponde ao Passadiço do nº 5, da Rua de S. João, para onde tem a frontaria e serventia principais.</p>
-</div>
-<div>
-<p> </p>
-</div>
-<div>
-<p> Encontram-se unidas num só prazo, desde o ano de 1637. Também já se encontraram unidas entre os anos de 1491 e 1551. </p>
-</div>
-<div>
-<p> O nº 43 esteve unido ao nº 44, entre os anos de 1482 e 1532. Enquanto estiveram separados, a serventia do nº 44 fazia-se por uma porta e corredor situados por baixo do nº 43.</p>
-</div>
-<div>
-<p>O nº 43 esteve unido ao nº 44, entre os anos de 1482 e 1532. Enquanto estiveram separados, a serventia do nº 44 fazia-se por uma porta e corredor situados por baixo do nº 43. </p>
-</div>
-<div>
-<p> </p>
-</div>
-<div>
-<p> A enfiteuta era filha de Gregório Ferreira e de sua mulher, Antónia Maria, e herdou este prazo que seu pai comprara. Confronta, do sul, com pertenças do nº 48; e do poente com a parte do nº 47, foreira à confraria de S. João do Souto. Possui duas portas para a rua: uma que serve para a loja, em que estão as drogas de botica e outras mercearias e outra que é a serventia desta casa. </p>
-</div>
-<div>
-<p> Metade desta casa (parte nascente) é foreira à confraria de S. João do Souto, e confronta com o nº 48. </p>
-</div>
-<div>
-<p>A parte poente da casa confronta com casa dízima a Deus. Desde o ano de 1566, que está unida a uma casa que se desmembrou do nº 46. </p>
-</div>
-<div>
-<p> Confronta, do nascente, com casa dízima a Deus.</p>
-</div>
-<div>
-<p>Confronta, do nascente, com casa foreira à cororaria. </p>
-</div>
-<div>
-<p>Do nascente e poente confronta com casas dízimas a Deus. Até ao ano de 1679 o cabido possuía apenas as traseiras desta casa. A parte da frente era dízima a Deus. Posteriormente, Domingos Pinheiro Leite doou ao cabido a parte que lhe cabia "se alcançasse sentença a seu favor no pleito que trazia sobre a dita parte com Mariana Vieira, viúva".  </p>
-</div>
-<h3>Casas:</h3>
+<h2>Casas:</h2>
 <div>
 <p>Número: 1</p>
 <p>Enfiteuta: Agostinha Maia, viúva de Domingos Antunes da Rocha, ourives</p>
@@ -627,5 +499,8 @@
 
 
 </div>
+<h2>Atualmente:</h2>
+<img src='../MapaRuas-materialBase/atual/6-RuaDoSoutoPortaDoSouto-Vista2.JPG' style='width:50%; height:auto; '/>
+<img src='../MapaRuas-materialBase/atual/6-RuaDoSoutoPortaDoSouto-Vista1.JPG' style='width:50%; height:auto; '/>
 </body>
 </html>
