--- a/TCP1/html/RuaDosAcouguesVelhos.html
+++ b/TCP1/html/RuaDosAcouguesVelhos.html
@@ -3,33 +3,29 @@
 <h1>Rua dos Açougues velhos</h1>
 <p>Número: 3</p>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-03-RuaDosAcouguesVelhos-nascente.PNG'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-03-RuaDosAcouguesVelhos-nascente.PNG' style='width:50%; height:auto; '/>
 <p>Legenda: Rua dos Açougues Velhos - vista nascente. </p>
 </div>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-03-RuaDosAcouguesVelhos-poente.PNG'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-03-RuaDosAcouguesVelhos-poente.PNG' style='width:50%; height:auto; '/>
 <p>Legenda: Rua dos Açougues Velhos - vista poente. </p>
 </div>
 <h2>Descrição:</h2>
 <div>
-<p>Corresponde à casa nº16 da Praça do Pão para onde tem a frontaria e serventia principais. </p>
-</div>
 <div>
-<p>Estas casas foram construídas depois de 1550, em pertenças do nº16, da Praça do Pão e, desde o ano de 1725, constituem um só prazo.</p>
-</div>
+<p>Pequenina rua que liga a fachada da Sé com a rua Nova.</p>
 <div>
-<p>A última porta do nº6, para o lado do norte, é serventia do nº7 da rua Nova. Encontram-se unidas desde o ano de 1641.</p>
-</div>
+<p>Aberta possivelmente na Idade Media nela existiram ate ao sec. XV os açougues da cidade. Nessa data a rua era mais longa, prolongando-se até quase ao início da rua do Poço.</p>
 <div>
-<p>A última porta do nº6, para o lado do norte, é serventia do nº7 da rua Nova. Encontram-se unidas desde o ano de 1641.</p>
-</div>
+<p>Actualmente poucas alterações de peso há nesta rua quanto ao Mappa e nenhuma respeitante ao seu tamanho e largura. O edifício pertencente à Sé foi porém substancialmente aumentado em altura, apresentando-se hoje radicalmente diferente.</p>
 <div>
-<p>Desde do ano 1644 que correspondem ao nº5 da Rua Nova de Sousa, para onde têm a frontaria e serventia principais.</p>
-</div>
+<p>Pena foi que as casas dos prazos n.° 3 e 4 desta rua, ja em 1750 com um só inquilino, tivessem sido destruídos, pois apresentavam uma curiosíssima janela de canto e um jogo de telhados estranho.</p>
 <div>
-<p>Foi demolida para alargamento das casas do Cabido, depois do ano de 1793.</p>
+<p>Das duas casas do lado Norte e 6 do Sul pertenciam ao Cabido 1 e 6 respectivamente.</p>
+<div>
+<p>Não sabemos quando o seu nome mudou para a rua do Cabido. No mapa de 1857 tem ainda o nome de Travessa dos Açougues Velhos.</p>
 </div>
-<h3>Casas:</h3>
+<h2>Casas:</h2>
 <div>
 <p>Número: 1</p>
 <p>Enfiteuta: None</p>
@@ -82,5 +78,8 @@
 
 
 </div>
+<h2>Atualmente:</h2>
+<img src='../MapaRuas-materialBase/atual/3-RuaDosAáouguesVelhos-Vista2.JPG' style='width:50%; height:auto; '/>
+<img src='../MapaRuas-materialBase/atual/3-RuaDosAáouguesVelhos-Vista1.JPG' style='width:50%; height:auto; '/>
 </body>
 </html>
