--- a/TCP1/html/RuaDosCegosOuDoForno.html
+++ b/TCP1/html/RuaDosCegosOuDoForno.html
@@ -3,117 +3,53 @@
 <h1>Rua dos Cegos ou do Forno</h1>
 <p>Número: 11</p>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-11-RuaDosCegosOuDoForno-Nascente.jpg'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-11-RuaDosCegosOuDoForno-Nascente.jpg' style='width:50%; height:auto; '/>
 <p>Legenda: Rua dos Cegos ou do Forno - vista nascente.</p>
 </div>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-11-RuaDosCegosOuDoForno-Poente.jpg'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-11-RuaDosCegosOuDoForno-Poente.jpg' style='width:50%; height:auto; '/>
 <p>Legenda: Rua dos Cegos ou do Forno - vista poente.</p>
 </div>
 <h2>Descrição:</h2>
 <div>
-<p>Corresponde ao n.º 11 da Rua de S. João,
-                    para onde tem a frontaria e serventia
-                    principais e ao n.º 3 e 4 da Rua das Oussias.</p>
-</div>
 <div>
-<p>O enfiteuta é filho de Alexandre Pereira Marinho,
-                    sendo o emprazamento feito no ano de 1724.
-                    A casa foi construída em 1535, em pertenças
-                    da casa n.º 9, da Rua de S. João.</p>
-</div>
+<p>Pequena rua, hoje parcialmente desaparecida,
+            que, segundo o Mappa, ligava as traseiras da
+            igreja do Colégio da Companhia de Jesus às da
+            Sé.</p>
 <div>
-<p>Foi construída em pertenças do n.º 9, da rua de S. João.</p>
-</div>
+<p>Era conhecida por esta designação já na
+            Idade Média, devido ao Forno da Infanta que se
+            localizava na casa do prazo n.º 12.</p>
 <div>
-<p>A casa n.º 4 confronta, do sul,
-                    com casa foreira à Capela de Nossa Senhora da Glória.</p>
-</div>
+<p>Estranhamente esta artéria não figura no
+            Tombo do Cabido (ca. de 1369-1380).</p>
 <div>
-<p>Confronta, do norte, com casa foreira
-                    à Capela de Nossa Senhora da Glória e, do sul,
-                    com casa foreira à Igreja de S. Pedro d'Este.</p>
-</div>
+<p>É esta uma rua da periferia da Sé, bastante
+            secundária, simples elo de ligação entre ruas.
+            Os seus edifícios, têm 2 e 3 pisos, com poucas
+            varandas e raras gelosias. De notar uma casa
+            grande na esquina da rua de S. João; outra,
+            duplamente sobradada na junção com a rua das
+            Oucias; e a janela de canto, de cariz
+            renascentista, do prédio grande, do gaveto
+            feito com a rua Pay Manta.</p>
 <div>
-<p>Confronta, do norte, com casa foreira
-                    à Igreja de S. Pedro d'Este.</p>
-</div>
+<p>Das 13 casas do lado Nascente e 11 do lado
+            Poente, são prazos do Cabido 11 e 8
+            respectivamente.</p>
 <div>
-<p>Foi construída em 1554,em pretenças do n.º 8.</p>
-</div>
+<p>Hoje muito poucas casas se conservam no lado
+            Este desta rua. O lado Oeste está totalmente
+            alterado.</p>
 <div>
-<p>A casa n.º 9 confronta, do sul,
-                    com a travessa que vai para a Rua de S. João e,
-                    foi unida ao n.º 8, no ano de 1674.
-                    O prazo é constituído, ainda, pelo n.º 9
-                    da travessa da Rua de S. João
-                    para a do Forno.</p>
-</div>
+<p>A parte Sul da rua, isto é, a que vai além
+            da rua de Pay Manta, foi fechada ao público,
+            por deliberação camarária de 20-06-1896.</p>
 <div>
-<p>Corresponde ao n.º 7 da travessa
-                    que vai para a Rua de S. João,
-                    para onde tem a frontaria e serventia
-                    principais. No ano de 1596, 
-                    o n.º 11 foi unido ao n.º 10,
-                    constituindo um só prazo.</p>
+<p>Actual rua do Forno.</p>
 </div>
-<div>
-<p>Pertence ao n.º 5 da travessa da 
-                    Rua de S. João para a do Forno.
-                    A denominação de «Forno do Infante» advém-lhe
-                    de ter sido construída no local onde,
-                    antes de 1481, funcionou o
-                    antigo forno.</p>
-</div>
-<div>
-<p>Não aparece desenhada no mapa,
-                    por ter sido demolida e incorporada no 
-                    Colégio de S. Paulo da Companhia de Jesus.
-                    Inicialmente foi foreira à obra da Sé.
-                    Depois de 1568, foi trocada por outra
-                    casa do referido Colégio.</p>
-</div>
-<div>
-<p>Correspondem ao n.º 1 da travessa
-                    que vai da Rua do Forno para a
-                    do Poço, para onde têm a frontaria e
-                    serventia principais. No prazo da casa n.º 19
-                    foi incorporado o n.º 15, em 1673,
-                    e os n.º 17 e 18, em 1561.</p>
-</div>
-<div>
-<p>A casa é foreira ao chantrado.
-                    O censo é pago pelo Dr. Francisco Gomes do Couto.</p>
-</div>
-<div>
-<p>O enfiteuta sucedeu a Constantino Barreto de Meneses
-                    e ao Rev. Abade Jerónimo de Araújo.
-                    O n.º 20 situa-se na esquina que dá para a travessa
-                    que vai para a Rua do Poço e
-                    confronta, do sul, com a dita travessa e,
-                    do norte, com casa de vínculo. O n.º 21
-                    confronta, do Sul, com a referida casa de vínculo.
-                    O n.º 10 da travessa da rua do Forno
-                    para a do Poço faz parte do n.º 20.</p>
-</div>
-<div>
-<p>O enfiteuta sucedeu a Constantino Barreto de Meneses
-                    e ao Rev. Abade Jerónimo de Araújo.
-                    O n.º 20 situa-se na esquina que dá para a travessa
-                    que vai para a Rua do Poço e
-                    confronta, do sul, com a dita travessa e,
-                    do norte, com casa de vínculo. O n.º 21
-                    confronta, do Sul, com a referida casa de vínculo.
-                    O n.º 10 da travessa da rua do Forno
-                    para a do Poço faz parte do n.º 20.</p>
-</div>
-<div>
-<p>Pertence ao n.º 4</p>
-</div>
-<div>
-<p>O emprazamento foi feito em 1710.</p>
-</div>
-<h3>Casas:</h3>
+<h2>Casas:</h2>
 <div>
 <p>Número: 1</p>
 <p>Descrição: Corresponde ao n.º 11 da Rua de S. João,
@@ -317,5 +253,8 @@
 
 
 </div>
+<h2>Atualmente:</h2>
+<img src='../MapaRuas-materialBase/atual/11-RuaDosCegosOuDoForno-Vista1.JPG' style='width:50%; height:auto; '/>
+<img src='../MapaRuas-materialBase/atual/11-RuaDosCegosOuDoForno-Vista2.JPG' style='width:50%; height:auto; '/>
 </body>
 </html>
