--- a/TCP1/html/RuaEmFrenteDeNossaSenhoraDeGuadalupe.html
+++ b/TCP1/html/RuaEmFrenteDeNossaSenhoraDeGuadalupe.html
@@ -3,70 +3,47 @@
 <h1>Rua em Frente de Nossa Senhora de Guadalupe</h1>
 <p>Número: 52</p>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-52-RuaEmFrenteDeNossaSDeGuadalupe-a.jpg'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-52-RuaEmFrenteDeNossaSDeGuadalupe-a.jpg' style='width:50%; height:auto; '/>
 <p>Legenda: Rua em frente da N. Sra. de Guadalupe - Vista poente.</p>
 </div>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-52-RuaEmFrenteDeNossaSDeGuadalupe-b.jpg'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-52-RuaEmFrenteDeNossaSDeGuadalupe-b.jpg' style='width:50%; height:auto; '/>
 <p>Legenda: Rua da Regueira Margarida - Vista norte.</p>
 </div>
 <h2>Descrição:</h2>
 <div>
-<p>Pertence à casa n.° 17 da Rua de N. Sra. de Guadalupe, 
-                        para onde tem frontaria e serventia principais.</p>
-</div>
 <div>
-<p>Quintal da casa n.° 1.</p>
-</div>
+<p>Troço da Cangosta de Guadalupe, situado em frente à capela do mesmo nome.</p>
 <div>
-<p>Silvestre de Oliveira, jornaleiro, casado com 
-                        Inês Dantas, paga 2000 reis, pelo chão n.° 3 e 
-                        pelos n.º 4 e 5, ao subenfiteuta da casa n.° 9 
-                        da Rua de N. Sra. de Guadalupe.</p>
-</div>
+<p>Parcialmente construído em 1725, tinha, 25 anos mais tarde, ainda 3 «chãos». 
+            Um significativo espaço era ocupado por um grande quintal e pela fachada lateral 
+            de uma casa da rua de Nossa Senhora de Guadalupe, o que mostra bem a 
+            subalternização total desta rua.</p>
 <div>
-<p>Portal de serventia do quintal que anda 
-                        subemprazado juntamente com a casa n.° 9 da 
-                        Rua N. Sra. de Guadalupe.</p>
-</div>
+<p>As 5 casas construídas eram extremamente simples e tinham as janelas vazadas. 
+            Todos esses prédios estavam emprazados ao Cabido.</p>
 <div>
-<p>Pertencem ao casal dos Chãos ou Quinteiro, a 
-                        cujo enfiteuta se paga foro. Nos livros dos 
-                        prazos do cabido não se encontram escrituras se 
-                        subemprazamento</p>
-</div>
+<p>Chama-se actualmente rua de Guadalupe.</p>
 <div>
-<p>Chãos de casa do prazo do casal dos Chãos ou Quinteiro.</p>
-</div>
+<p>Pequena artéria, mais parecida com uma cangosta, ligava a igreja de S. Vicente 
+            com a capela de Guadalupe.</p>
 <div>
-<p>Paulo Francisco, ferreiro, casado com Jerónima da Silva, 
-                        paga 400 reis ao enfiteuta do prazo do 
-                        casal de Infias ou Flores.</p>
-<p>Só parte do n.° 1 é foreiro ao cabido.</p>
-</div>
+<p>Rua de arrabalde, na vertente Noroeste do então chamado monte de Santa Margarida, 
+            tinha do lado Norte — o único representado no Mappa, onze habitações 
+            de um piso e duas de dois. Essas casas eram muito simples, do tipo com porta 
+            ladeada de janela. No extremo Este está uma casa de pedra, de dois pisos, bem 
+            definida por fortes pilastras, que tem a ladeá-la um bonito, mas singelo, portão 
+            de pedra.</p>
 <div>
-<p>João da Costa, cutileiro, casado com Maria Ferreira, 
-                        paga 400 reis ao enfiteuta do prazo do 
-                        casal de Infias e Flores, conforme o 
-                        subemprazamento de 1720.</p>
-<p>No ano de 1729 foram feitas escrituras 
-                        subalternas dos n.° 6 e 7. Só parte do n.° 7 é 
-                        deste subenfiteuta.</p>
-</div>
+<p>Na década de 60 do séc. XVIII, a rua sofreu uma alteração de traçado - 
+            que é o que actualmente se vê - devido à construção, neste local, do convento e capela das Teresinhas, 
+            facto que motivou a amortização dos prazos 1 a 8.</p>
 <div>
-<p>Garcia Fernandes, casado com Narcisa Francisca, 
-                        paga 600 reis ao subenfiteuta da casa 
-                        n.° 5. Só parte do n.° 7 é deste subenfiteuta.</p>
-</div>
+<p>Das 13 casas representadas no Mappa, 9 eram foreiras do cabido.</p>
 <div>
-<p>Paga foro ao enfiteura do prazo do casal de Infias ou Flores.</p>
+<p>Desde 5 de Junho de 1880 passou, oficialmente, a chamar-se rua de Camões.</p>
 </div>
-<div>
-<p>Paga foro ao enfiteuta do prazo do casal de Infias ou Flores. 
-                        Confronta, do nascente, com 
-                        casa foreira à confraria de S. João do Souto.</p>
-</div>
-<h3>Casas:</h3>
+<h2>Casas:</h2>
 <div>
 <p>Número: 1</p>
 <p>Enfiteuta: Vid. casa n.º9 da rua de N. Sr.ª de Guadalupe.</p>
@@ -134,5 +111,9 @@
 
 
 </div>
+<h2>Atualmente:</h2>
+<img src='../MapaRuas-materialBase/atual/52-rmargar-t.JPG' style='width:50%; height:auto; '/>
+<img src='../MapaRuas-materialBase/atual/52-RuaemFrentedeNossaSenhoradeGuadalupe-Vista2.JPG' style='width:50%; height:auto; '/>
+<img src='../MapaRuas-materialBase/atual/52-RuaemFrentedeNossaSenhoradeGuadalupe-Vista1.JPG' style='width:50%; height:auto; '/>
 </body>
 </html>
