--- a/TCP1/html/RuaNova.html
+++ b/TCP1/html/RuaNova.html
@@ -3,61 +3,49 @@
 <h1>Rua Nova</h1>
 <p>Número: 2</p>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-02-RuaNova-norte.png'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-02-RuaNova-norte.png' style='width:50%; height:auto; '/>
 <p>Legenda: Rua Nova - vista norte. </p>
 </div>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-02-RuaNova-sul.png'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-02-RuaNova-sul.png' style='width:50%; height:auto; '/>
 <p>Legenda: Rua Nova - vista sul. </p>
 </div>
 <h2>Descrição:</h2>
 <div>
-<p>É morada dos Sacristãos da Sé. Parte desta casa pertence à obra da Sé e a restante
-                à Irmandade da Misericórdia. A parte da obra da Sé confronta, de nascente, com casas da dita Irmandade (antigas
-                casas foreiras à Capela da senhora da Glória) e, de poente, com a casa nº2. O prazo
-                era constituído por casa, com ênxido ao redor da capela da Senhora da Piedade de Jesus da Misericórdia.</p>
-</div>
 <div>
-<p>Confronta, de poente, com casa que se situa nos antigos açouges.</p>
-</div>
+<p>
+            Eixo fundamental da cidade, na sequencia da rua do Souto, define com ela a metade Norte e a metade Sul de Braga.</p>
 <div>
-<p> A casa nº6 foi construída depois do ano de 1543. Desde o ano de 1644 que as casas nº7 e 8 da Rua dos Açougues Velhos, por baixo do nº6.Foi
-                construída em 1543, em pertenças do prazo da casa nº5. No ano de 1641 foram-lhe unidas as traseiras do nº5 da Rua dos Açougues Velhos.</p>
-</div>
+<p>Alargada no tempo de D. Diogo de Sousa, 
+            ligava a rua do Souto com o Campo das Hortas, através de uma abertura, feita nessa data na muralha, a Porta Nova. Esta porta viria a ser alterada na sua 
+            arquitectura, em 1772, segundo um desenho atribuído a André Soares.</p>
 <div>
-<p> A casa nº6 foi construída depois do ano de 1543. Desde o ano de 1644 que as casas nº7 e 8 da Rua dos Açougues Velhos, por baixo do nº6.Foi
-                    construída em 1543, em pertenças do prazo da casa nº5. No ano de 1641 foram-lhe unidas as traseiras do nº5 da Rua dos Açougues Velhos.</p>
-</div>
+<p>Rua de primordial importancia, nela se situava, de Este para Oeste, a igreja da Misericórdia, 
+            a casa brasonada de familiares de D. Jorge da Costa,cardeal de Alpedrinha e uma fonte (aberta por D. Diogo de Sousa e reconstruida por D. Frei Agostinho de Jesus).</p>
 <div>
-<p>Confronta, de poente, com casa for. ao morgado de Real.Possui uma porta de serventia para a Rua dos Açougues Velhos, por baixo do nº6.Foi construída em 1543
-                 , em pertenças do prazo da casa nº5.No ano de 1641 foram-lhe unidas as traseiras do nº5 da Rua dos Açougues Velhos.</p>
-</div>
+<p>Mais importante ainda e o facto de ser por esta rua que os novos Arcebispos faziam a sua entrada solene na cidade sempre corn grande pompa e festejos.</p>
 <div>
-<p>Foi construída, depoisde 1707, no lugar de uma cozinha pertencente ao nº10, ao qual paga, de pensão ou foro, 60 reis. Confronta, do nascente, com o nº8 e , de poente, com parte da casa nº10. É subenfiteuta Bento de Sá, casado com  Francisca da Silva .</p>
-</div>
+<p>0 Mappa mostra-nos uma rua repleta de gelosias, uma forma de fechar as janelas e portas de varandas muito comuns (das casas da burguesia comercial?)-,bastantes 
+            edifícios de três pisos e algumas mesmo de quatro; e muitas com varandas.</p>
 <div>
-<p>Foi construída depois de 1725, no lugar de uma cozinha pertencente ao nº10, ao qual paga, de pensão ou foro, 60 reis.Confronta, do nascente, com o nº8 e, de poente, com parte da casa nº10. É subenfiteuta Bento de Sá, casado com Francisca da Silva.</p>
-</div>
+<p>No extremo so ficava um pequeno mercado coberto, a Pracinha, espaço aberto tambem por 
+                D. Diogo de Sousa, que ao longo dos tempos, e ate 1750, teve os nomes de praça da Hortalice, praça do Pescado e praça do Pão, designações que mostram bem a 
+            actividade economica que nela se praticava.</p>
 <div>
-<p>Parte desta casa é foreira à Mitra.</p>
-<p>Confronta, de nascente, com a parte da Mitra.</p>
-</div>
+<p>Uma significativa perda de importância comercial e social deverá ter acontecido a partir da data de mudança do centro 
+                comercial da cidade, da zona da Sé para a da Arcada.</p>
 <div>
-<p>Encontram-se unidas desde o ano de 1692</p>
-</div>
+<p>A rua Nova corresponde hoje exactamente à rua de D. Diogo de Sousa; a Pracinha mantém também o tradicional 
+            sentido toponímico, com o nome de praça Velha. Com 27 casas de cada lado pertenciam ao Cabido 13 do lado Norte e 1 do lado Sul.</p>
 <div>
-<p>Encontram-se unidas desde o ano de 1692</p>
-</div>
+<p>Hoje esta rua mantém ainda muitas 
+            das casas que apresentava em 1750. As que foram alteradas correspondem, porém, a uma tipologia de pisos e aberturas de fachada semelhantes; só as gelosias 
+            desapareceram integralmente. A fonte foi tapada em finais do seculo passado.</p>
 <div>
-<p>Confronta, de poente, com a Rua dos Sapateiros. </p>
+<p>A Pracinha viu os seus edifícios crescer em altura, sobretudo do lado Este e o mercado 
+            coberto foi retirado em data que desconhecemos.</p>
 </div>
-<div>
-<p>Foi construída, depois do ano de 1719, numa parte da casa nº15 e no lugar de uma cozinha do nº1 da Rua do Campo, às quais paga, de pensão ou foro, respetivamente, 200 reis e 1 galinha, e 110 reis. São subenfiteutas André Carvalho, tratante, e sua mulher, Luisa da Costa.</p>
-</div>
-<div>
-<p>Corresponde ao nº1 da Rua do Campo, para onde se tem a fronteira e serventia principais.A frontaria que dá para a Rua Nova de Sousa é foreira, à comenda de S. Pedro de Merelim.</p>
-</div>
-<h3>Casas:</h3>
+<h2>Casas:</h2>
 <div>
 <p>Número: 1</p>
 <p>Enfiteuta: None</p>
@@ -191,5 +179,8 @@
 
 
 </div>
+<h2>Atualmente:</h2>
+<img src='../MapaRuas-materialBase/atual/2-RuaNova-Vista2.JPG' style='width:50%; height:auto; '/>
+<img src='../MapaRuas-materialBase/atual/2-RuaNova-Vista1.JPG' style='width:50%; height:auto; '/>
 </body>
 </html>
