--- a/TCP1/html/RuaVerde.html
+++ b/TCP1/html/RuaVerde.html
@@ -3,71 +3,55 @@
 <h1>Rua Verde</h1>
 <p>Número: 21</p>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-21-RuaVerde-nascente.jpg'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-21-RuaVerde-nascente.jpg' style='width:50%; height:auto; '/>
 <p>Legenda: Rua Verde - nascente.</p>
 </div>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-21-RuaVerde-poente.jpg'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-21-RuaVerde-poente.jpg' style='width:50%; height:auto; '/>
 <p>Legenda: Rua Verde - poente.</p>
 </div>
 <h2>Descrição:</h2>
 <div>
-<p>Confronta, do sul, com casa foreira à cororaria.</p>
-</div>
 <div>
-<p>A enfiteuta é filha de Francisco
-                            Rodrigues, torneiro.</p>
-<p>Confronta, do norte, com casa foreira à cororaria. Entre os anos de
-                        1670 e 1724 esteve unida ao n.º 3.</p>
-</div>
+<p>Longa rua, com início no postigo de S. Sebastião e fim na
+            rua de Maximinos. O seu traçado prolongava-se, porém, até à
+            Porta de S. Francisco, através das
+            ruas dos Sapateiros e do Campo.</p>
 <div>
-<p>Corresponde, desde o ano 1627, à casa n.º 12 da
-                        Rua de St.º António. Encontra-se situada defronte do
-                        postigo de S. Sebastião.</p>
-</div>
+<p>Decalcando, uma rua da cidade romana, era esta a mais ocidental das artérias
+            intra-muros da velha urbe medieval.</p>
 <div>
-<p>O enfiteuta é filho de Teresa da Costa
-                        e de seu marido António Pereira.</p>
-<p>Encontram-se situadas junto ao postigo de S. Sebastião e
-                        foram construídas, antes de 1563, no
-                        «lugar do Sabugal», pertencente ao n.º 12 da
-                        Rua de Sto. António.</p>
-</div>
+<p>Ponto privilegiado nas ligações com Maximinos e a
+            capela de S. Sebastião, o seu traçado foi no séc. XIX (inícios?)
+            violentamente rompido com a continuação da rua das travessas, que, abrindo uma brecha
+            nas muralhas, a ligou com o campo de S. Miguel o Anjo; no fim do mesmo
+            século, por volta de 1880, foi alargada, sendo destruídas todas as casas,
+            excepto uma, de dois pisos, no seu extremo Norte, recebendo então o nome de D. Frei
+            Caetano Brandão.</p>
 <div>
-<p>Quintal denominado do Sabugal, que foi de José de
-                            Araújo Teixeira.</p>
-</div>
+<p>Em 1750 apresentava-se dividida em duas: uma, a Norte da
+            rua das Travessas com o nome de rua Verde; outra, a Sul, chamada somente
+            Couto do Arvoredo.</p>
 <div>
-<p>Estão unidas, num só prazo, desde o ano de 1549. A casa n.º
-                        9, confronta, do sul com casa foreira ao Hospital de S. Marcos.</p>
-</div>
+<p>O Couto do Arvoredo estava parcialmente construído (ainda hoje, aliás,
+            do lado Este conserva os quintais; e os do Oeste só nos anos 60 e 70 do nosso séc. foram
+            ocupados com habitações), com casas simples, de 2 pisos, de um tipo mais frequente fora
+            de muralhas, nos arrabaldes, sem varandas e com as janelas apenas tapadas por portas de
+            madeira.</p>
 <div>
-<p>Paga pensão à obra da Sé. São enfiteutas os herdeiros de Maria Ribeiro, que pagam 80 reis de
-                        foro.</p>
-</div>
+<p>A rua Verde, embora apresente um tipo de casa também muito simples, e
+            de contrução sem dúvida arcaica, estava já em 1750 toda construída. Mantém,
+            todas as casas apenas com dois pisos (excepto duas), com aberturas predominantemente
+            tapadas por portadas de madeira, raríssimas gelosias e varandas e algumas casas com
+            janela do tipo bracarense. Muito curiosos são os primeiros cinco edifícios do lado
+            Nascente e uma boa parte dos do Poente: são geralmente de dois vãos, 2 pisos, porta no
+            rés do chão e 2 janelas no andar, com um ritmo bem marcado e, sobretudo, com o sobrado
+            muito pronunciado, mostrando bem a fragilidade dos seus materiais construtivos.</p>
 <div>
-<p>O enfiteuta foi dotado com esta casa.</p>
+<p>Das 24 casas do lado Nascente e 33 do Poente, 3 e 13 são, respectivamente, prazos do
+            Cabido.</p>
 </div>
-<div>
-<p>Entre os anos de 1609 e 1640 pertenceu ao n.º
-                        13.</p>
-</div>
-<div>
-<p>Os enfiteuras pagavam um foro muito pequeno, dado que as casas tinham sido
-                        consideradas arruinadas no último emprazamento, etectuado no ano de
-                        1673.</p>
-<p>Confrontam, do Sul, com casas foreiras ao Hospital de S. Marcos.</p>
-</div>
-<div>
-<p>Estas casas tinham pertencido a Isabel da
-                            Silva e, anteriormente, a Julião
-                            Lopes.</p>
-</div>
-<div>
-<p>Corresponde ao n.º 12 da Rua de Maximinos, para onde tem a
-                        fronteira e serventia principais.</p>
-</div>
-<h3>Casas:</h3>
+<h2>Casas:</h2>
 <div>
 <p>Número: 1</p>
 <p>Enfiteuta: Maria Catarina do Céu, religiosa do Salvador</p>
@@ -229,5 +213,8 @@
 
 
 </div>
+<h2>Atualmente:</h2>
+<img src='../MapaRuas-materialBase/atual/21-RuaVerde-Vista2.JPG' style='width:50%; height:auto; '/>
+<img src='../MapaRuas-materialBase/atual/21-RuaVerde-Vista1.JPG' style='width:50%; height:auto; '/>
 </body>
 </html>
