--- a/TCP1/html/SaoMiguelOAnjo.html
+++ b/TCP1/html/SaoMiguelOAnjo.html
@@ -3,66 +3,47 @@
 <h1>Rua de S.Miguel O Anjo</h1>
 <p>Número: 26</p>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-26-SaoMiguelOAnjo-Norte.png'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-26-SaoMiguelOAnjo-Norte.png' style='width:50%; height:auto; '/>
 <p>Legenda: Rua de S.Miguel O Anjo - Norte</p>
 </div>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-26-SaoMiguelOAnjo-Sul.png'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-26-SaoMiguelOAnjo-Sul.png' style='width:50%; height:auto; '/>
 <p>Legenda: Rua de S.Miguel O Anjo - Sul</p>
 </div>
 <h2>Descrição:</h2>
 <div>
-<p>
-                        Pertenceu ao Padre João Rodrigues.
-                        Confronta, do norte com casa foreira à Mitra.
-                        Foi construída depois de 1539 em pertenças do nº2.
-                    </p>
-</div>
+<div>
+<p> 
+            Pequena artéria extra-muros que ligava a rua Em Frente dos Açogues,com
+            o campo das Hortas e a rua de Cruz de Pedra.          
+        </p>
 <div>
 <p>
-                        A casa nº2 confronta, do poente, com o rossio que está
-                        no princípio da Rua da Cruz da Pedra.
-                    </p>
-</div>
+            Decalcando um troço do possível traçado da muralha da cidade romana e na pendente da 
+           capela de S.Miguel o Anjo, era já conhecida na Idade Média com o nome de 
+            rua de Maximinos. Destruída totalmente em 1384, por 
+            D. João de Castela, perdem-se depois as notícias sobre 
+            a sua história.
+        </p>
 <div>
 <p>
-                        Foi construída, depois de 1555, em pertenças do número 2.
-                        Confronta, do nascente, com casa foreira à Câmara.
-                    </p>
-</div>
+            Em 1750 era uma rua talvez sem comércio, com muitas casas de sobrado, algumas
+            varandas, muitas janelas com gelosias e apenas 4 edifícios totalmente construídos em pedra.
+            Destas, três situavam-se curiosamente em gavetos: as casas do prazo nº8 e a 9 e a que lhe 
+            ficava contígua. Esta tinha ainda a característica de apresentar uma das raras pedras de 
+            armas de heráldica de família, a dos Bravos, existente 
+            então na cidade.
+        </p>
 <div>
 <p>
-                        Os livros das pensões referem que esta casa foi de João Gomes,
-                        genro do Mestre Gonçalo, «e que há muitos anos se não paga 
-                        este censo».
-                    </p>
-</div>
+            Das 14 casas do lado Norte e 11 do Sul, era prazos do Cabido oito e uma, respectivamente.
+        </p>
 <div>
 <p>
-                        O censo é pago por Mónica Veloso de Freitas, viúva.
-                    </p>
+            Desde 1891 que se chama rua Visconde Pindela
+        </p>
 </div>
-<div>
-<p>
-                        Pertenceu Pedro Martins.
-                        O censo é pago Gaspar de Medeiros.
-                    </p>
-</div>
-<div>
-<p>
-                        Pertence ao nº1 da rua em frente do Açogue para onde tem 
-                        frontaria e serventia principais.
-                    </p>
-</div>
-<div>
-<p>
-                        A casa e parte do quintal são foreiras ao Hospital de S.Marcos.
-                        Pela outra parte do quintal paga-se, de foro, 451 reis ao nº1 do Campo de S.Sebastião. Encontra-se
-                        subemprazada aos herdeiros do Padre António Velho Maciel, beneficiado.
-                        
-                    </p>
-</div>
-<h3>Casas:</h3>
+<h2>Casas:</h2>
 <div>
 <p>Número: 1</p>
 <p>Enfiteuta: Inácio Peixoto</p>
@@ -172,5 +153,8 @@
 
 
 </div>
+<h2>Atualmente:</h2>
+<img src='../MapaRuas-materialBase/atual/26-RuadeS.MiguelOAnjo-Vista1.JPG' style='width:50%; height:auto; '/>
+<img src='../MapaRuas-materialBase/atual/26-RuadeS.MiguelOAnjo-Vista2.JPG' style='width:50%; height:auto; '/>
 </body>
 </html>
