--- a/TCP1/html/TerreiroDeStoAntonioEPostigo.html
+++ b/TCP1/html/TerreiroDeStoAntonioEPostigo.html
@@ -3,50 +3,64 @@
 <h1>Terreiro de Sto. António e Postigo</h1>
 <p>Número: 20</p>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-20-TerreiroDeStoAntonioEPostigo-norte.jpg'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-20-TerreiroDeStoAntonioEPostigo-norte.jpg' style='width:50%; height:auto; '/>
 <p>Legenda: RUa das Chagas - norte</p>
 </div>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-20-TerreiroDeStoAntonioEPostigo-sul.jpg'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-20-TerreiroDeStoAntonioEPostigo-sul.jpg' style='width:50%; height:auto; '/>
 <p>Legenda: RUa das Chagas - poente</p>
 </div>
 <h2>Descrição:</h2>
 <div>
-<p>
-                       Encontram-se unidas, num só prazo, desde 1569. A casa n.º 1 confronta, do nascente, com 
-                       uma parte da casa que é foreira à comenda de S. Pedro de Merelim.
-                    </p>
-</div>
 <div>
 <p>
-                        O enfiteuta é da freguesia de Penso, concelho de Melgaço.
-                    </p>
-</div>
+            Pequena artéria que ligava o terreiro de S. Tiago ao Postigo de S.Sebastião.
+        </p>
 <div>
 <p>
-                        Confronta, do poente, com casa foreira ao mosteiro de Bouro.
-                    </p>
-</div>
+            Mantendo o traçado de uma rua da cidade romana, já no séc. XIV nos aparece com os nomes 
+            de rua Travessa e rua do Postigo.
+        </p>
 <div>
 <p>
-                        Foram construídas, depois do ano de 1683, no quintal da casa n.º 4 e pagavam foro a 
-                        este prazo.
-                    </p>
-</div>
+            Com a expulsão dos judeus a sua designação passará a ser de Santo António, a mesma 
+            da rua que lhe era contígua.
+        </p>
+<div>
+<p> 
+            Poucos anos mais tarde D. Diogo de Sousa criou os Estudos Gerais, que os seus sucessores
+            D. Henrique e D. Frei Bartolomeu dos Mártires muito protegeram; 
+            a sua capela, com a invocação 
+            de S. Paulo, faceava com o lado Sul do Terreiro, que aqui aparece como rua do Terreiro de Santo 
+            António.
+        </p>
 <div>
 <p>
-                        A enfiteuta é filha de António de Araújo, escrivão das apelações, e de sua 2.ª mulher, 
-                        Ursula de Araújo. A casa foi construída, depois do ano de 1557, em pertenças do n.º 12, 
-                        da Rua de D. Gualdim.
-                    </p>
-</div>
+            Ao lado da capela, não se sabe se relacionada com os Estudos Gerais, havia uma estupenda 
+            casa seiscentista, com um belíssimo e muito raro trabalho de pedra nas janelas, e portão, lateral,
+            brasonado.
+        </p>
 <div>
 <p>
-                        Corresponde ao n.º 11 da Rua de D. Gualdim, para onde tem frontaria 
-                        e serventia principais.
-                    </p>
+            O impacto económico da saída dos muitos estudantes aqui hospedados, após a expulsão dos jesuítas em 1759,
+            e, consequente encerramento dos Estudos Gerais, ainda não foi estudado. 
+        </p>
+<div>
+<p>
+            No último quartel do séc. XIX foi esta rua alargada desaparecendo a sua face Sul, bem com o «postigo»
+            da muralha.
+        </p>
+<div>
+<p>
+            A face Norte manteve-se excepto a casa mais recuada, que, nos inícios do séc. XIX, foi totalmente 
+            alterada.
+        </p>
+<div>
+<p>
+            Actual rua de S. Paulo.
+        </p>
 </div>
-<h3>Casas:</h3>
+<h2>Casas:</h2>
 <div>
 <p>Número: 1 e 2</p>
 <p>Enfiteuta: Fernando da Cunha Sottomayor</p>
@@ -132,5 +146,8 @@
 
 
 </div>
+<h2>Atualmente:</h2>
+<img src='../MapaRuas-materialBase/atual/20-TerreiroDeSto.Ant¢nioEPostigo-Vista1.JPG' style='width:50%; height:auto; '/>
+<img src='../MapaRuas-materialBase/atual/20-TerreiroDeSto.Ant¢nioEPostigo-Vista2.JPG' style='width:50%; height:auto; '/>
 </body>
 </html>
