--- a/TCP1/html/TravessaDaRuaDeDGualdimAteAoCoutoDoArvoredo.html
+++ b/TCP1/html/TravessaDaRuaDeDGualdimAteAoCoutoDoArvoredo.html
@@ -3,39 +3,41 @@
 <h1>Travessa da Rua de D.Gualdim até ao Couto do Arvoredo</h1>
 <p>Número: 17</p>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-17-TravessaDaRuaDeDGualdimAteAoCoutoDoArvoredo-norte.jpg'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-17-TravessaDaRuaDeDGualdimAteAoCoutoDoArvoredo-norte.jpg' style='width:50%; height:auto; '/>
 <p>Legenda: Travessa da Rua de Gualdim até ao Couto do Arvoredo - norte</p>
 </div>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-17-TravessaDaRuaDeDGualdimAteAoCoutoDoArvoredo-sul.jpg'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-17-TravessaDaRuaDeDGualdimAteAoCoutoDoArvoredo-sul.jpg' style='width:50%; height:auto; '/>
 <p>Legenda: Travessa da Rua de Gualdim até ao Couto do Arvoredo - sul</p>
 </div>
 <h2>Descrição:</h2>
 <div>
-<p>
-                        Corresponde ao n.º 1 da Rua de Santo António, para onde 
-                tem a frontaria e serventia principais.
-                    </p>
-</div>
 <div>
 <p>
-                     Corresponde ao n.º 22 da Rua de Santo António, para onde 
-                    tem a frontaria e serventia principais.   
-                    </p>
-</div>
+            Mais um fragmento da rua das Travessas, o último no sentido Este-Oeste. Só no 
+            último quartel do século passado a rua das Travessas se prolongaria além da rua Verde
+            e Couto do Arvoredo, cortando a muralha, para desembocar no campo das Carvalheiras,
+            então chamado de S.Miguel o Anjo.
+        </p>
 <div>
 <p>
-                      Fica situada nesta travessa «na parte que, à mão 
-                direita, liga a Rua das Chagas à Rua Verde».  
-                    </p>
-</div>
+            A transformação recebida há cem anos nesta artéria, qua a fez passar a ter o 
+            dobro da largura, destruiu todas as casas apresentadas no Mappa. E pena foi, 
+            porque embora este troço de rua seja de interesse secundário na cidade de então,
+            apresentava uma casa brasonada, em pedra, de 3 pisos, no gaveto com a rua de 
+            D. Gualdim e uma curiossísima casa com escada exterior, talvez quinhentista, nada vulgar 
+            neste documento. 
+        </p>
 <div>
 <p>
-                        Corresponde ao n.º 15 da Rua de D. Gualdim, para onde 
-                    tem a frontaria e serventia principais.
-                </p>
+            Das 6 casas do lado Norte e 7 do Sul, são prazos do Cabido 2 de cada lado.
+        </p>
+<div>
+<p>
+            Esta travessa, está atualmente integrada na rua D. Afonso Henriques. 
+        </p>
 </div>
-<h3>Casas:</h3>
+<h2>Casas:</h2>
 <div>
 <p>Número: 1</p>
 <p>Enfiteuta: Padre José António Pereira</p>
@@ -95,5 +97,8 @@
 
 
 </div>
+<h2>Atualmente:</h2>
+<img src='../MapaRuas-materialBase/atual/17-TravessadaRuadeD.GualdimatÇaoCoutodoArvoredo-Vista2.JPG' style='width:50%; height:auto; '/>
+<img src='../MapaRuas-materialBase/atual/17-TravessadaRuadeD.GualdimatÇaoCoutodoArvoredo-Vista1.JPG' style='width:50%; height:auto; '/>
 </body>
 </html>
