--- a/TCP1/html/TravessaDaRuaDeSJoao.html
+++ b/TCP1/html/TravessaDaRuaDeSJoao.html
@@ -3,58 +3,66 @@
 <h1>Travessa da Rua de S. João para a do Forno</h1>
 <p>Número: 10</p>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-10-TravessaDaRuaDeSJoaoParaADoForno-Norte.jpg'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-10-TravessaDaRuaDeSJoaoParaADoForno-Norte.jpg' style='width:50%; height:auto; '/>
 <p>Legenda: Travessa da Rua de S. João para a do Forno - vista norte. </p>
 </div>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-10-TravessaDaRuaDeSJoaoParaADoForno-Sul.jpg'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-10-TravessaDaRuaDeSJoaoParaADoForno-Sul.jpg' style='width:50%; height:auto; '/>
 <p>Legenda: Travessa da Rua de S. João para a do Forno - vista sul. </p>
 </div>
 <h2>Descrição:</h2>
 <div>
-<p>Corresponde ao n.º 7 da Rua de S. João,
-                    para onde tem a frontaria e serventia principais.</p>
-</div>
 <div>
-<p>No ano de 1607, por escambo realizado entre o Cabido
-                    e a Companhia de Jesus, esta casa foi trocada com o casal de Real,
-                    situado na freguesia de S. Jerónimo de Real.
-                    Confronta com quintal dos padres da Companhia de Jesus.</p>
-</div>
+<p>Rua em forma de cotovelo, tendo uma espécie de
+            protuberância no ângulo, mais parecendo duas vias
+            que se encontrava num ponto que se alargava, formando
+            aí um «Rexio».</p>
 <div>
-<p>Emprazamento feito em 1724. Confronta, do nascente, com casa for. ao chantrado.</p>
-</div>
+<p>Seria um pouco estranho de compreender o seu traçado,
+            se não soubessemos que no ponto onde se encontrava os
+            seus troços Sul e Oeste terá passado, possivelmente,
+            a muralha da cidade romana. Só assim se pode aceitar
+            que esta artéria não tivesse sequência até à Igreja
+            de S. João de Souto, ou à Porta de S. João.</p>
 <div>
-<p>Foi construída em pertenças da casa n.º 3, depois do ano de 1534.</p>
-</div>
+<p>Sem unidade no tipo de casas que a formavam, tinha
+            prédios de dois pisos, alternando com outros de três
+            ou até um; edifícios com longa fachada, a par com outros
+            de pequena e média dimensão. </p>
 <div>
-<p>A casa n.º 6 confronta, de nascente, com casa for. à cororaria.
-                    Pertence, também, ao enfiteuta destas duas casas o n.º 12 da rua do Forno.</p>
-</div>
+<p>Todas as casas são de arquitectura tradicional, talvez
+            na sua maioria em pedra, com seis raras varandas e apenas
+            três gelosias, e uma forte percentagem (60%) de janelas
+            típicas de Braga. De notar a casa grande situada no canto
+            Sudoeste do «Rexio de S. João» que tem um grande terreno
+            de cultivo virado à rua, estando o prédio implantado
+            atrás, na linha de barreira que fecha a Sul o «Rexio».</p>
 <div>
-<p>A casa n.º 6 confronta, de nascente, com casa for. à cororaria.
-                    Pertence, também, ao enfiteuta destas duas casas o n.º 12 da rua do Forno.</p>
-</div>
+<p>Das 10 casas existentes do lado Norte e outras tantas
+            do lado Sul são prazos do Cabido 5 e 6 respectivamente.</p>
 <div>
-<p>Encontram-se unidos a este prazo os n.º 10 e 11 da Rua do Forno,
-                    desde o ano de 1596</p>
-</div>
+<p>Se bem que todo o bairro a Sul da Sé, pelo entrecruzar
+            de ruas, seja conhecido como Bairro das Travessas é muito
+            estranho e nada aceitável o nome desta rua que ora tratamos.
+            Na Idade Média a parte Este desta artéria, que no Mappa tem
+            o nome de «Travessa para a rua de S. João», era conhecida como
+            rua da Carrapata e a parte Sul, sem designação especial
+            no Mappa, tinha o nome de Paio Manta, talvez uma pessoa
+            dominante que aí vivesse. No séc. XVI, a rua de Paio Manta
+            tomou o nome de rua Coelho que manteve até 19/12/1892, data
+            em que passou a denominar-se de El-Rei. Em 24 de Fevereiro de
+                1944 recebeu o nome de D. Afonso Henriques.</p>
 <div>
-<p>Pertencem ao n.º 9 da Rua do Forno, para onde têm a frontaria e serventia principais.
-                    A casa n.º 9 confronta, do nascente, com casa foreira cororaria e ficou unida ao n.º 8 no ano
-                    de 1674.</p>
+<p>Desde 1892 que esta rua está muito alterada, embora se
+            mantenha a sua função: A rua de «Coelho» foi alargada,
+            o «Rexio de S. João» desapareceu e a «Travessa para o Rexio
+            de S. João» integrou o novo largo de S. João de Souto, então
+            formado juntamente com parte da rua de S. João e outros
+            terrenos. Grosso modo, podemos dizer que esta travessa se
+            integra hoje na rua D. Afonso Henriques e Largo de
+                S. João de Souto.</p>
 </div>
-<div>
-<p>Parte desta casa pertence à Esmola e parte ao chantrado.
-                    Confronta, do poente, com casa foreira à cororaria e com o n.º 9.</p>
-</div>
-<div>
-<p>Foi construída em pertenças do n.º 11 no ano de 1694.</p>
-</div>
-<div>
-<p>Confronta, do nascente, com casa foreira ao Hospital de S. Marcos.</p>
-</div>
-<h3>Casas:</h3>
+<h2>Casas:</h2>
 <div>
 <p>Número: 1</p>
 <p>Enfiteuta: None</p>
@@ -166,5 +174,8 @@
 
 
 </div>
+<h2>Atualmente:</h2>
+<img src='../MapaRuas-materialBase/atual/10-TravessadaRuadeS.Jo∆oparaadoForno-Vista2.JPG' style='width:50%; height:auto; '/>
+<img src='../MapaRuas-materialBase/atual/10-TravessadaRuadeS.Jo∆oparaadoForno-Vista1.JPG' style='width:50%; height:auto; '/>
 </body>
 </html>
