--- a/TCP1/html/TravessaDaRuaDoFornoParaADoPoco.html
+++ b/TCP1/html/TravessaDaRuaDoFornoParaADoPoco.html
@@ -3,60 +3,45 @@
 <h1>Travessa Da Rua Do Forno Para A Do Poco</h1>
 <p>Número: 12</p>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-12-TravessaDaRuaDoFornoParaADoPoco-Norte.jpg'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-12-TravessaDaRuaDoFornoParaADoPoco-Norte.jpg' style='width:50%; height:auto; '/>
 <p>Legenda: Travessa Da Rua Do Forno Para A Do Poço - vista norte.</p>
 </div>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-12-TravessaDaRuaDoFornoParaADoPoco-Sul.jpg'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-12-TravessaDaRuaDoFornoParaADoPoco-Sul.jpg' style='width:50%; height:auto; '/>
 <p>Legenda: Travessa Da Rua Do Forno Para A Do Poço - vista sul.</p>
 </div>
 <h2>Descrição:</h2>
 <div>
-<p>A casa n° 1 confronta, do nascente, com a Rua do Forno. Fazem parte deste prazo os n° 15. 16, 17, 18 e 19, da Rua do Forno ou dos Cegos. A casa n° 16 é foreira ao chantrado e paga de censo ao cabido 2 maravedis, ou seja. 54 reis.</p>
-</div>
-<div>
-<p>A casa n° 1 confronta, do nascente, com a Rua do Forno. Fazem parte deste prazo os n° 15. 16, 17, 18 e 19, da Rua do Forno ou dos Cegos. A casa n° 16 é foreira ao chantrado e paga de censo ao cabido 2 maravedis, ou seja. 54 reis.</p>
-</div>
 <div>
 <p>
-                        A casa n° 3 confronta, do sul, com a Rua dos Palhais e,foi unida ao n° 4 em 1622. A casa n.º 4 foi deixada ao cabido pelo arcediago de Vermoim. Francisco Fernandes, com encargo de um aniversário de três lições.
-                    </p>
-</div>
+            Mais um fragmento da grande rua das Travessas, espinha dorsal do velho bairro medieval e que decalca uma velha rua romana.
+        </p>
 <div>
 <p>
-                        A casa n° 3 confronta, do sul, com a Rua dos Palhais e,foi unida ao n° 4 em 1622. A casa n.º 4 foi deixada ao cabido pelo arcediago de Vermoim. Francisco Fernandes, com encargo de um aniversário de três lições.
-                    </p>
-</div>
+            Com construções de desigual desenho de fachada e características, esta é mais uma artéria que, lentamente, também foi perdendo a sua importância até aos finais do séc. XIX.
+        </p>
 <div>
 <p>
-                        É foreira ao morgado de Real. O censo é pago por Lopo de Barros de Almeida.
-                    </p>
-</div>
+            Em 1892 foi consideravelmente alargada, sendo destruídos todos os seus prédios, embora a linha de fachadas do lado Sul se tivesse mantido.
+        </p>
 <div>
 <p>
-                        Situa-se na esquina da Rua do Poço e
-                        confronta, do sul, com a casa n° 17 da dita rua. Pertence a este prazo o n.º 16, da Rua de Santa Maria ou do Poço.
-                    </p>
-</div>
+            Hoje conservam-se apenas alguns pormenores da casa do prazo n.º 5, que era um belo edifício gótico e com pedra de armas: e onde, parece terem vivido familiares de João de Barros, autor da «Geografia de Entre Douro e Minho».
+        </p>
 <div>
 <p>
-                        Ao prazo n.º 7 foram unidos, em 1561, dois ênxidos que se separaram dos n.º 13 e 14 da Rua do Poço e, em 1677. as casas dos referidos n.ºs.  
-                    </p>
-</div>
+            Extremamente curiosa é, também, a casa do prazo n.° 6. Com portão e janelas renascentistas, organiza-se em diferentes pisos, ligados por um muro oblíquo, descendo para o canto da rua. Sobre essa parte do edifício, tem um acréscimo, empoleirado, fazendo lembrar a arquitectura japonesa.
+        </p>
 <div>
 <p>
-                        Corresponde ao n.° 2 da Rua Pequena. 
-                    </p>
-</div>
-<div>
-<p>Confronta, do nascente, com casa foreira à cororaria.</p>
-</div>
+            Das 8 casas do lado Norte e 9 do lado Sul, são 4 e 6, respectivamente, prazos do Cabido.
+        </p>
 <div>
 <p>
-                        Corresponde ao n.º 20 da Rua do Forno, para onde tem a frontaria e serventia principais. Confronta, do poente, com casa foreira à cororaria.   
-                    </p>
+            Hoje esta travessa é um troço na rua D. Afonso Henriques situado entre a rua do Forno e a rua D. Gonçalo Pereira.
+        </p>
 </div>
-<h3>Casas:</h3>
+<h2>Casas:</h2>
 <div>
 <p>Número: 1</p>
 <p>Enfiteuta: Dr. Francisco Gomes do Couto</p>
@@ -179,5 +164,8 @@
 
 
 </div>
+<h2>Atualmente:</h2>
+<img src='../MapaRuas-materialBase/atual/12-TravessaDaRuaDoFornoParaADoPoco-Vista1.JPG' style='width:50%; height:auto; '/>
+<img src='../MapaRuas-materialBase/atual/12-TravessaDaRuaDoFornoParaADoPoco-Vista2.JPG' style='width:50%; height:auto; '/>
 </body>
 </html>
