--- a/TCP1/html/TravessaDaRuaDoPocoParaADeDGualdim.html
+++ b/TCP1/html/TravessaDaRuaDoPocoParaADeDGualdim.html
@@ -3,66 +3,33 @@
 <h1>Travessa da Rua do Poço para a de D.Gualdim</h1>
 <p>Número: 15</p>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-15-TravessaDaRuaDoPocoParaADeDGualdim-Norte.jpg'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-15-TravessaDaRuaDoPocoParaADeDGualdim-Norte.jpg' style='width:50%; height:auto; '/>
 <p>Legenda: Travessa da Rua do Poço para a de D.Gualdim - vista norte.</p>
 </div>
 <div>
-<img src='../MapaRuas-materialBase/imagem/MRB-15-TravessaDaRuaDoPocoParaADeDGualdim-Sul.jpg'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-15-TravessaDaRuaDoPocoParaADeDGualdim-Sul.jpg' style='width:50%; height:auto; '/>
 <p>Legenda: Travessa da Rua do Poço para a de D.Gualdim - vista sul.</p>
 </div>
 <h2>Descrição:</h2>
 <div>
-<p>
-                        Pertencem ao n.º 21 da Rua do Poço, para onde têm a frontaria e serventia principais. Foram unidas no ano de 1609.
-                    </p>
-</div>
 <div>
 <p>
-                        Pertencem ao n.º 21 da Rua do Poço, para onde têm a frontaria e serventia principais. Foram unidas no ano de 1609.
-                    </p>
-</div>
+            Fragmento da actual rua D. Afonso Henriques, entre as ruas D. Gonçalo Pereira e D. Gualdim Pais.
+        </p>
 <div>
 <p>
-                        As casa n.º 2 e 3 estiveram unidas, num só prazo, ao n° 4, entre os anos de 1533 e 1597.
-                    </p>
-</div>
+            Se na sua pequeníssima extensão poucas casas há (1 do lado Norte e 4 do lado Sul, todas prazos do Cabido) não deixa de ter mesmo assim dois edifícios interessantes: a dos prazos 5 e 6, boa casa de pedra com uma notável porta varanda dos finais de seiscentos; e a dos números 1 e 2 por ser uma casa muito grande com o piso superior sobradado, à maneira antiga.
+        </p>
 <div>
 <p>
-                        As casa n.º 2 e 3 estiveram unidas, num só prazo, ao n° 4, entre os anos de 1533 e 1597.
-                    </p>
-</div>
+           Curiosos são ainda os prazos n.ºs 3 e 4 onde se vêem 2 habitações com «porta ladeada de uma janela» que eram frequentes, sobretudo, nas ruas existentes no exterior das muralhas.
+        </p>
 <div>
 <p>
-                        O n.º 5 situa-se defronte da porta do açougue. 
-                    </p>
-<p>
-                        Ao n° 6, pertence uma casa terceira da rua que vai desta travessa para Santiago. Possui frontaria para a Rua de D. Gualdim.
-                    </p>
+           Alargadas nos finais do séc. XIX, não se conservam hoje nenhuma das casas desta rua existentes no Mappa.
+        </p>
 </div>
-<div>
-<p>
-                        O n.º 5 situa-se defronte da porta do açougue. 
-                    </p>
-<p>
-                        Ao n° 6, pertence uma casa terceira da rua que vai desta travessa para Santiago. Possui frontaria para a Rua de D. Gualdim.
-                    </p>
-</div>
-<div>
-<p>
-                        Correspondem ao n° 7 da Rua de D. Gualdim, para onde têm a frontaria e serventia principais.
-                    </p>
-</div>
-<div>
-<p>
-                        Correspondem ao n° 7 da Rua de D. Gualdim, para onde têm a frontaria e serventia principais.
-                    </p>
-</div>
-<div>
-<p>
-                        Corresponde ao n° 22 da Rua do Poço, para onde tem a frontaria principal.
-                    </p>
-</div>
-<h3>Casas:</h3>
+<h2>Casas:</h2>
 <div>
 <p>Número: 1</p>
 <p>Descrição: 
@@ -176,5 +143,8 @@
 
 
 </div>
+<h2>Atualmente:</h2>
+<img src='../MapaRuas-materialBase/atual/15-TravessadaRuadoPoáoparaadeD.Gualdim-Vista2.JPG' style='width:50%; height:auto; '/>
+<img src='../MapaRuas-materialBase/atual/15-TravessadaRuadoPoáoparaadeD.Gualdim-Vista1.JPG' style='width:50%; height:auto; '/>
 </body>
 </html>
